--- a/lang/bn.json
+++ b/lang/bn.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "তুমি কি নিশ্চিত? এটি স্থায়ীভাবে নথিটি মুছে ফেলবে।",
   "Are you sure? This will delete the goal and all the streaks permanently.": "তুমি কি নিশ্চিত? এটি স্থায়ীভাবে লক্ষ্য এবং সমস্ত স্ট্রীক মুছে ফেলবে।",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "তুমি কি নিশ্চিত? এটি সমস্ত পরিচিতি থেকে ঠিকানার ধরনগুলি সরিয়ে দেবে, তবে পরিচিতিগুলিকে মুছে ফেলবে না৷",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "তুমি কি নিশ্চিত? এটি সমস্ত পরিচিতি থেকে যোগাযোগের তথ্যের ধরনগুলিকে সরিয়ে দেবে, তবে পরিচিতিগুলিকে মুছে ফেলবে না।",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "তুমি কি নিশ্চিত? এটি সমস্ত পরিচিতি থেকে যোগাযোগের তথ্যের প্রকারটি সরিয়ে ফেলবে, তবে পরিচিতিগুলি নিজেরাই মুছবে না।",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "তুমি কি নিশ্চিত? এটি সমস্ত পরিচিতি থেকে লিঙ্গ মুছে ফেলবে, তবে পরিচিতিগুলিকে মুছে ফেলবে না।",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "তুমি কি নিশ্চিত? এটি সমস্ত পরিচিতি থেকে টেমপ্লেট মুছে ফেলবে, তবে পরিচিতিগুলিকে মুছে ফেলবে না।",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "আপনি কি নিশ্চিতরূপে এই দল মুছে ফেলতে ইচ্ছুক? একটি দল একবার মুছে ফেলা হলে, তার সব রিসোর্স ও তথ্য স্থায়ীভাবে মুছে ফেলা হবে।",
@@ -234,6 +234,7 @@
   "Bird": "পাখি",
   "Birthdate": "জন্ম তারিখ",
   "Birthday": "জন্মদিন",
+  "Bluesky": "ব্লুস্কি",
   "Body": "শরীর",
   "boss": "বস",
   "Bought": "কিনলেন",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "সংখ্যা প্রদর্শনের বর্তমান উপায়:",
   "Customize how contacts should be displayed": "পরিচিতিগুলি কীভাবে প্রদর্শিত হবে তা কাস্টমাইজ করুন",
   "Custom name order": "কাস্টম নামের অর্ডার",
+  "Custom…": "কাস্টম…",
   "Daily affirmation": "দৈনিক নিশ্চিতকরণ",
   "Dashboard": "ড্যাশবোর্ড",
+  "Data": "ডেটা",
   "date": "তারিখ",
   "Date of the event": "অনুষ্ঠানের তারিখ",
   "Date of the event:": "ইভেন্টের তারিখ:",
@@ -383,6 +386,8 @@
   "Delete": "মুছে ফেলা হবে",
   "Delete :name": "মুছুন :name",
   "Delete Account": "অ্যাকাউন্ট মুছে ফেলুন",
+  "Delete a contact information": "একটি যোগাযোগের তথ্য মুছুন",
+  "Delete a contact information type": "একটি যোগাযোগের তথ্য প্রকার মুছুন",
   "Delete a new key": "একটি নতুন কী মুছুন",
   "Delete API Token": "এপিআই টোকেন মুছুন",
   "Delete contact": "পরিচিতি মুছুন",
@@ -480,6 +485,7 @@
   "Family": "পরিবার",
   "Family summary": "পারিবারিক সারাংশ",
   "Favorites": "প্রিয়",
+  "Fax": "ফ্যাক্স",
   "Female": "মহিলা",
   "File": "ফাইল",
   "Files": "নথি পত্র",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "উপহারের অনুষ্ঠানগুলি আপনাকে আপনার সমস্ত উপহারকে শ্রেণিবদ্ধ করতে দেয়।",
   "Gift states": "উপহার রাষ্ট্র",
   "Gift states let you define the various states for your gifts.": "উপহারের রাজ্যগুলি আপনাকে আপনার উপহারের জন্য বিভিন্ন রাজ্যকে সংজ্ঞায়িত করতে দেয়।",
+  "GitHub": "গিথুব",
   "Give this email address a name": "এই ইমেল ঠিকানা একটি নাম দিন",
   "Goals": "গোল",
   "Go back": "ফিরে যাও",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "গোষ্ঠীর প্রকারগুলি আপনাকে লোকেদের একত্রিত করতে দেয়।",
   "Had a promotion": "পদোন্নতি ছিল",
   "Hamster": "হ্যামস্টার",
+  "Hangouts": "Hangouts",
   "Have a great day,": "দিন শুভ হোক,",
   "he/him": "সে/তাকে",
   "Hello!": "হ্যালো!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "প্রেরিত বিজ্ঞপ্তির ইতিহাস",
   "Hobbies": "শখ",
   "Home": "বাড়ি",
+  "Home House": "হোম হাউস",
   "Horse": "ঘোড়া",
   "How are you?": "আপনি কেমন আছেন?",
   "How could I have done this day better?": "আমি কিভাবে এই দিন ভাল করতে পারে?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "উইকিপিডিয়া থেকে তথ্য",
   "in love with": "প্রেমে",
   "Inspirational post": "অনুপ্রেরণামূলক পোস্ট",
+  "Instagram": "ইনস্টাগ্রাম",
+  "Instant messaging": "তাত্ক্ষণিক বার্তা",
   "Insufficient Storage": "অপর্যাপ্ত মজুত",
   "Internal Server Error": "অভ্যন্তরীণ সার্ভার ত্রুটি",
   "Introduction": "ভূমিকা",
@@ -618,6 +629,7 @@
   "Just to say hello": "শুধু হ্যালো বলতে",
   "Key name": "মূল নাম",
   "kilometers (km)": "কিলোমিটার (কিমি)",
+  "Kind": "দয়ালু",
   "km": "কিমি",
   "Label:": "লেবেল:",
   "Labels": "লেবেল",
@@ -706,6 +718,7 @@
   "miles": "মাইল",
   "miles (mi)": "মাইল (মাই)",
   "Misdirected Request": "ভুল নির্দেশিত অনুরোধ",
+  "Mobile": "মোবাইল",
   "Modules in this page": "এই পৃষ্ঠায় মডিউল",
   "Monday": "সোমবার",
   "Monica. All rights reserved. 2017 — :date.": "Monica। সমস্ত অধিকার সংরক্ষিত. 2017 — :date।",
@@ -751,6 +764,7 @@
   "No labels yet.": "এখনও কোন লেবেল নেই.",
   "No life event types yet.": "এখনও কোন জীবন ঘটনা প্রকার.",
   "Non-Authoritative Information": "অ-অনুমোদিত তথ্য",
+  "None": "কিছুই না",
   "No notes found.": "কোন নোট পাওয়া যায়নি.",
   "No results found": "কোন ফলাফল পাওয়া যায়নি",
   "No role": "কোন ভূমিকা নেই",
@@ -798,6 +812,7 @@
   "Other": "অন্যান্য",
   "Out of respect and appreciation": "সম্মান এবং প্রশংসার বাইরে",
   "Page Expired": "মেয়াদউত্তীর্ণ",
+  "Pager": "পেজার",
   "Pages": "পাতা",
   "Pagination Navigation": "পত্রাঙ্ক ন্যাভিগেশন",
   "Parent": "অভিভাবক",
@@ -823,6 +838,7 @@
   "Pet category": "পোষ্য বিভাগ",
   "Pets": "পোষা প্রাণী",
   "Phone": "ফোন",
+  "Phone number": "ফোন নম্বর",
   "Photo": "ছবি",
   "Photos": "ফটো",
   "Played basketball": "বাস্কেটবল খেলতেন",
@@ -1006,6 +1022,7 @@
   "Slices of life": "জীবনের টুকরো টুকরো",
   "Small animal": "ছোট প্রাণী",
   "Social": "সামাজিক",
+  "Social profile": "সামাজিক প্রোফাইল",
   "Solve": "সমাধান",
   "Some dates have a special type that we will use in the software to calculate an age.": "কিছু তারিখের একটি বিশেষ প্রকার আছে যা আমরা একটি বয়স গণনা করতে সফ্টওয়্যারে ব্যবহার করব।",
   "So… it works 😼": "তাই… এটা কাজ করে 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "পরিষেবার শর্তাদি",
   "Test email for Monica": "Monica জন্য ইমেল পরীক্ষা করুন",
   "Test email sent!": "পরীক্ষার ইমেল পাঠানো হয়েছে!",
+  "Text": "পাঠ্য",
   "Thanks,": "ধন্যবাদ,",
   "Thanks for giving Monica a try.": "Monica চেষ্টা করার জন্য ধন্যবাদ.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "সাইন আপ করার জন্য ধন্যবাদ! শুরু করার আগে, আমরা এইমাত্র আপনাকে যে লিঙ্কটি ইমেল করেছি তাতে ক্লিক করে আপনি কি আপনার ইমেল ঠিকানা যাচাই করতে পারেন? আপনি যদি ইমেলটি না পেয়ে থাকেন, আমরা আনন্দের সাথে আপনাকে আরেকটি পাঠাব।",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "ঠিকানার ধরন আপডেট করা হয়েছে",
   "The call has been created": "কল তৈরি হয়েছে",
   "The call has been deleted": "কলটি মুছে ফেলা হয়েছে",
-  "The call has been edited": "কল সম্পাদনা করা হয়েছে",
+  "The call has been updated": "কল আপডেট করা হয়েছে",
   "The call reason has been created": "কলের কারণ তৈরি হয়েছে",
   "The call reason has been deleted": "কলের কারণ মুছে ফেলা হয়েছে",
   "The call reason has been updated": "কলের কারণ আপডেট করা হয়েছে",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "পরিচিতি এখনও কোনো দলের অন্তর্গত নয়.",
   "The contact has been added": "যোগাযোগ যোগ করা হয়েছে",
   "The contact has been deleted": "পরিচিতি মুছে ফেলা হয়েছে",
-  "The contact has been edited": "যোগাযোগ সম্পাদনা করা হয়েছে",
   "The contact has been removed from the group": "পরিচিতি গ্রুপ থেকে মুছে ফেলা হয়েছে",
+  "The contact has been updated": "যোগাযোগ আপডেট করা হয়েছে",
   "The contact information has been created": "যোগাযোগের তথ্য তৈরি করা হয়েছে",
   "The contact information has been deleted": "যোগাযোগের তথ্য মুছে ফেলা হয়েছে",
-  "The contact information has been edited": "যোগাযোগের তথ্য সম্পাদনা করা হয়েছে",
+  "The contact information has been updated": "যোগাযোগের তথ্য আপডেট করা হয়েছে",
   "The contact information type has been created": "যোগাযোগের তথ্যের ধরন তৈরি করা হয়েছে",
   "The contact information type has been deleted": "যোগাযোগের তথ্যের ধরন মুছে ফেলা হয়েছে",
   "The contact information type has been updated": "যোগাযোগ তথ্য প্রকার আপডেট করা হয়েছে",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "প্রদত্ত তথ্য অবৈধ ছিল।",
   "The goal has been created": "লক্ষ্য তৈরি হয়েছে",
   "The goal has been deleted": "গোলটি মুছে ফেলা হয়েছে",
-  "The goal has been edited": "লক্ষ্য সম্পাদনা করা হয়েছে",
+  "The goal has been updated": "লক্ষ্য আপডেট করা হয়েছে",
   "The group has been added": "গ্রুপ যোগ করা হয়েছে",
   "The group has been deleted": "গ্রুপ মুছে ফেলা হয়েছে",
   "The group has been updated": "গ্রুপ আপডেট করা হয়েছে",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "জীবন মেট্রিক আপডেট করা হয়েছে",
   "The loan has been created": "ঋণের সৃষ্টি হয়েছে",
   "The loan has been deleted": "ঋণ মুছে ফেলা হয়েছে",
-  "The loan has been edited": "ঋণ সম্পাদনা করা হয়েছে",
   "The loan has been settled": "ঋণ নিষ্পত্তি হয়েছে",
+  "The loan has been updated": "Loan ণ আপডেট করা হয়েছে",
   "The loan is an object": "ঋণ একটি বস্তু",
   "The loan is monetary": "ঋণটি আর্থিক",
   "The module has been added": "মডিউল যোগ করা হয়েছে",
   "The module has been removed": "মডিউল সরানো হয়েছে",
   "The note has been created": "নোট তৈরি করা হয়েছে",
   "The note has been deleted": "নোট মুছে ফেলা হয়েছে",
-  "The note has been edited": "নোটটি সম্পাদনা করা হয়েছে",
+  "The note has been updated": "নোটটি আপডেট করা হয়েছে",
   "The notification has been sent": "বিজ্ঞপ্তি পাঠানো হয়েছে",
   "The operation either timed out or was not allowed.": "অপারেশন হয় সময় শেষ বা অনুমতি দেওয়া হয়নি.",
   "The page has been added": "পাতা যোগ করা হয়েছে",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "পোষা বিভাগ আপডেট করা হয়েছে",
   "The pet has been added": "পোষা প্রাণী যোগ করা হয়েছে",
   "The pet has been deleted": "পোষা প্রাণী মুছে ফেলা হয়েছে",
-  "The pet has been edited": "পোষা প্রাণী সম্পাদনা করা হয়েছে",
+  "The pet has been updated": "পোষা প্রাণী আপডেট করা হয়েছে",
   "The photo has been added": "ছবি যোগ করা হয়েছে",
   "The photo has been deleted": "ছবি মুছে ফেলা হয়েছে",
   "The position has been saved": "অবস্থান সংরক্ষণ করা হয়েছে",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "প্রদত্ত দুই ফ্যাক্টর পুনরুদ্ধার কোড অবৈধ ছিল।",
   "There are no active addresses yet.": "এখনও কোন সক্রিয় ঠিকানা নেই.",
   "There are no calls logged yet.": "এখনও কোন কল লগ নেই.",
-  "There are no contact information yet.": "এখনও কোন যোগাযোগের তথ্য নেই.",
+  "There are no contact informations yet.": "এখনও কোন যোগাযোগের তথ্য নেই.",
+  "There are no contact information types yet.": "এখনও কোনও যোগাযোগের তথ্যের ধরণ নেই।",
   "There are no documents yet.": "এখনও কোন নথি নেই.",
   "There are no events on that day, future or past.": "সেই দিন, ভবিষ্যত বা অতীতের কোন ঘটনা নেই।",
   "There are no files yet.": "এখনও কোন ফাইল নেই.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "ধর্ম আপডেট করা হয়েছে",
   "The reminder has been created": "অনুস্মারক তৈরি করা হয়েছে",
   "The reminder has been deleted": "অনুস্মারক মুছে ফেলা হয়েছে",
-  "The reminder has been edited": "অনুস্মারক সম্পাদনা করা হয়েছে",
+  "The reminder has been updated": "অনুস্মারক আপডেট করা হয়েছে",
   "The response is not a streamed response.": "রেসপন্সটি একটি স্ট্রিমড রেসপন্স নয়।",
   "The response is not a view.": "রেসপন্সটি একটি ভিউ নয়।",
   "The role has been created": "ভূমিকা তৈরি হয়েছে",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "ট্যাগ আপডেট করা হয়েছে",
   "The task has been created": "টাস্ক তৈরি করা হয়েছে",
   "The task has been deleted": "টাস্ক মুছে ফেলা হয়েছে",
-  "The task has been edited": "কাজটি সম্পাদনা করা হয়েছে",
+  "The task has been updated": "কাজটি আপডেট করা হয়েছে",
   "The team's name and owner information.": "দলের নাম এবং মালিক তথ্য৷",
   "The Telegram channel has been deleted": "টেলিগ্রাম চ্যানেলটি মুছে ফেলা হয়েছে",
   "The template has been created": "টেমপ্লেট তৈরি করা হয়েছে",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "এই ব্যবহারকারী ইতিমধ্যে দলের আমন্ত্রণ জানানো হয়েছে ৷",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "এই ব্যবহারকারী আপনার অ্যাকাউন্টের অংশ হবে, কিন্তু আপনি তাদের নির্দিষ্ট অ্যাক্সেস না দেওয়া পর্যন্ত এই অ্যাকাউন্টের সমস্ত ভল্টে অ্যাক্সেস পাবেন না। এই ব্যক্তি পাশাপাশি vaults তৈরি করতে সক্ষম হবে.",
   "This will immediately:": "এটি অবিলম্বে হবে:",
+  "Threads": "থ্রেড",
   "Three things that happened today": "আজ যে তিনটি ঘটনা ঘটেছে",
   "Thursday": "বৃহস্পতিবার",
   "Timezone": "সময় অঞ্চল",
@@ -1274,6 +1294,7 @@
   "Translate It": "ইহা অনুবাদ কর",
   "Transportation": "পরিবহন",
   "Tuesday": "মঙ্গলবার",
+  "Twitter": "টুইটার",
   "Two-factor Confirmation": "দ্বি-ফ্যাক্টর নিশ্চিতকরণ",
   "Two Factor Authentication": "দুই ফ্যাক্টর প্রমাণীকরণ",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "দুই ফ্যাক্টর প্রমাণীকরণ এখন সক্রিয় করা হয়েছে। আপনার ফোনের প্রমাণীকরণকারী অ্যাপ্লিকেশন ব্যবহার করে নিম্নলিখিত QR কোডটি স্ক্যান করুন বা সেটআপ কী লিখুন৷",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 মাধ্যমিক বাসস্থান",
   "🏡 Home": "🏡 বাড়ি",
   "🏢 Work": "🏢 কাজ",
+  "📟 Pager": "📟 পেজার",
+  "📠 Fax": "📠 ফ্যাক্স",
+  "📱 Mobile": "📱 মোবাইল",
   "🔔 Reminder: :label for :contactName": "🔔 অনুস্মারক: :contactName এর জন্য :label",
   "😀 Good": "😀 ভালো",
   "😁 Positive": "😁 ইতিবাচক",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 নেতিবাচক",
   "😩 Awful": "😩 জঘন্য",
   "😶‍🌫️ Neutral": "😶‍🌫️ নিরপেক্ষ",
-  "🥳 Awesome": "🥳 অসাধারণ"
+  "🥳 Awesome": "🥳 অসাধারণ",
+  "🧑🏼 Personal": "🧑🏼 ব্যক্তিগত"
 }
