--- a/lang/ca.json
+++ b/lang/ca.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Estàs segur? Això suprimirà el document de manera permanent.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Estàs segur? Això suprimirà l’objectiu i totes les ratlles de manera permanent.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Estàs segur? Això eliminarà els tipus d’adreces de tots els contactes, però no els suprimirà.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Estàs segur? Això eliminarà els tipus d’informació de contacte de tots els contactes, però no els suprimirà.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Esteu segur? Això eliminarà el tipus d’informació de contacte de tots els contactes, però no suprimirà els contactes ells mateixos.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Estàs segur? Això eliminarà els sexes de tots els contactes, però no els suprimirà.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Estàs segur? Això eliminarà la plantilla de tots els contactes, però no els suprimirà.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Esteu segur que voleu suprimir aquest equip? Una vegada que un equip és eliminat, a tots els seus recursos i les dades es perdran permanentment esborrada.",
@@ -234,6 +234,7 @@
   "Bird": "Ocell",
   "Birthdate": "Data de naixement",
   "Birthday": "Aniversari",
+  "Bluesky": "Bluesky",
   "Body": "Cos",
   "boss": "cap",
   "Bought": "Comprat",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "Forma actual de mostrar números:",
   "Customize how contacts should be displayed": "Personalitza com s’han de mostrar els contactes",
   "Custom name order": "Comanda de nom personalitzat",
+  "Custom…": "Custom ...",
   "Daily affirmation": "Afirmació diària",
   "Dashboard": "Tauler de control",
+  "Data": "Dades",
   "date": "data",
   "Date of the event": "Data de l’esdeveniment",
   "Date of the event:": "Data de l’esdeveniment:",
@@ -383,6 +386,8 @@
   "Delete": "Esborrar",
   "Delete :name": "Suprimeix :name",
   "Delete Account": "Esborrar el compte",
+  "Delete a contact information": "Suprimeix una informació de contacte",
+  "Delete a contact information type": "Suprimeix un tipus d’informació de contacte",
   "Delete a new key": "Suprimeix una clau nova",
   "Delete API Token": "Esborrar API Token",
   "Delete contact": "Suprimeix el contacte",
@@ -480,6 +485,7 @@
   "Family": "Família",
   "Family summary": "Resum familiar",
   "Favorites": "Preferits",
+  "Fax": "Fax",
   "Female": "Dona",
   "File": "Dossier",
   "Files": "Fitxers",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Les ocasions de regal et permeten classificar tots els teus regals.",
   "Gift states": "Estats de regal",
   "Gift states let you define the various states for your gifts.": "Els estats de regal us permeten definir els diferents estats dels vostres regals.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Doneu un nom a aquesta adreça de correu electrònic",
   "Goals": "Metes",
   "Go back": "Torna",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "Els tipus de grup us permeten agrupar persones.",
   "Had a promotion": "Tenia una promoció",
   "Hamster": "Hàmster",
+  "Hangouts": "Hangouts",
   "Have a great day,": "Que tinguis un bon dia,",
   "he/him": "ell/ell",
   "Hello!": "Hola!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "Historial de la notificació enviada",
   "Hobbies": "Aficions",
   "Home": "Inici",
+  "Home House": "Casa",
   "Horse": "Cavall",
   "How are you?": "Com estàs?",
   "How could I have done this day better?": "Com podria haver fet millor aquest dia?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "Informació de la Viquipèdia",
   "in love with": "Enamorat de",
   "Inspirational post": "Post inspirador",
+  "Instagram": "Instagram",
+  "Instant messaging": "Missatgeria instantània",
   "Insufficient Storage": "Emmagatzematge insuficient",
   "Internal Server Error": "error del servidor intern",
   "Introduction": "Introducció",
@@ -618,6 +629,7 @@
   "Just to say hello": "Només per saludar",
   "Key name": "Nom clau",
   "kilometers (km)": "quilòmetres (km)",
+  "Kind": "Classe",
   "km": "km",
   "Label:": "Etiqueta:",
   "Labels": "Etiquetes",
@@ -706,6 +718,7 @@
   "miles": "milles",
   "miles (mi)": "milles (mi)",
   "Misdirected Request": "Sol·licitud mal dirigida",
+  "Mobile": "Mòbil",
   "Modules in this page": "Mòduls d’aquesta pàgina",
   "Monday": "dilluns",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Tots els drets reservats. 2017 — :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "Encara no hi ha etiquetes.",
   "No life event types yet.": "Encara no hi ha tipus d’esdeveniments vitals.",
   "Non-Authoritative Information": "Informació no autoritzada",
+  "None": "Res",
   "No notes found.": "No s’han trobat notes.",
   "No results found": "Sense resultats",
   "No role": "Cap paper",
@@ -798,6 +812,7 @@
   "Other": "Altres",
   "Out of respect and appreciation": "Per respecte i apreciació",
   "Page Expired": "Pàgina caducada",
+  "Pager": "Més aldicant",
   "Pages": "Pàgines",
   "Pagination Navigation": "Pagination Navegació",
   "Parent": "Pare",
@@ -823,6 +838,7 @@
   "Pet category": "Categoria de mascota",
   "Pets": "Animals de companyia",
   "Phone": "Telèfon",
+  "Phone number": "Número de telèfon",
   "Photo": "Foto",
   "Photos": "Fotografies",
   "Played basketball": "Jugava a bàsquet",
@@ -1006,6 +1022,7 @@
   "Slices of life": "Trossets de vida",
   "Small animal": "Animal petit",
   "Social": "Social",
+  "Social profile": "Perfil social",
   "Solve": "Resol",
   "Some dates have a special type that we will use in the software to calculate an age.": "Algunes dates tenen un tipus especial que utilitzarem al programari per calcular una edat.",
   "So… it works 😼": "Així que... funciona 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "Condicions del Servei",
   "Test email for Monica": "Correu electrònic de prova per a la Monica",
   "Test email sent!": "Correu electrònic de prova enviat!",
+  "Text": "Texte",
   "Thanks,": "Gràcies,",
   "Thanks for giving Monica a try.": "Gràcies per provar la Monica.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Gràcies per registrar-te! Abans de començar, podríeu verificar la vostra adreça electrònica fent clic a l’enllaç que us acabem d’enviar per correu electrònic? Si no has rebut el correu electrònic, t’enviarem un altre amb molt de gust.",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "S’ha actualitzat el tipus d’adreça",
   "The call has been created": "La convocatòria s’ha creat",
   "The call has been deleted": "La trucada s’ha suprimit",
-  "The call has been edited": "La trucada s’ha editat",
+  "The call has been updated": "La trucada s’ha actualitzat",
   "The call reason has been created": "S’ha creat el motiu de la trucada",
   "The call reason has been deleted": "S’ha suprimit el motiu de la trucada",
   "The call reason has been updated": "S’ha actualitzat el motiu de la trucada",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "El contacte encara no pertany a cap grup.",
   "The contact has been added": "S’ha afegit el contacte",
   "The contact has been deleted": "El contacte s’ha suprimit",
-  "The contact has been edited": "El contacte s’ha editat",
   "The contact has been removed from the group": "El contacte s’ha eliminat del grup",
+  "The contact has been updated": "El contacte s’ha actualitzat",
   "The contact information has been created": "S’ha creat la informació de contacte",
   "The contact information has been deleted": "S’ha suprimit la informació de contacte",
-  "The contact information has been edited": "S’ha editat la informació de contacte",
+  "The contact information has been updated": "La informació de contacte s’ha actualitzat",
   "The contact information type has been created": "S’ha creat el tipus d’informació de contacte",
   "The contact information type has been deleted": "S’ha suprimit el tipus d’informació de contacte",
   "The contact information type has been updated": "S’ha actualitzat el tipus d’informació de contacte",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "Les dades proporcionades no eren vàlides.",
   "The goal has been created": "L’objectiu s’ha creat",
   "The goal has been deleted": "S’ha suprimit l’objectiu",
-  "The goal has been edited": "L’objectiu ha estat editat",
+  "The goal has been updated": "L’objectiu s’ha actualitzat",
   "The group has been added": "S’ha afegit el grup",
   "The group has been deleted": "El grup s’ha suprimit",
   "The group has been updated": "El grup s’ha actualitzat",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "La mètrica de vida s’ha actualitzat",
   "The loan has been created": "S’ha creat el préstec",
   "The loan has been deleted": "S’ha suprimit el préstec",
-  "The loan has been edited": "El préstec ha estat editat",
   "The loan has been settled": "El préstec s’ha liquidat",
+  "The loan has been updated": "El préstec s’ha actualitzat",
   "The loan is an object": "El préstec és un objecte",
   "The loan is monetary": "El préstec és monetari",
   "The module has been added": "S’ha afegit el mòdul",
   "The module has been removed": "El mòdul s’ha eliminat",
   "The note has been created": "S’ha creat la nota",
   "The note has been deleted": "La nota s’ha suprimit",
-  "The note has been edited": "La nota ha estat editada",
+  "The note has been updated": "La nota s’ha actualitzat",
   "The notification has been sent": "S’ha enviat la notificació",
   "The operation either timed out or was not allowed.": "L’operació s’ha esgotat o no es va permetre.",
   "The page has been added": "S’ha afegit la pàgina",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "La categoria de la mascota s’ha actualitzat",
   "The pet has been added": "S’ha afegit la mascota",
   "The pet has been deleted": "S’ha suprimit la mascota",
-  "The pet has been edited": "La mascota ha estat editada",
+  "The pet has been updated": "La mascota s’ha actualitzat",
   "The photo has been added": "S’ha afegit la foto",
   "The photo has been deleted": "La foto s’ha suprimit",
   "The position has been saved": "La posició s’ha desat",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "El codi de recuperació de dos factors proporcionat no era vàlid.",
   "There are no active addresses yet.": "Encara no hi ha adreces actives.",
   "There are no calls logged yet.": "Encara no hi ha trucades registrades.",
-  "There are no contact information yet.": "Encara no hi ha informació de contacte.",
+  "There are no contact informations yet.": "Encara no hi ha informació de contacte.",
+  "There are no contact information types yet.": "Encara no hi ha cap tipus d’informació de contacte.",
   "There are no documents yet.": "Encara no hi ha documents.",
   "There are no events on that day, future or past.": "No hi ha esdeveniments en aquell dia, futur o passat.",
   "There are no files yet.": "Encara no hi ha fitxers.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "La religió s’ha actualitzat",
   "The reminder has been created": "S’ha creat el recordatori",
   "The reminder has been deleted": "El recordatori s’ha suprimit",
-  "The reminder has been edited": "El recordatori s’ha editat",
+  "The reminder has been updated": "El recordatori s’ha actualitzat",
   "The response is not a streamed response.": "La resposta no és una resposta en streaming.",
   "The response is not a view.": "La resposta no és una visió.",
   "The role has been created": "El paper s’ha creat",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "L’etiqueta s’ha actualitzat",
   "The task has been created": "S’ha creat la tasca",
   "The task has been deleted": "La tasca s’ha suprimit",
-  "The task has been edited": "La tasca ha estat editada",
+  "The task has been updated": "La tasca s’ha actualitzat",
   "The team's name and owner information.": "El nom de l’equip i el propietari de la informació.",
   "The Telegram channel has been deleted": "S’ha suprimit el canal de Telegram",
   "The template has been created": "S’ha creat la plantilla",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "Aquest usuari ja ha estat convidat a l’equip.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Aquest usuari formarà part del vostre compte, però no tindrà accés a totes les voltes d’aquest compte tret que hi doneu accés específic. Aquesta persona també podrà crear voltes.",
   "This will immediately:": "Això immediatament:",
+  "Threads": "Fils",
   "Three things that happened today": "Tres coses que han passat avui",
   "Thursday": "dijous",
   "Timezone": "Fus horari",
@@ -1274,6 +1294,7 @@
   "Translate It": "Tradueix-ho",
   "Transportation": "Transport",
   "Tuesday": "dimarts",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "Confirmació de dos factors",
   "Two Factor Authentication": "Autenticació de doble factor",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "L’autenticació de dos factors està ara habilitada. Escanegi el següent codi QR utilitzant l’aplicació d’autentificació del seu telèfon o ingressi la clau de configuració.",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 Residència secundària",
   "🏡 Home": "🏡 A casa",
   "🏢 Work": "🏢 Treball",
+  "📟 Pager": "📟 Pager",
+  "📠 Fax": "📠 fax",
+  "📱 Mobile": "📱 Mobile",
   "🔔 Reminder: :label for :contactName": "🔔 Recordatori: :label per a :contactName",
   "😀 Good": "😀 Bé",
   "😁 Positive": "😁 Positiu",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 Negativa",
   "😩 Awful": "😩 Horrible",
   "😶‍🌫️ Neutral": "😶‍🌫️ Neutre",
-  "🥳 Awesome": "🥳 Genial"
+  "🥳 Awesome": "🥳 Genial",
+  "🧑🏼 Personal": "🧑🏼 personal"
 }
