--- a/lang/de.json
+++ b/lang/de.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Bist du sicher? Dadurch wird das Dokument dauerhaft gelöscht.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Bist du sicher? Dadurch werden das Tor und alle Streaks dauerhaft gelöscht.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Bist du sicher? Dadurch werden die Adresstypen aus allen Kontakten entfernt, die Kontakte selbst werden jedoch nicht gelöscht.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Bist du sicher? Dadurch werden die Kontaktinformationstypen aus allen Kontakten entfernt, die Kontakte selbst werden jedoch nicht gelöscht.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Bist du sicher? Dadurch wird der Kontaktinformationstyp aus allen Kontakten entfernt, die Kontakte jedoch nicht selbst löschen.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Bist du sicher? Dadurch werden die Geschlechter aus allen Kontakten entfernt, die Kontakte selbst werden jedoch nicht gelöscht.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Bist du sicher? Dadurch wird die Vorlage aus allen Kontakten entfernt, die Kontakte selbst werden jedoch nicht gelöscht.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Möchten Sie dieses Team wirklich löschen? Sobald ein Team gelöscht wird, werden alle Ressourcen und Daten dauerhaft gelöscht.",
@@ -234,6 +234,7 @@
   "Bird": "Vogel",
   "Birthdate": "Geburtsdatum",
   "Birthday": "Geburtstag",
+  "Bluesky": "Bluesky",
   "Body": "Körper",
   "boss": "Chef",
   "Bought": "Gekauft",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "Aktuelle Art der Zahlendarstellung:",
   "Customize how contacts should be displayed": "Passen Sie an, wie Kontakte angezeigt werden sollen",
   "Custom name order": "Benutzerdefinierte Namensreihenfolge",
+  "Custom…": "Brauch…",
   "Daily affirmation": "Tägliche Bestätigung",
   "Dashboard": "Dashboard",
+  "Data": "Daten",
   "date": "Datum",
   "Date of the event": "Datum der Veranstaltung",
   "Date of the event:": "Datum der Veranstaltung:",
@@ -383,6 +386,8 @@
   "Delete": "Löschen",
   "Delete :name": ":name löschen",
   "Delete Account": "Account löschen",
+  "Delete a contact information": "Löschen Sie eine Kontaktinformationen",
+  "Delete a contact information type": "Löschen Sie einen Kontaktinformationstyp",
   "Delete a new key": "Löschen Sie einen neuen Schlüssel",
   "Delete API Token": "API-Token löschen",
   "Delete contact": "Kontakt löschen",
@@ -480,6 +485,7 @@
   "Family": "Familie",
   "Family summary": "Familienzusammenfassung",
   "Favorites": "Favoriten",
+  "Fax": "Fax",
   "Female": "Weiblich",
   "File": "Datei",
   "Files": "Dateien",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Mit Geschenkanlässen können Sie alle Ihre Geschenke kategorisieren.",
   "Gift states": "Geschenkzustände",
   "Gift states let you define the various states for your gifts.": "Mit Geschenkstatus können Sie die verschiedenen Status für Ihre Geschenke definieren.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Geben Sie dieser E-Mail-Adresse einen Namen",
   "Goals": "Ziele",
   "Go back": "Geh zurück",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "Mit Gruppentypen können Sie Personen gruppieren.",
   "Had a promotion": "Hatte eine Beförderung",
   "Hamster": "Hamster",
+  "Hangouts": "Treffpunkte",
   "Have a great day,": "Ich wünsche ihnen einen wunderbaren Tag,",
   "he/him": "er/ihm",
   "Hello!": "Hallo!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "Verlauf der gesendeten Benachrichtigung",
   "Hobbies": "Hobbys",
   "Home": "Startseite",
+  "Home House": "Haushaus",
   "Horse": "Pferd",
   "How are you?": "Wie geht es dir?",
   "How could I have done this day better?": "Wie hätte ich diesen Tag besser machen können?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "Informationen aus Wikipedia",
   "in love with": "verliebt in",
   "Inspirational post": "Inspirierender Beitrag",
+  "Instagram": "Instagram",
+  "Instant messaging": "Instant Messaging",
   "Insufficient Storage": "Nicht genügend Speicherplatz",
   "Internal Server Error": "Interner Serverfehler",
   "Introduction": "Einführung",
@@ -618,6 +629,7 @@
   "Just to say hello": "Nur um hallo zu sagen",
   "Key name": "Schlüsselname",
   "kilometers (km)": "Kilometer (km)",
+  "Kind": "Art",
   "km": "km",
   "Label:": "Etikett:",
   "Labels": "Etiketten",
@@ -706,6 +718,7 @@
   "miles": "Meilen",
   "miles (mi)": "Meilen (mi)",
   "Misdirected Request": "Fehlgeleitete Anfrage",
+  "Mobile": "Mobile",
   "Modules in this page": "Module auf dieser Seite",
   "Monday": "Montag",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Alle Rechte vorbehalten. 2017 – :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "Noch keine Etiketten.",
   "No life event types yet.": "Noch keine Lebensereignistypen.",
   "Non-Authoritative Information": "Nicht maßgebende Informationen",
+  "None": "Keiner",
   "No notes found.": "Keine Notizen gefunden.",
   "No results found": "keine Ergebnisse gefunden",
   "No role": "Keine Rolle",
@@ -798,6 +812,7 @@
   "Other": "Andere",
   "Out of respect and appreciation": "Aus Respekt und Wertschätzung",
   "Page Expired": "Seite abgelaufen",
+  "Pager": "Pager",
   "Pages": "Seiten",
   "Pagination Navigation": "Seiten-Navigation",
   "Parent": "Elternteil",
@@ -823,6 +838,7 @@
   "Pet category": "Kategorie „Haustier“.",
   "Pets": "Haustiere",
   "Phone": "Telefon",
+  "Phone number": "Telefonnummer",
   "Photo": "Foto",
   "Photos": "Fotos",
   "Played basketball": "Spielte Basketball",
@@ -1006,6 +1022,7 @@
   "Slices of life": "Stücke des Lebens",
   "Small animal": "Kleines Tier",
   "Social": "Sozial",
+  "Social profile": "Soziales Profil",
   "Solve": "Lösen",
   "Some dates have a special type that we will use in the software to calculate an age.": "Einige Daten haben einen speziellen Typ, den wir in der Software zur Berechnung eines Alters verwenden.",
   "So… it works 😼": "Also... es funktioniert 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "Nutzungsbedingungen",
   "Test email for Monica": "Test-E-Mail für Monica",
   "Test email sent!": "Test-E-Mail gesendet!",
+  "Text": "Text",
   "Thanks,": "Danke,",
   "Thanks for giving Monica a try.": "Danke, dass du Monica einen Versuch gegeben hast.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Danke für’s Registrieren! Bevor Sie beginnen, können Sie Ihre E-Mail-Adresse bestätigen, indem Sie auf den Link klicken, den wir Ihnen gerade per E-Mail zugesandt haben. Wenn Sie die E-Mail nicht erhalten haben, senden wir Ihnen gerne eine weitere zu.",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "Der Adresstyp wurde aktualisiert",
   "The call has been created": "Der Anruf wurde erstellt",
   "The call has been deleted": "Der Anruf wurde gelöscht",
-  "The call has been edited": "Der Anruf wurde bearbeitet",
+  "The call has been updated": "Der Anruf wurde aktualisiert",
   "The call reason has been created": "Der Anrufgrund wurde erstellt",
   "The call reason has been deleted": "Der Anrufgrund wurde gelöscht",
   "The call reason has been updated": "Der Anrufgrund wurde aktualisiert",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "Der Kontakt gehört noch keiner Gruppe an.",
   "The contact has been added": "Der Kontakt wurde hinzugefügt",
   "The contact has been deleted": "Der Kontakt wurde gelöscht",
-  "The contact has been edited": "Der Kontakt wurde bearbeitet",
   "The contact has been removed from the group": "Der Kontakt wurde aus der Gruppe entfernt",
+  "The contact has been updated": "Der Kontakt wurde aktualisiert",
   "The contact information has been created": "Die Kontaktinformationen wurden erstellt",
   "The contact information has been deleted": "Die Kontaktinformationen wurden gelöscht",
-  "The contact information has been edited": "Die Kontaktinformationen wurden bearbeitet",
+  "The contact information has been updated": "Die Kontaktinformationen wurden aktualisiert",
   "The contact information type has been created": "Der Kontaktinformationstyp wurde erstellt",
   "The contact information type has been deleted": "Der Kontaktinformationstyp wurde gelöscht",
   "The contact information type has been updated": "Der Kontaktinformationstyp wurde aktualisiert",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "Die gegebenen Daten waren ungültig.",
   "The goal has been created": "Das Ziel wurde erstellt",
   "The goal has been deleted": "Das Ziel wurde gelöscht",
-  "The goal has been edited": "Das Ziel wurde bearbeitet",
+  "The goal has been updated": "Das Ziel wurde aktualisiert",
   "The group has been added": "Die Gruppe wurde hinzugefügt",
   "The group has been deleted": "Die Gruppe wurde gelöscht",
   "The group has been updated": "Die Gruppe wurde aktualisiert",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "Die Lebensmetrik wurde aktualisiert",
   "The loan has been created": "Das Darlehen wurde erstellt",
   "The loan has been deleted": "Das Darlehen wurde gelöscht",
-  "The loan has been edited": "Das Darlehen wurde bearbeitet",
   "The loan has been settled": "Das Darlehen wurde abbezahlt",
+  "The loan has been updated": "Das Darlehen wurde aktualisiert",
   "The loan is an object": "Das Darlehen ist ein Gegenstand",
   "The loan is monetary": "Das Darlehen ist monetär",
   "The module has been added": "Das Modul wurde hinzugefügt",
   "The module has been removed": "Das Modul wurde entfernt",
   "The note has been created": "Die Notiz wurde erstellt",
   "The note has been deleted": "Die Notiz wurde gelöscht",
-  "The note has been edited": "Die Notiz wurde bearbeitet",
+  "The note has been updated": "Die Notiz wurde aktualisiert",
   "The notification has been sent": "Die Benachrichtigung wurde gesendet",
   "The operation either timed out or was not allowed.": "Der Vorgang ist entweder abgelaufen oder nicht zulässig.",
   "The page has been added": "Die Seite wurde hinzugefügt",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "Die Haustierkategorie wurde aktualisiert",
   "The pet has been added": "Das Haustier wurde hinzugefügt",
   "The pet has been deleted": "Das Haustier wurde gelöscht",
-  "The pet has been edited": "Das Haustier wurde bearbeitet",
+  "The pet has been updated": "Das Haustier wurde aktualisiert",
   "The photo has been added": "Das Foto wurde hinzugefügt",
   "The photo has been deleted": "Das Foto wurde gelöscht",
   "The position has been saved": "Die Position wurde gespeichert",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "Der angegebene Zwei-Faktor-Wiederherstellungscode war ungültig.",
   "There are no active addresses yet.": "Es sind noch keine aktiven Adressen vorhanden.",
   "There are no calls logged yet.": "Es sind noch keine Anrufe protokolliert.",
-  "There are no contact information yet.": "Es liegen noch keine Kontaktinformationen vor.",
+  "There are no contact informations yet.": "Es liegen noch keine Kontaktinformationen vor.",
+  "There are no contact information types yet.": "Es gibt noch keine Kontaktinformationstypen.",
   "There are no documents yet.": "Es liegen noch keine Dokumente vor.",
   "There are no events on that day, future or past.": "An diesem Tag gibt es keine Ereignisse, weder in der Zukunft noch in der Vergangenheit.",
   "There are no files yet.": "Es sind noch keine Dateien vorhanden.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "Die Religion wurde aktualisiert",
   "The reminder has been created": "Die Erinnerung wurde erstellt",
   "The reminder has been deleted": "Die Erinnerung wurde gelöscht",
-  "The reminder has been edited": "Die Erinnerung wurde bearbeitet",
+  "The reminder has been updated": "Die Erinnerung wurde aktualisiert",
   "The response is not a streamed response.": "Die Antwort ist keine gestreamte Antwort.",
   "The response is not a view.": "Die Antwort ist keine Ansicht.",
   "The role has been created": "Die Rolle wurde erstellt",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "Das Tag wurde aktualisiert",
   "The task has been created": "Die Aufgabe wurde erstellt",
   "The task has been deleted": "Die Aufgabe wurde gelöscht",
-  "The task has been edited": "Die Aufgabe wurde bearbeitet",
+  "The task has been updated": "Die Aufgabe wurde aktualisiert",
   "The team's name and owner information.": "Teamname und Informationen zum Besitzer.",
   "The Telegram channel has been deleted": "Der Telegram-Kanal wurde gelöscht",
   "The template has been created": "Die Vorlage wurde erstellt",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "Dieser Benutzer wurde bereits in dieses Team eingeladen.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Dieser Benutzer wird Teil Ihres Kontos sein, erhält jedoch keinen Zugriff auf alle Tresore in diesem Konto, es sei denn, Sie gewähren ihnen ausdrücklich Zugriff. Diese Person kann auch Tresore erstellen.",
   "This will immediately:": "Dies wird sofort:",
+  "Threads": "Themen",
   "Three things that happened today": "Drei Dinge, die heute passiert sind",
   "Thursday": "Donnerstag",
   "Timezone": "Zeitzone",
@@ -1274,6 +1294,7 @@
   "Translate It": "Übersetze es",
   "Transportation": "Transport",
   "Tuesday": "Dienstag",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "Zwei-Faktor-Bestätigung",
   "Two Factor Authentication": "Zwei-Faktor-Authentifizierung",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Die Zwei-Faktor-Authentifizierung ist jetzt aktiviert. Scannen Sie den folgenden QR-Code mit der Authentifizierungsanwendung Ihres Smartphones oder geben Sie den Einrichtungsschlüssel ein.",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 Zweitwohnsitz",
   "🏡 Home": "🏡 Zuhause",
   "🏢 Work": "🏢 Arbeit",
+  "📟 Pager": "📟 Pager",
+  "📠 Fax": "📠 Fax",
+  "📱 Mobile": "📱 Mobile",
   "🔔 Reminder: :label for :contactName": "🔔 Erinnerung: :label für :contactName",
   "😀 Good": "😀 Gut",
   "😁 Positive": "😁 Positiv",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 Negativ",
   "😩 Awful": "😩 Schrecklich",
   "😶‍🌫️ Neutral": "😶‍🌫️ Neutral",
-  "🥳 Awesome": "🥳 Großartig"
+  "🥳 Awesome": "🥳 Großartig",
+  "🧑🏼 Personal": "🧑🏼 persönlich"
 }
