--- a/lang/el.json
+++ b/lang/el.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Είσαι σίγουρος? Αυτό θα διαγράψει οριστικά το έγγραφο.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Είσαι σίγουρος? Αυτό θα διαγράψει οριστικά το γκολ και όλα τα σερί.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Είσαι σίγουρος? Αυτό θα καταργήσει τους τύπους διευθύνσεων από όλες τις επαφές, αλλά δεν θα διαγράψει τις ίδιες τις επαφές.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Είσαι σίγουρος? Αυτό θα καταργήσει τους τύπους πληροφοριών επαφών από όλες τις επαφές, αλλά δεν θα διαγράψει τις ίδιες τις επαφές.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Είστε σίγουροι; Αυτό θα καταργήσει τον τύπο πληροφοριών επικοινωνίας από όλες τις επαφές, αλλά δεν θα διαγράψει τις ίδιες τις επαφές.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Είσαι σίγουρος? Αυτό θα καταργήσει τα φύλα από όλες τις επαφές, αλλά δεν θα διαγράψει τις ίδιες τις επαφές.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Είσαι σίγουρος? Αυτό θα καταργήσει το πρότυπο από όλες τις επαφές, αλλά δεν θα διαγράψει τις ίδιες τις επαφές.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Είστε βέβαιοι ότι θέλετε να διαγράψετε αυτήν την ομάδα; Μόλις διαγραφεί μια ομάδα, όλοι οι πόροι και τα δεδομένα της θα διαγραφούν οριστικά.",
@@ -234,6 +234,7 @@
   "Bird": "Πουλί",
   "Birthdate": "Ημερομηνία γέννησης",
   "Birthday": "Γενέθλια",
+  "Bluesky": "Μπλε",
   "Body": "Σώμα",
   "boss": "αφεντικό",
   "Bought": "Αγορασμένος",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "Τρέχων τρόπος εμφάνισης αριθμών:",
   "Customize how contacts should be displayed": "Προσαρμόστε τον τρόπο εμφάνισης των επαφών",
   "Custom name order": "Προσαρμοσμένη σειρά ονόματος",
+  "Custom…": "Εθιμο…",
   "Daily affirmation": "Καθημερινή επιβεβαίωση",
   "Dashboard": "Πίνακας",
+  "Data": "Δεδομένα",
   "date": "ημερομηνία",
   "Date of the event": "Ημερομηνία της εκδήλωσης",
   "Date of the event:": "Ημερομηνία εκδήλωσης:",
@@ -383,6 +386,8 @@
   "Delete": "Διαγραφή",
   "Delete :name": "Διαγραφή :name",
   "Delete Account": "Διαγραφή Λογαριασμού",
+  "Delete a contact information": "Διαγράψτε τα στοιχεία επικοινωνίας",
+  "Delete a contact information type": "Διαγράψτε έναν τύπο πληροφοριών επικοινωνίας",
   "Delete a new key": "Διαγραφή νέου κλειδιού",
   "Delete API Token": "Διαγραφή Token API",
   "Delete contact": "Διαγραφή επαφής",
@@ -480,6 +485,7 @@
   "Family": "Οικογένεια",
   "Family summary": "Περίληψη της οικογένειας",
   "Favorites": "Αγαπημένα",
+  "Fax": "Φαξ",
   "Female": "Θηλυκός",
   "File": "Αρχείο",
   "Files": "Αρχεία",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Οι περιπτώσεις δώρων σάς επιτρέπουν να ταξινομήσετε όλα τα δώρα σας.",
   "Gift states": "Δώρο καταστάσεις",
   "Gift states let you define the various states for your gifts.": "Οι καταστάσεις δώρων σάς επιτρέπουν να ορίσετε τις διάφορες καταστάσεις για τα δώρα σας.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Δώστε σε αυτήν τη διεύθυνση email ένα όνομα",
   "Goals": "Στόχοι",
   "Go back": "Πήγαινε πίσω",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "Οι τύποι ομάδας σάς επιτρέπουν να ομαδοποιείτε άτομα.",
   "Had a promotion": "Είχε προαγωγή",
   "Hamster": "Χάμστερ",
+  "Hangouts": "Hangouts",
   "Have a great day,": "Να έχεις μια υπέροχη μέρα,",
   "he/him": "αυτός/αυτόν",
   "Hello!": "Χαίρετε!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "Ιστορικό της ειδοποίησης που στάλθηκε",
   "Hobbies": "Χόμπι",
   "Home": "Αρχική",
+  "Home House": "Σπίτι",
   "Horse": "Αλογο",
   "How are you?": "Πώς είσαι;",
   "How could I have done this day better?": "Πώς θα μπορούσα να είχα κάνει καλύτερα αυτή τη μέρα;",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "Πληροφορίες από τη Wikipedia",
   "in love with": "ερωτευμένος με",
   "Inspirational post": "Εμπνευσμένη ανάρτηση",
+  "Instagram": "Instagram",
+  "Instant messaging": "Άμεσες ανταλλαγές",
   "Insufficient Storage": "Ανεπαρκής αποθηκευτικός χώρος",
   "Internal Server Error": "Εσωτερικό Σφάλμα Διακομιστή",
   "Introduction": "Εισαγωγή",
@@ -618,6 +629,7 @@
   "Just to say hello": "Απλά για να πω ένα γεια",
   "Key name": "Όνομα κλειδιού",
   "kilometers (km)": "χιλιόμετρα (χλμ)",
+  "Kind": "Είδος",
   "km": "χλμ",
   "Label:": "Επιγραφή:",
   "Labels": "Ετικέτες",
@@ -706,6 +718,7 @@
   "miles": "μίλια",
   "miles (mi)": "μίλια (mi)",
   "Misdirected Request": "Εσφαλμένη διεύθυνση αιτήματος",
+  "Mobile": "Κινητός",
   "Modules in this page": "Ενότητες σε αυτή τη σελίδα",
   "Monday": "Δευτέρα",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Ολα τα δικαιώματα διατηρούνται. 2017 — :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "Δεν υπάρχουν ακόμη ετικέτες.",
   "No life event types yet.": "Δεν υπάρχουν ακόμη τύποι συμβάντων ζωής.",
   "Non-Authoritative Information": "Μη Εξουσιοδοτημένες Πληροφορίες",
+  "None": "Κανένας",
   "No notes found.": "Δεν βρέθηκαν σημειώσεις.",
   "No results found": "Δεν βρέθηκαν αποτελέσματα",
   "No role": "Κανένας ρόλος",
@@ -798,6 +812,7 @@
   "Other": "Αλλα",
   "Out of respect and appreciation": "Από σεβασμό και εκτίμηση",
   "Page Expired": "Η συνεδρία έληξε",
+  "Pager": "Τηλεειδοποιητής",
   "Pages": "Σελίδες",
   "Pagination Navigation": "Πλοήγηση Σελιδοποίησης",
   "Parent": "Μητρική εταιρεία",
@@ -823,6 +838,7 @@
   "Pet category": "Κατηγορία κατοικίδιων ζώων",
   "Pets": "Κατοικίδια",
   "Phone": "Τηλέφωνο",
+  "Phone number": "Αριθμός τηλεφώνου",
   "Photo": "Φωτογραφία",
   "Photos": "Φωτογραφίες",
   "Played basketball": "Έπαιξε μπάσκετ",
@@ -1006,6 +1022,7 @@
   "Slices of life": "Φέτες ζωής",
   "Small animal": "Μικρό ζώο",
   "Social": "Κοινωνικός",
+  "Social profile": "Κοινωνικό προφίλ",
   "Solve": "Λύση",
   "Some dates have a special type that we will use in the software to calculate an age.": "Ορισμένες ημερομηνίες έχουν έναν ειδικό τύπο που θα χρησιμοποιήσουμε στο λογισμικό για να υπολογίσουμε μια ηλικία.",
   "So… it works 😼": "Λοιπόν… λειτουργεί 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "Όροι Παροχής Υπηρεσιών",
   "Test email for Monica": "Δοκιμαστικό email για τη Monica",
   "Test email sent!": "Εστάλη δοκιμαστικό email!",
+  "Text": "Κείμενο",
   "Thanks,": "Ευχαριστώ,",
   "Thanks for giving Monica a try.": "Ευχαριστούμε που δοκιμάσατε τη Monica.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Ευχαριστούμε για την εγγραφή! Πριν ξεκινήσετε, θα μπορούσατε να επαληθεύσετε τη διεύθυνση email σας κάνοντας κλικ στον σύνδεσμο που μόλις σας στείλαμε email; Εάν δεν λάβατε το email, θα σας στείλουμε ευχαρίστως άλλο.",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "Ο τύπος διεύθυνσης έχει ενημερωθεί",
   "The call has been created": "Η κλήση έχει δημιουργηθεί",
   "The call has been deleted": "Η κλήση έχει διαγραφεί",
-  "The call has been edited": "Η κλήση έχει υποστεί επεξεργασία",
+  "The call has been updated": "Η κλήση έχει ενημερωθεί",
   "The call reason has been created": "Ο λόγος κλήσης δημιουργήθηκε",
   "The call reason has been deleted": "Ο λόγος κλήσης έχει διαγραφεί",
   "The call reason has been updated": "Ο λόγος κλήσης έχει ενημερωθεί",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "Η επαφή δεν ανήκει ακόμα σε καμία ομάδα.",
   "The contact has been added": "Η επαφή προστέθηκε",
   "The contact has been deleted": "Η επαφή έχει διαγραφεί",
-  "The contact has been edited": "Η επαφή έχει υποστεί επεξεργασία",
   "The contact has been removed from the group": "Η επαφή έχει αφαιρεθεί από την ομάδα",
+  "The contact has been updated": "Η επαφή έχει ενημερωθεί",
   "The contact information has been created": "Τα στοιχεία επικοινωνίας έχουν δημιουργηθεί",
   "The contact information has been deleted": "Τα στοιχεία επικοινωνίας έχουν διαγραφεί",
-  "The contact information has been edited": "Τα στοιχεία επικοινωνίας έχουν υποστεί επεξεργασία",
+  "The contact information has been updated": "Τα στοιχεία επικοινωνίας έχουν ενημερωθεί",
   "The contact information type has been created": "Ο τύπος στοιχείων επικοινωνίας έχει δημιουργηθεί",
   "The contact information type has been deleted": "Ο τύπος στοιχείων επικοινωνίας έχει διαγραφεί",
   "The contact information type has been updated": "Ο τύπος στοιχείων επικοινωνίας έχει ενημερωθεί",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "Τα δεδομένα που δόθηκαν δεν ήταν έγκυρα.",
   "The goal has been created": "Ο στόχος έχει δημιουργηθεί",
   "The goal has been deleted": "Ο στόχος έχει διαγραφεί",
-  "The goal has been edited": "Ο στόχος έχει υποστεί επεξεργασία",
+  "The goal has been updated": "Ο στόχος ενημερώθηκε",
   "The group has been added": "Η ομάδα προστέθηκε",
   "The group has been deleted": "Η ομάδα έχει διαγραφεί",
   "The group has been updated": "Η ομάδα έχει ενημερωθεί",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "Η μέτρηση ζωής έχει ενημερωθεί",
   "The loan has been created": "Το δάνειο δημιουργήθηκε",
   "The loan has been deleted": "Το δάνειο έχει διαγραφεί",
-  "The loan has been edited": "Το δάνειο έχει υποστεί επεξεργασία",
   "The loan has been settled": "Το δάνειο έχει διακανονιστεί",
+  "The loan has been updated": "Το δάνειο έχει ενημερωθεί",
   "The loan is an object": "Το δάνειο είναι αντικείμενο",
   "The loan is monetary": "Το δάνειο είναι χρηματικό",
   "The module has been added": "Η ενότητα έχει προστεθεί",
   "The module has been removed": "Η μονάδα έχει αφαιρεθεί",
   "The note has been created": "Η σημείωση δημιουργήθηκε",
   "The note has been deleted": "Η σημείωση έχει διαγραφεί",
-  "The note has been edited": "Η σημείωση έχει υποστεί επεξεργασία",
+  "The note has been updated": "Το σημείωμα έχει ενημερωθεί",
   "The notification has been sent": "Η ειδοποίηση έχει σταλεί",
   "The operation either timed out or was not allowed.": "Η επέμβαση είτε έληξε είτε δεν επιτρεπόταν.",
   "The page has been added": "Η σελίδα έχει προστεθεί",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "Η κατηγορία κατοικίδιων ζώων έχει ενημερωθεί",
   "The pet has been added": "Το κατοικίδιο προστέθηκε",
   "The pet has been deleted": "Το κατοικίδιο έχει διαγραφεί",
-  "The pet has been edited": "Το κατοικίδιο έχει υποστεί επεξεργασία",
+  "The pet has been updated": "Το κατοικίδιο ζώο έχει ενημερωθεί",
   "The photo has been added": "Η φωτογραφία προστέθηκε",
   "The photo has been deleted": "Η φωτογραφία έχει διαγραφεί",
   "The position has been saved": "Η θέση έχει σωθεί",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "Ο παρεχόμενος κωδικός ανάκτησης δύο παραγόντων δεν ήταν έγκυρος.",
   "There are no active addresses yet.": "Δεν υπάρχουν ακόμα ενεργές διευθύνσεις.",
   "There are no calls logged yet.": "Δεν έχουν καταγραφεί ακόμη κλήσεις.",
-  "There are no contact information yet.": "Δεν υπάρχουν ακόμη στοιχεία επικοινωνίας.",
+  "There are no contact informations yet.": "Δεν υπάρχουν ακόμη στοιχεία επικοινωνίας.",
+  "There are no contact information types yet.": "Δεν υπάρχουν ακόμη τύποι πληροφοριών επικοινωνίας.",
   "There are no documents yet.": "Δεν υπάρχουν ακόμη έγγραφα.",
   "There are no events on that day, future or past.": "Δεν υπάρχουν γεγονότα εκείνη την ημέρα, μέλλον ή παρελθόν.",
   "There are no files yet.": "Δεν υπάρχουν ακόμα αρχεία.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "Η θρησκεία έχει ενημερωθεί",
   "The reminder has been created": "Η υπενθύμιση δημιουργήθηκε",
   "The reminder has been deleted": "Η υπενθύμιση έχει διαγραφεί",
-  "The reminder has been edited": "Η υπενθύμιση έχει υποστεί επεξεργασία",
+  "The reminder has been updated": "Η υπενθύμιση έχει ενημερωθεί",
   "The response is not a streamed response.": "Η απάντηση δεν είναι απάντηση ροής.",
   "The response is not a view.": "Η απάντηση δεν είναι άποψη.",
   "The role has been created": "Ο ρόλος έχει δημιουργηθεί",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "Η ετικέτα έχει ενημερωθεί",
   "The task has been created": "Η εργασία έχει δημιουργηθεί",
   "The task has been deleted": "Η εργασία έχει διαγραφεί",
-  "The task has been edited": "Η εργασία έχει υποστεί επεξεργασία",
+  "The task has been updated": "Η εργασία έχει ενημερωθεί",
   "The team's name and owner information.": "Το όνομα της ομάδας και πληροφορίες ιδιοκτήτη.",
   "The Telegram channel has been deleted": "Το κανάλι Telegram έχει διαγραφεί",
   "The template has been created": "Το πρότυπο δημιουργήθηκε",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "Αυτός ο χρήστης έχει ήδη προσκληθεί στην ομάδα.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Αυτός ο χρήστης θα είναι μέρος του λογαριασμού σας, αλλά δεν θα έχει πρόσβαση σε όλα τα θησαυροφυλάκια σε αυτόν τον λογαριασμό, εκτός εάν τους δώσετε συγκεκριμένη πρόσβαση. Αυτό το άτομο θα μπορεί επίσης να δημιουργήσει θησαυροφυλάκια.",
   "This will immediately:": "Αυτό θα κάνει αμέσως:",
+  "Threads": "Νήματα",
   "Three things that happened today": "Τρία πράγματα συνέβησαν σήμερα",
   "Thursday": "Πέμπτη",
   "Timezone": "Ζώνη ώρας",
@@ -1274,6 +1294,7 @@
   "Translate It": "Μετάφρασέ το",
   "Transportation": "Μεταφορά",
   "Tuesday": "Τρίτη",
+  "Twitter": "Κελάδημα",
   "Two-factor Confirmation": "Επιβεβαίωση δύο παραγόντων",
   "Two Factor Authentication": "Έλεγχος Ταυτότητας Δύο Παραγόντων",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Ο έλεγχος ταυτότητας δύο παραγόντων είναι πλέον ενεργοποιημένος. Σαρώστε τον ακόλουθο κωδικό QR χρησιμοποιώντας την εφαρμογή ελέγχου ταυτότητας του τηλεφώνου σας ή εισαγάγετε το κλειδί ρύθμισης.",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 Δευτερεύουσα κατοικία",
   "🏡 Home": "🏡 Σπίτι",
   "🏢 Work": "🏢 Εργασία",
+  "📟 Pager": "📟 Pager",
+  "📠 Fax": "📠 Φαξ",
+  "📱 Mobile": "📱 Κινητό",
   "🔔 Reminder: :label for :contactName": "🔔 Υπενθύμιση: :label για :contactName",
   "😀 Good": "😀 Καλό",
   "😁 Positive": "😁 Θετικό",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 Αρνητικό",
   "😩 Awful": "😩 Απαίσιο",
   "😶‍🌫️ Neutral": "😶‍🌫️ Ουδέτερο",
-  "🥳 Awesome": "🥳 Υπέροχο"
+  "🥳 Awesome": "🥳 Υπέροχο",
+  "🧑🏼 Personal": "🧑🏼 Προσωπικά"
 }
