--- a/lang/en.json
+++ b/lang/en.json
@@ -193,7 +193,6 @@
   "Are you sure? This will delete the document permanently.": "Are you sure? This will delete the document permanently.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Are you sure? This will delete the goal and all the streaks permanently.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.",
@@ -542,6 +541,7 @@
   "History of the notification sent": "History of the notification sent",
   "Hobbies": "Hobbies",
   "Home": "Home",
+  "Home House": "Home",
   "Horse": "Horse",
   "How are you?": "How are you?",
   "How could I have done this day better?": "How could I have done this day better?",
@@ -1054,7 +1054,6 @@
   "The address type has been updated": "The address type has been updated",
   "The call has been created": "The call has been created",
   "The call has been deleted": "The call has been deleted",
-  "The call has been edited": "The call has been edited",
   "The call reason has been created": "The call reason has been created",
   "The call reason has been deleted": "The call reason has been deleted",
   "The call reason has been updated": "The call reason has been updated",
@@ -1066,11 +1065,9 @@
   "The contact does not belong to any group yet.": "The contact does not belong to any group yet.",
   "The contact has been added": "The contact has been added",
   "The contact has been deleted": "The contact has been deleted",
-  "The contact has been edited": "The contact has been edited",
   "The contact has been removed from the group": "The contact has been removed from the group",
   "The contact information has been created": "The contact information has been created",
   "The contact information has been deleted": "The contact information has been deleted",
-  "The contact information has been edited": "The contact information has been edited",
   "The contact information type has been created": "The contact information type has been created",
   "The contact information type has been deleted": "The contact information type has been deleted",
   "The contact information type has been updated": "The contact information type has been updated",
@@ -1097,7 +1094,6 @@
   "The given data was invalid.": "The given data was invalid.",
   "The goal has been created": "The goal has been created",
   "The goal has been deleted": "The goal has been deleted",
-  "The goal has been edited": "The goal has been edited",
   "The group has been added": "The group has been added",
   "The group has been deleted": "The group has been deleted",
   "The group has been updated": "The group has been updated",
@@ -1117,7 +1113,6 @@
   "The life metric has been updated": "The life metric has been updated",
   "The loan has been created": "The loan has been created",
   "The loan has been deleted": "The loan has been deleted",
-  "The loan has been edited": "The loan has been edited",
   "The loan has been settled": "The loan has been settled",
   "The loan is an object": "The loan is an object",
   "The loan is monetary": "The loan is monetary",
@@ -1125,7 +1120,6 @@
   "The module has been removed": "The module has been removed",
   "The note has been created": "The note has been created",
   "The note has been deleted": "The note has been deleted",
-  "The note has been edited": "The note has been edited",
   "The notification has been sent": "The notification has been sent",
   "The operation either timed out or was not allowed.": "The operation either timed out or was not allowed.",
   "The page has been added": "The page has been added",
@@ -1137,7 +1131,6 @@
   "The pet category has been updated": "The pet category has been updated",
   "The pet has been added": "The pet has been added",
   "The pet has been deleted": "The pet has been deleted",
-  "The pet has been edited": "The pet has been edited",
   "The photo has been added": "The photo has been added",
   "The photo has been deleted": "The photo has been deleted",
   "The position has been saved": "The position has been saved",
@@ -1153,7 +1146,7 @@
   "The provided two factor recovery code was invalid.": "The provided two factor recovery code was invalid.",
   "There are no active addresses yet.": "There are no active addresses yet.",
   "There are no calls logged yet.": "There are no calls logged yet.",
-  "There are no contact information yet.": "There are no contact information yet.",
+  "There are no contact informations yet.": "There are no contact informations yet.",
   "There are no documents yet.": "There are no documents yet.",
   "There are no events on that day, future or past.": "There are no events on that day, future or past.",
   "There are no files yet.": "There are no files yet.",
@@ -1182,7 +1175,6 @@
   "The religion has been updated": "The religion has been updated",
   "The reminder has been created": "The reminder has been created",
   "The reminder has been deleted": "The reminder has been deleted",
-  "The reminder has been edited": "The reminder has been edited",
   "The response is not a streamed response.": "The response is not a streamed response.",
   "The response is not a view.": "The response is not a view.",
   "The role has been created": "The role has been created",
@@ -1198,7 +1190,6 @@
   "The tag has been updated": "The tag has been updated",
   "The task has been created": "The task has been created",
   "The task has been deleted": "The task has been deleted",
-  "The task has been edited": "The task has been edited",
   "The team's name and owner information.": "The team’s name and owner information.",
   "The Telegram channel has been deleted": "The Telegram channel has been deleted",
   "The template has been created": "The template has been created",
