--- a/lang/es.json
+++ b/lang/es.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "¿Está seguro? Esto eliminará el documento permanentemente.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "¿Está seguro? Esto eliminará el objetivo y todas las rachas de forma permanente.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "¿Está seguro? Esto eliminará los tipos de direcciones de todos los contactos, pero no eliminará los contactos en sí.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "¿Está seguro? Esto eliminará los tipos de información de contacto de todos los contactos, pero no eliminará los contactos en sí.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "¿Está seguro? Esto eliminará el tipo de información de contacto de todos los contactos, pero no eliminará los contactos ellos mismos.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "¿Está seguro? Esto eliminará los géneros de todos los contactos, pero no eliminará los contactos en sí.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "¿Está seguro? Esto eliminará la plantilla de todos los contactos, pero no eliminará los contactos en sí.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "¿Está seguro que desea eliminar este equipo? Una vez que se elimina un equipo, todos sus recursos y datos se eliminarán de forma permanente.",
@@ -234,6 +234,7 @@
   "Bird": "Pájaro",
   "Birthdate": "Fecha de nacimiento",
   "Birthday": "Cumpleaños",
+  "Bluesky": "Bluesky",
   "Body": "Cuerpo",
   "boss": "jefe",
   "Bought": "Compró",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "Forma actual de mostrar números:",
   "Customize how contacts should be displayed": "Personaliza cómo se deben mostrar los contactos",
   "Custom name order": "Orden de nombre personalizado",
+  "Custom…": "Costumbre…",
   "Daily affirmation": "Afirmación diaria",
   "Dashboard": "Panel",
+  "Data": "Datos",
   "date": "fecha",
   "Date of the event": "Fecha del evento",
   "Date of the event:": "Fecha del evento:",
@@ -383,6 +386,8 @@
   "Delete": "Eliminar",
   "Delete :name": "Eliminar :name",
   "Delete Account": "Borrar cuenta",
+  "Delete a contact information": "Eliminar una información de contacto",
+  "Delete a contact information type": "Eliminar un tipo de información de contacto",
   "Delete a new key": "Eliminar una nueva clave",
   "Delete API Token": "Borrar token API",
   "Delete contact": "Borrar contacto",
@@ -480,6 +485,7 @@
   "Family": "Familia",
   "Family summary": "Resumen familiar",
   "Favorites": "Favoritos",
+  "Fax": "Fax",
   "Female": "Femenino",
   "File": "Archivo",
   "Files": "Archivos",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Las ocasiones de regalo te permiten clasificar todos tus regalos.",
   "Gift states": "Estados de regalo",
   "Gift states let you define the various states for your gifts.": "Los estados de obsequio le permiten definir los distintos estados de sus obsequios.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Dale un nombre a esta dirección de correo electrónico.",
   "Goals": "Objetivos",
   "Go back": "Regresa",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "Los tipos de grupo le permiten agrupar personas.",
   "Had a promotion": "tuvo una promoción",
   "Hamster": "Hámster",
+  "Hangouts": "Lugar de reunión",
   "Have a great day,": "Qué tengas un lindo día,",
   "he/him": "él/él",
   "Hello!": "¡Hola!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "Historial de la notificación enviada",
   "Hobbies": "Aficiones",
   "Home": "Inicio",
+  "Home House": "Casa de casa",
   "Horse": "Caballo",
   "How are you?": "¿Cómo estás?",
   "How could I have done this day better?": "¿Cómo podría haber hecho este día mejor?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "Información de Wikipedia",
   "in love with": "enamorado de",
   "Inspirational post": "Publicación inspiradora",
+  "Instagram": "Instagram",
+  "Instant messaging": "Mensajería instantánea",
   "Insufficient Storage": "Espacio insuficiente",
   "Internal Server Error": "Error interno del servidor",
   "Introduction": "Introducción",
@@ -618,6 +629,7 @@
   "Just to say hello": "Sólo para decir hola",
   "Key name": "Nombre clave",
   "kilometers (km)": "kilómetros (km)",
+  "Kind": "Amable",
   "km": "kilómetros",
   "Label:": "Etiqueta:",
   "Labels": "Etiquetas",
@@ -706,6 +718,7 @@
   "miles": "millas",
   "miles (mi)": "millas (mi)",
   "Misdirected Request": "Solicitud mal dirigida",
+  "Mobile": "Móvil",
   "Modules in this page": "Módulos en esta página",
   "Monday": "Lunes",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Reservados todos los derechos. 2017: :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "Aún no hay etiquetas.",
   "No life event types yet.": "Aún no hay tipos de eventos de vida.",
   "Non-Authoritative Information": "Información no autorizada",
+  "None": "Ninguno",
   "No notes found.": "No se encontraron notas.",
   "No results found": "No se han encontrado resultados",
   "No role": "Sin rol",
@@ -798,6 +812,7 @@
   "Other": "Otro",
   "Out of respect and appreciation": "Por respeto y aprecio",
   "Page Expired": "Página expirada",
+  "Pager": "Buscapersonas",
   "Pages": "paginas",
   "Pagination Navigation": "Navegación por los enlaces de paginación",
   "Parent": "Padre",
@@ -823,6 +838,7 @@
   "Pet category": "Categoría de mascota",
   "Pets": "Mascotas",
   "Phone": "Teléfono",
+  "Phone number": "Número de teléfono",
   "Photo": "Foto",
   "Photos": "Fotos",
   "Played basketball": "Jugó basquetbol",
@@ -1006,6 +1022,7 @@
   "Slices of life": "Rebanadas de vida",
   "Small animal": "Animal pequeño",
   "Social": "Social",
+  "Social profile": "Perfil social",
   "Solve": "Resolver",
   "Some dates have a special type that we will use in the software to calculate an age.": "Algunas fechas tienen un tipo especial que usaremos en el software para calcular una edad.",
   "So… it works 😼": "Entonces… funciona 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "Términos del servicio",
   "Test email for Monica": "Correo electrónico de prueba para Monica",
   "Test email sent!": "¡Correo electrónico de prueba enviado!",
+  "Text": "Texto",
   "Thanks,": "Gracias,",
   "Thanks for giving Monica a try.": "Gracias por darle una oportunidad a Monica.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Gracias por registrarte! Antes de comenzar, ¿podría verificar su dirección de correo electrónico haciendo clic en el enlace que le acabamos de enviar por correo electrónico? Si no recibió el correo electrónico, con gusto le enviaremos otro.",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "El tipo de dirección ha sido actualizado.",
   "The call has been created": "La convocatoria ha sido creada.",
   "The call has been deleted": "La llamada ha sido eliminada.",
-  "The call has been edited": "La convocatoria ha sido editada.",
+  "The call has been updated": "La llamada ha sido actualizada",
   "The call reason has been created": "El motivo de la llamada ha sido creado.",
   "The call reason has been deleted": "El motivo de la llamada ha sido eliminado.",
   "The call reason has been updated": "El motivo de la llamada ha sido actualizado.",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "El contacto aún no pertenece a ningún grupo.",
   "The contact has been added": "El contacto ha sido añadido.",
   "The contact has been deleted": "El contacto ha sido eliminado.",
-  "The contact has been edited": "El contacto ha sido editado.",
   "The contact has been removed from the group": "El contacto ha sido eliminado del grupo.",
+  "The contact has been updated": "El contacto ha sido actualizado",
   "The contact information has been created": "La información de contacto ha sido creada.",
   "The contact information has been deleted": "La información de contacto ha sido eliminada.",
-  "The contact information has been edited": "La información de contacto ha sido editada.",
+  "The contact information has been updated": "La información de contacto se ha actualizado",
   "The contact information type has been created": "El tipo de información de contacto ha sido creado.",
   "The contact information type has been deleted": "El tipo de información de contacto ha sido eliminado.",
   "The contact information type has been updated": "El tipo de información de contacto ha sido actualizado.",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "Los datos proporcionados no son válidos.",
   "The goal has been created": "La meta ha sido creada.",
   "The goal has been deleted": "El objetivo ha sido eliminado.",
-  "The goal has been edited": "El objetivo ha sido editado.",
+  "The goal has been updated": "El objetivo se ha actualizado",
   "The group has been added": "El grupo ha sido agregado.",
   "The group has been deleted": "El grupo ha sido eliminado.",
   "The group has been updated": "El grupo ha sido actualizado.",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "La métrica de vida ha sido actualizada.",
   "The loan has been created": "El préstamo ha sido creado.",
   "The loan has been deleted": "El préstamo ha sido eliminado.",
-  "The loan has been edited": "El préstamo ha sido editado.",
   "The loan has been settled": "El préstamo ha sido liquidado.",
+  "The loan has been updated": "El préstamo ha sido actualizado",
   "The loan is an object": "El préstamo es un objeto.",
   "The loan is monetary": "El préstamo es monetario.",
   "The module has been added": "El módulo ha sido agregado.",
   "The module has been removed": "El módulo ha sido eliminado.",
   "The note has been created": "La nota ha sido creada.",
   "The note has been deleted": "La nota ha sido eliminada.",
-  "The note has been edited": "La nota ha sido editada.",
+  "The note has been updated": "La nota se ha actualizado",
   "The notification has been sent": "La notificación ha sido enviada.",
   "The operation either timed out or was not allowed.": "La operación expiró o no fue permitida.",
   "The page has been added": "La pagina ha sido agregada.",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "La categoría de mascotas ha sido actualizada.",
   "The pet has been added": "La mascota ha sido agregada.",
   "The pet has been deleted": "La mascota ha sido eliminada.",
-  "The pet has been edited": "La mascota ha sido editada.",
+  "The pet has been updated": "La mascota ha sido actualizada",
   "The photo has been added": "La foto ha sido agregada.",
   "The photo has been deleted": "La foto ha sido eliminada.",
   "The position has been saved": "La posición ha sido guardada.",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "El código de recuperación de dos factores proporcionado no es válido.",
   "There are no active addresses yet.": "Aún no hay direcciones activas.",
   "There are no calls logged yet.": "Aún no hay llamadas registradas.",
-  "There are no contact information yet.": "Aún no hay información de contacto.",
+  "There are no contact informations yet.": "Aún no hay información de contacto.",
+  "There are no contact information types yet.": "Todavía no hay tipos de información de contacto.",
   "There are no documents yet.": "Aún no hay documentos.",
   "There are no events on that day, future or past.": "No hay eventos en ese día, futuro o pasado.",
   "There are no files yet.": "Aún no hay archivos.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "La religión ha sido actualizada.",
   "The reminder has been created": "El recordatorio ha sido creado.",
   "The reminder has been deleted": "El recordatorio ha sido eliminado.",
-  "The reminder has been edited": "El recordatorio ha sido editado.",
+  "The reminder has been updated": "El recordatorio se ha actualizado",
   "The response is not a streamed response.": "La respuesta no es una respuesta transmitida.",
   "The response is not a view.": "La respuesta no es una vista.",
   "The role has been created": "El rol ha sido creado.",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "La etiqueta ha sido actualizada.",
   "The task has been created": "La tarea ha sido creada.",
   "The task has been deleted": "La tarea ha sido eliminada.",
-  "The task has been edited": "La tarea ha sido editada.",
+  "The task has been updated": "La tarea se ha actualizado",
   "The team's name and owner information.": "Nombre del equipo e información del propietario.",
   "The Telegram channel has been deleted": "El canal de Telegram ha sido eliminado.",
   "The template has been created": "La plantilla ha sido creada.",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "Este usuario ya ha sido invitado al equipo.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Este usuario será parte de su cuenta, pero no tendrá acceso a todas las bóvedas de esta cuenta a menos que usted les dé acceso específico. Esta persona también podrá crear bóvedas.",
   "This will immediately:": "Esto inmediatamente:",
+  "Threads": "Trapos",
   "Three things that happened today": "Tres cosas que pasaron hoy",
   "Thursday": "Jueves",
   "Timezone": "Zona horaria",
@@ -1274,6 +1294,7 @@
   "Translate It": "Traducirlo",
   "Transportation": "Transporte",
   "Tuesday": "Martes",
+  "Twitter": "Gorjeo",
   "Two-factor Confirmation": "Confirmación de dos factores",
   "Two Factor Authentication": "Autenticación de dos factores",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "La autenticación de dos factores ahora está habilitada. Escanee el siguiente código QR usando la aplicación de autenticación de su teléfono o ingrese la clave de configuración.",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 Residencia secundaria",
   "🏡 Home": "🏡 Inicio",
   "🏢 Work": "🏢 Trabajo",
+  "📟 Pager": "📟 Pager",
+  "📠 Fax": "📠 Fax",
+  "📱 Mobile": "📱 móvil",
   "🔔 Reminder: :label for :contactName": "🔔 Recordatorio: :label para :contactName",
   "😀 Good": "😀 Bueno",
   "😁 Positive": "😁 Positivo",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 Negativo",
   "😩 Awful": "😩 Horrible",
   "😶‍🌫️ Neutral": "😶‍🌫️ Neutro",
-  "🥳 Awesome": "🥳 Impresionante"
+  "🥳 Awesome": "🥳 Impresionante",
+  "🧑🏼 Personal": "🧑🏼 Personal"
 }
