--- a/lang/hi.json
+++ b/lang/hi.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "क्या आपको यकीन है? इससे दस्तावेज़ स्थायी रूप से हट जाएगा.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "क्या आपको यकीन है? यह लक्ष्य और सभी स्ट्रीक्स को स्थायी रूप से हटा देगा।",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "क्या आपको यकीन है? यह सभी संपर्कों से पता प्रकार हटा देगा, लेकिन संपर्क स्वयं नहीं हटेंगे।",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "क्या आपको यकीन है? यह सभी संपर्कों से संपर्क जानकारी प्रकार को हटा देगा, लेकिन स्वयं संपर्कों को नहीं हटाएगा।",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "क्या आपको यकीन है? यह सभी संपर्कों से संपर्क जानकारी प्रकार को हटा देगा, लेकिन संपर्कों को स्वयं नहीं हटाएगा।",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "क्या आपको यकीन है? यह सभी संपर्कों से लिंग हटा देगा, लेकिन संपर्क स्वयं नहीं हटेंगे।",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "क्या आपको यकीन है? यह सभी संपर्कों से टेम्प्लेट हटा देगा, लेकिन संपर्क स्वयं नहीं हटेंगे।",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "क्या आप वाकई इस टीम को हटाना चाहते हैं? एक बार जब कोई टीम हटा दी जाती है, तो उसके सभी संसाधन और डेटा स्थायी रूप से हटा दिए जाएंगे ।",
@@ -234,6 +234,7 @@
   "Bird": "चिड़िया",
   "Birthdate": "जन्म तिथि",
   "Birthday": "जन्मदिन",
+  "Bluesky": "नीला आकाश",
   "Body": "शरीर",
   "boss": "मालिक",
   "Bought": "खरीदा",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "संख्याओं को प्रदर्शित करने का वर्तमान तरीका:",
   "Customize how contacts should be displayed": "संपर्कों को प्रदर्शित करने का तरीका अनुकूलित करें",
   "Custom name order": "कस्टम नाम क्रम",
+  "Custom…": "रिवाज़…",
   "Daily affirmation": "दैनिक पुष्टि",
   "Dashboard": "डैशबोर्ड",
+  "Data": "डेटा",
   "date": "तारीख",
   "Date of the event": "घटना की तारीख",
   "Date of the event:": "आयोजन की तिथि:",
@@ -383,6 +386,8 @@
   "Delete": "हटाएं",
   "Delete :name": ":name हटाएं",
   "Delete Account": "खाता हटाएं",
+  "Delete a contact information": "संपर्क जानकारी हटाएं",
+  "Delete a contact information type": "संपर्क जानकारी प्रकार हटाएं",
   "Delete a new key": "एक नई कुंजी हटाएँ",
   "Delete API Token": "एपीआई टोकन हटाएं",
   "Delete contact": "संपर्क मिटा दें",
@@ -480,6 +485,7 @@
   "Family": "परिवार",
   "Family summary": "पारिवारिक सारांश",
   "Favorites": "पसंदीदा",
+  "Fax": "फैक्स",
   "Female": "महिला",
   "File": "फ़ाइल",
   "Files": "फ़ाइलें",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "उपहार के अवसर आपको अपने सभी उपहारों को वर्गीकृत करने देते हैं।",
   "Gift states": "उपहार बताता है",
   "Gift states let you define the various states for your gifts.": "उपहार स्थिति आपको अपने उपहारों के लिए विभिन्न स्थितियों को परिभाषित करने देती है।",
+  "GitHub": "GitHub",
   "Give this email address a name": "इस ईमेल पते को एक नाम दें",
   "Goals": "लक्ष्य",
   "Go back": "वापस जाओ",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "समूह प्रकार से आप लोगों को एक साथ समूहित कर सकते हैं।",
   "Had a promotion": "प्रमोशन हुआ",
   "Hamster": "हम्सटर",
+  "Hangouts": "Hangouts",
   "Have a great day,": "आपका दिन अच्छा रहे,",
   "he/him": "वह/उसे",
   "Hello!": "नमस्कार!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "भेजी गई अधिसूचना का इतिहास",
   "Hobbies": "शौक",
   "Home": "घर",
+  "Home House": "घर घर",
   "Horse": "घोड़ा",
   "How are you?": "आप कैसे हैं?",
   "How could I have done this day better?": "मैं इस दिन को इससे बेहतर कैसे कर सकता था?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "विकिपीडिया से जानकारी",
   "in love with": "के साथ प्यार में",
   "Inspirational post": "प्रेरणादायक पोस्ट",
+  "Instagram": "Instagram",
+  "Instant messaging": "तात्कालिक संदेशन",
   "Insufficient Storage": "अपर्याप्त संग्रहण",
   "Internal Server Error": "आंतरिक सर्वर त्रुटि",
   "Introduction": "परिचय",
@@ -618,6 +629,7 @@
   "Just to say hello": "केवल हैलो करने के लिए",
   "Key name": "कुंजी का नाम",
   "kilometers (km)": "किलोमीटर (किमी)",
+  "Kind": "दयालु",
   "km": "किमी",
   "Label:": "लेबल:",
   "Labels": "लेबल",
@@ -643,7 +655,7 @@
   "Life metrics": "जीवन मेट्रिक्स",
   "Life metrics let you track metrics that are important to you.": "जीवन मेट्रिक्स आपको उन मेट्रिक्स को ट्रैक करने देता है जो आपके लिए महत्वपूर्ण हैं।",
   "Like": "पसंद",
-  "LinkedIn": "Linkedin",
+  "LinkedIn": "LinkedIn",
   "List of addresses": "पतों की सूची",
   "List of addresses of the contacts in the vault": "वॉल्ट में संपर्कों के पतों की सूची",
   "List of all important dates": "सभी महत्वपूर्ण तिथियों की सूची",
@@ -706,6 +718,7 @@
   "miles": "मील",
   "miles (mi)": "मील (मील)",
   "Misdirected Request": "दिशाहीन अनुरोध",
+  "Mobile": "गतिमान",
   "Modules in this page": "इस पृष्ठ में मॉड्यूल",
   "Monday": "सोमवार",
   "Monica. All rights reserved. 2017 — :date.": "Monica. सर्वाधिकार सुरक्षित। 2017 — :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "अभी तक कोई लेबल नहीं.",
   "No life event types yet.": "अभी तक कोई जीवन घटना प्रकार नहीं.",
   "Non-Authoritative Information": "गैर-आधिकारिक सूचना",
+  "None": "कोई नहीं",
   "No notes found.": "कोई नोट नहीं मिला.",
   "No results found": "कोई परिणाम नहीं मिला",
   "No role": "कोई भूमिका नहीं",
@@ -798,6 +812,7 @@
   "Other": "अन्य",
   "Out of respect and appreciation": "सम्मान और प्रशंसा से बाहर",
   "Page Expired": "पृष्ठ समाप्त हो गया",
+  "Pager": "पेजर",
   "Pages": "पृष्ठों",
   "Pagination Navigation": "पृष्ठ पर अंक लगाना नेविगेशन",
   "Parent": "माता-पिता",
@@ -823,6 +838,7 @@
   "Pet category": "पालतू वर्ग",
   "Pets": "पालतू जानवर",
   "Phone": "फ़ोन",
+  "Phone number": "फ़ोन नंबर",
   "Photo": "फोटो",
   "Photos": "तस्वीरें",
   "Played basketball": "बास्केटबॉल खेला",
@@ -1006,6 +1022,7 @@
   "Slices of life": "जीवन के टुकड़े",
   "Small animal": "छोटा जानवर",
   "Social": "सामाजिक",
+  "Social profile": "सामाजिक प्रोफ़ाइल",
   "Solve": "हल करना",
   "Some dates have a special type that we will use in the software to calculate an age.": "कुछ तिथियों का एक विशेष प्रकार होता है जिसका उपयोग हम सॉफ़्टवेयर में आयु की गणना करने के लिए करेंगे।",
   "So… it works 😼": "तो... यह काम करता है 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "सेवा की शर्तें",
   "Test email for Monica": "Monica के लिए परीक्षण ईमेल",
   "Test email sent!": "परीक्षण ईमेल भेजा गया!",
+  "Text": "मूलपाठ",
   "Thanks,": "धन्यवाद,",
   "Thanks for giving Monica a try.": "Monica को आज़माने के लिए धन्यवाद.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "साइन अप करने के लिए धन्यवाद! आरंभ करने से पहले, क्या आप उस लिंक पर क्लिक करके अपना ईमेल पता सत्यापित कर सकते हैं जो हमने अभी आपको ईमेल किया है? यदि आपको ईमेल प्राप्त नहीं हुआ, तो हम ख़ुशी से आपको दूसरा ईमेल भेजेंगे।",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "पता प्रकार अद्यतन कर दिया गया है",
   "The call has been created": "कॉल बनाई गई है",
   "The call has been deleted": "कॉल हटा दिया गया है",
-  "The call has been edited": "कॉल संपादित कर दी गई है",
+  "The call has been updated": "कॉल को अपडेट किया गया है",
   "The call reason has been created": "कॉल का कारण बनाया गया है",
   "The call reason has been deleted": "कॉल का कारण हटा दिया गया है",
   "The call reason has been updated": "कॉल का कारण अपडेट कर दिया गया है",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "संपर्क अभी तक किसी समूह से संबंधित नहीं है.",
   "The contact has been added": "संपर्क जोड़ दिया गया है",
   "The contact has been deleted": "संपर्क हटा दिया गया है",
-  "The contact has been edited": "संपर्क संपादित कर दिया गया है",
   "The contact has been removed from the group": "संपर्क को समूह से हटा दिया गया है",
+  "The contact has been updated": "संपर्क अपडेट किया गया है",
   "The contact information has been created": "संपर्क जानकारी बनाई गई है",
   "The contact information has been deleted": "संपर्क जानकारी हटा दी गई है",
-  "The contact information has been edited": "संपर्क जानकारी संपादित कर दी गई है",
+  "The contact information has been updated": "संपर्क जानकारी अपडेट की गई है",
   "The contact information type has been created": "संपर्क जानकारी प्रकार बनाया गया है",
   "The contact information type has been deleted": "संपर्क जानकारी प्रकार हटा दिया गया है",
   "The contact information type has been updated": "संपर्क जानकारी प्रकार अद्यतन कर दिया गया है",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "दिया गया डेटा अमान्य था।",
   "The goal has been created": "लक्ष्य बनाया गया है",
   "The goal has been deleted": "लक्ष्य हटा दिया गया है",
-  "The goal has been edited": "लक्ष्य संपादित कर दिया गया है",
+  "The goal has been updated": "लक्ष्य को अपडेट किया गया है",
   "The group has been added": "समूह जोड़ दिया गया है",
   "The group has been deleted": "समूह हटा दिया गया है",
   "The group has been updated": "ग्रुप को अपडेट कर दिया गया है",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "जीवन मीट्रिक अद्यतन किया गया है",
   "The loan has been created": "लोन बन गया है",
   "The loan has been deleted": "ऋण हटा दिया गया है",
-  "The loan has been edited": "ऋण संपादित किया गया है",
   "The loan has been settled": "कर्ज चुका दिया गया है",
+  "The loan has been updated": "ऋण अपडेट किया गया है",
   "The loan is an object": "ऋण एक वस्तु है",
   "The loan is monetary": "ऋण मौद्रिक है",
   "The module has been added": "मॉड्यूल जोड़ा गया है",
   "The module has been removed": "मॉड्यूल हटा दिया गया है",
   "The note has been created": "नोट बना लिया गया है",
   "The note has been deleted": "नोट हटा दिया गया है",
-  "The note has been edited": "नोट संपादित किया गया है",
+  "The note has been updated": "नोट को अपडेट किया गया है",
   "The notification has been sent": "अधिसूचना भेज दी गई है",
   "The operation either timed out or was not allowed.": "ऑपरेशन या तो समय समाप्त हो गया या अनुमति नहीं दी गई।",
   "The page has been added": "पेज जोड़ दिया गया है",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "पालतू पशु श्रेणी अद्यतन कर दी गई है",
   "The pet has been added": "पालतू जानवर जोड़ा गया है",
   "The pet has been deleted": "पालतू जानवर हटा दिया गया है",
-  "The pet has been edited": "पालतू संपादित किया गया है",
+  "The pet has been updated": "पालतू जानवर को अपडेट किया गया है",
   "The photo has been added": "फोटो जोड़ दिया गया है",
   "The photo has been deleted": "फोटो हटा दिया गया है",
   "The position has been saved": "पद बचा लिया गया है",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "प्रदान किया गया दो कारक पुनर्प्राप्ति कोड अमान्य था।",
   "There are no active addresses yet.": "अभी तक कोई सक्रिय पता नहीं है.",
   "There are no calls logged yet.": "अभी तक कोई कॉल लॉग नहीं हुई है.",
-  "There are no contact information yet.": "अभी तक कोई संपर्क जानकारी नहीं है.",
+  "There are no contact informations yet.": "अभी तक कोई संपर्क जानकारी नहीं है.",
+  "There are no contact information types yet.": "अभी तक कोई संपर्क जानकारी प्रकार नहीं हैं।",
   "There are no documents yet.": "अभी तक कोई दस्तावेज़ नहीं हैं.",
   "There are no events on that day, future or past.": "उस दिन, भविष्य या अतीत की कोई घटना नहीं होती।",
   "There are no files yet.": "अभी तक कोई फ़ाइल नहीं है.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "धर्म अद्यतन किया गया है",
   "The reminder has been created": "अनुस्मारक बनाया गया है",
   "The reminder has been deleted": "अनुस्मारक हटा दिया गया है",
-  "The reminder has been edited": "अनुस्मारक संपादित किया गया है",
+  "The reminder has been updated": "अनुस्मारक को अपडेट किया गया है",
   "The response is not a streamed response.": "प्रतिक्रिया कोई सुव्यवस्थित प्रतिक्रिया नहीं है.",
   "The response is not a view.": "प्रतिक्रिया कोई दृश्य नहीं है.",
   "The role has been created": "भूमिका बन गयी है",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "टैग अपडेट कर दिया गया है",
   "The task has been created": "कार्य बनाया गया है",
   "The task has been deleted": "कार्य हटा दिया गया है",
-  "The task has been edited": "कार्य संपादित कर दिया गया है",
+  "The task has been updated": "कार्य को अपडेट किया गया है",
   "The team's name and owner information.": "टीम का नाम और मालिक जानकारी.",
   "The Telegram channel has been deleted": "टेलीग्राम चैनल हटा दिया गया है",
   "The template has been created": "टेम्पलेट तैयार कर लिया गया है",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "इस उपयोगकर्ता को पहले ही टीम में आमंत्रित किया जा चुका है ।",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "यह उपयोगकर्ता आपके खाते का हिस्सा होगा, लेकिन उसे इस खाते के सभी वॉल्ट तक पहुंच नहीं मिलेगी, जब तक कि आप उन्हें विशिष्ट पहुंच नहीं देते। यह व्यक्ति तिजोरियाँ भी बनाने में सक्षम होगा।",
   "This will immediately:": "यह तुरंत होगा:",
+  "Threads": "धागे",
   "Three things that happened today": "तीन चीजें जो आज हुईं",
   "Thursday": "गुरुवार",
   "Timezone": "समय क्षेत्र",
@@ -1274,6 +1294,7 @@
   "Translate It": "इसका अनुवाद करें",
   "Transportation": "परिवहन",
   "Tuesday": "मंगलवार",
+  "Twitter": "ट्विटर",
   "Two-factor Confirmation": "दो-कारक पुष्टि",
   "Two Factor Authentication": "दो कारक प्रमाणीकरण",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "दो कारक प्रमाणीकरण अब सक्षम है। अपने फोन के ऑथेंटिकेटर एप्लिकेशन का उपयोग करके निम्नलिखित क्यूआर कोड को स्कैन करें या सेटअप कुंजी दर्ज करें।",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠द्वितीय निवास",
   "🏡 Home": "🏡घर",
   "🏢 Work": "🏢 काम",
+  "📟 Pager": "📟 पेजर",
+  "📠 Fax": "📠 फैक्स",
+  "📱 Mobile": "📱 मोबाइल",
   "🔔 Reminder: :label for :contactName": "🔔 अनुस्मारक: :label के लिए :contactName",
   "😀 Good": "😀 अच्छा",
   "😁 Positive": "😁सकारात्मक",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡नकारात्मक",
   "😩 Awful": "😩 भयानक",
   "😶‍🌫️ Neutral": "😶‍🌫️ तटस्थ",
-  "🥳 Awesome": "🥳 बहुत बढ़िया"
+  "🥳 Awesome": "🥳 बहुत बढ़िया",
+  "🧑🏼 Personal": "🧑🏼 व्यक्तिगत"
 }
