--- a/lang/it.json
+++ b/lang/it.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Sei sicuro? Ciò eliminerà il documento in modo permanente.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Sei sicuro? Ciò eliminerà l’obiettivo e tutte le serie consecutive in modo permanente.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Sei sicuro? Ciò rimuoverà i tipi di indirizzo da tutti i contatti, ma non eliminerà i contatti stessi.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Sei sicuro? Ciò rimuoverà i tipi di informazioni di contatto da tutti i contatti, ma non eliminerà i contatti stessi.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Sei sicuro? Ciò rimuoverà il tipo di informazioni di contatto da tutti i contatti, ma non eliminerà i contatti stessi.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Sei sicuro? Ciò rimuoverà i sessi da tutti i contatti, ma non eliminerà i contatti stessi.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Sei sicuro? Ciò rimuoverà il modello da tutti i contatti, ma non eliminerà i contatti stessi.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Vuoi davvero eliminare questo Team? Una volta eliminato, tutte le sue risorse e i relativi dati verranno eliminati definitivamente.",
@@ -234,6 +234,7 @@
   "Bird": "Uccello",
   "Birthdate": "Data di nascita",
   "Birthday": "Compleanno",
+  "Bluesky": "Bluesky",
   "Body": "Corpo",
   "boss": "capo",
   "Bought": "Comprato",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "Modo attuale di visualizzare i numeri:",
   "Customize how contacts should be displayed": "Personalizza la modalità di visualizzazione dei contatti",
   "Custom name order": "Ordine dei nomi personalizzato",
+  "Custom…": "Costume…",
   "Daily affirmation": "Affermazione quotidiana",
   "Dashboard": "Dashboard",
+  "Data": "Dati",
   "date": "data",
   "Date of the event": "Data dell’evento",
   "Date of the event:": "Data dell’evento:",
@@ -383,6 +386,8 @@
   "Delete": "Elimina",
   "Delete :name": "Cancella :name",
   "Delete Account": "Elimina Account",
+  "Delete a contact information": "Elimina un’informazione di contatto",
+  "Delete a contact information type": "Elimina un tipo di informazione di contatto",
   "Delete a new key": "Elimina una nuova chiave",
   "Delete API Token": "Elimina Token API",
   "Delete contact": "Elimina contatto",
@@ -480,6 +485,7 @@
   "Family": "Famiglia",
   "Family summary": "Riepilogo della famiglia",
   "Favorites": "Preferiti",
+  "Fax": "Fax",
   "Female": "Femmina",
   "File": "File",
   "Files": "File",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Le occasioni regalo ti consentono di classificare tutti i tuoi regali.",
   "Gift states": "Stati del dono",
   "Gift states let you define the various states for your gifts.": "Gli stati dei regali ti consentono di definire i vari stati dei tuoi regali.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Dai un nome a questo indirizzo email",
   "Goals": "Obiettivi",
   "Go back": "Torna indietro",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "I tipi di gruppo ti consentono di raggruppare le persone.",
   "Had a promotion": "Ha avuto una promozione",
   "Hamster": "Criceto",
+  "Hangouts": "Hangouts",
   "Have a great day,": "Vi auguro una buona giornata,",
   "he/him": "lui/lui",
   "Hello!": "Ciao!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "Storico della notifica inviata",
   "Hobbies": "Hobby",
   "Home": "Home",
+  "Home House": "Casa di casa",
   "Horse": "Cavallo",
   "How are you?": "Come stai?",
   "How could I have done this day better?": "Come avrei potuto vivere meglio questa giornata?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "Informazioni da Wikipedia",
   "in love with": "innamorato di",
   "Inspirational post": "Post ispiratore",
+  "Instagram": "Instagram",
+  "Instant messaging": "Messaggistica istantanea",
   "Insufficient Storage": "Spazio insufficiente",
   "Internal Server Error": "Errore interno al server",
   "Introduction": "introduzione",
@@ -618,6 +629,7 @@
   "Just to say hello": "Solo per salutarti",
   "Key name": "Nome chiave",
   "kilometers (km)": "chilometri (km)",
+  "Kind": "Tipo",
   "km": "km",
   "Label:": "Etichetta:",
   "Labels": "Etichette",
@@ -706,6 +718,7 @@
   "miles": "miglia",
   "miles (mi)": "miglia (mi)",
   "Misdirected Request": "Richiesta mal indirizzata",
+  "Mobile": "Mobile",
   "Modules in this page": "Moduli in questa pagina",
   "Monday": "Lunedi",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Tutti i diritti riservati. 2017 — :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "Nessuna etichetta ancora.",
   "No life event types yet.": "Nessun tipo di evento della vita ancora.",
   "Non-Authoritative Information": "Informazione non autorevole",
+  "None": "Nessuno",
   "No notes found.": "Nessuna nota trovata.",
   "No results found": "nessun risultato trovato",
   "No role": "Nessun ruolo",
@@ -798,6 +812,7 @@
   "Other": "Altro",
   "Out of respect and appreciation": "Per rispetto e apprezzamento",
   "Page Expired": "Pagina scaduta",
+  "Pager": "Cercapersone",
   "Pages": "Pagine",
   "Pagination Navigation": "Navigazione della Paginazione",
   "Parent": "Genitore",
@@ -823,6 +838,7 @@
   "Pet category": "Categoria animali domestici",
   "Pets": "Animali domestici",
   "Phone": "Telefono",
+  "Phone number": "Numero di telefono",
   "Photo": "Foto",
   "Photos": "Fotografie",
   "Played basketball": "Giocato a basket",
@@ -1006,6 +1022,7 @@
   "Slices of life": "Spaccati di vita",
   "Small animal": "Piccolo animale",
   "Social": "Sociale",
+  "Social profile": "Profilo sociale",
   "Solve": "Risolvere",
   "Some dates have a special type that we will use in the software to calculate an age.": "Alcune date hanno un tipo speciale che utilizzeremo nel software per calcolare l’età.",
   "So… it works 😼": "Quindi... funziona 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "Termini d’uso del servizio",
   "Test email for Monica": "Prova l’e-mail per Monica",
   "Test email sent!": "Email di prova inviata!",
+  "Text": "Testo",
   "Thanks,": "Grazie,",
   "Thanks for giving Monica a try.": "Grazie per aver dato una possibilità a Monica.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Grazie per esserti iscritto! Prima di iniziare, potresti verificare il tuo indirizzo email facendo clic sul collegamento che ti abbiamo appena inviato via email? Se non hai ricevuto l’e-mail, te ne invieremo volentieri un’altra.",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "Il tipo di indirizzo è stato aggiornato",
   "The call has been created": "La chiamata è stata creata",
   "The call has been deleted": "La chiamata è stata eliminata",
-  "The call has been edited": "La chiamata è stata modificata",
+  "The call has been updated": "La chiamata è stata aggiornata",
   "The call reason has been created": "Il motivo della chiamata è stato creato",
   "The call reason has been deleted": "Il motivo della chiamata è stato eliminato",
   "The call reason has been updated": "Il motivo della chiamata è stato aggiornato",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "Il contatto non appartiene ancora ad alcun gruppo.",
   "The contact has been added": "Il contatto è stato aggiunto",
   "The contact has been deleted": "Il contatto è stato eliminato",
-  "The contact has been edited": "Il contatto è stato modificato",
   "The contact has been removed from the group": "Il contatto è stato rimosso dal gruppo",
+  "The contact has been updated": "Il contatto è stato aggiornato",
   "The contact information has been created": "Le informazioni di contatto sono state create",
   "The contact information has been deleted": "Le informazioni di contatto sono state cancellate",
-  "The contact information has been edited": "Le informazioni di contatto sono state modificate",
+  "The contact information has been updated": "Le informazioni di contatto sono state aggiornate",
   "The contact information type has been created": "Il tipo di informazioni di contatto è stato creato",
   "The contact information type has been deleted": "Il tipo di informazioni di contatto è stato eliminato",
   "The contact information type has been updated": "Il tipo di informazioni di contatto è stato aggiornato",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "I dati forniti non sono validi.",
   "The goal has been created": "L’obiettivo è stato creato",
   "The goal has been deleted": "L’obiettivo è stato eliminato",
-  "The goal has been edited": "L’obiettivo è stato modificato",
+  "The goal has been updated": "L’obiettivo è stato aggiornato",
   "The group has been added": "Il gruppo è stato aggiunto",
   "The group has been deleted": "Il gruppo è stato eliminato",
   "The group has been updated": "Il gruppo è stato aggiornato",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "La metrica della vita è stata aggiornata",
   "The loan has been created": "Il prestito è stato creato",
   "The loan has been deleted": "Il prestito è stato cancellato",
-  "The loan has been edited": "Il prestito è stato modificato",
   "The loan has been settled": "Il prestito è stato saldato",
+  "The loan has been updated": "Il prestito è stato aggiornato",
   "The loan is an object": "Il prestito è un oggetto",
   "The loan is monetary": "Il prestito è monetario",
   "The module has been added": "Il modulo è stato aggiunto",
   "The module has been removed": "Il modulo è stato rimosso",
   "The note has been created": "La nota è stata creata",
   "The note has been deleted": "La nota è stata eliminata",
-  "The note has been edited": "La nota è stata modificata",
+  "The note has been updated": "La nota è stata aggiornata",
   "The notification has been sent": "La notifica è stata inviata",
   "The operation either timed out or was not allowed.": "L’operazione è scaduta o non è stata consentita.",
   "The page has been added": "La pagina è stata aggiunta",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "La categoria degli animali domestici è stata aggiornata",
   "The pet has been added": "L’animale domestico è stato aggiunto",
   "The pet has been deleted": "L’animale è stato eliminato",
-  "The pet has been edited": "L’animale domestico è stato modificato",
+  "The pet has been updated": "L’animale è stato aggiornato",
   "The photo has been added": "La foto è stata aggiunta",
   "The photo has been deleted": "La foto è stata eliminata",
   "The position has been saved": "La posizione è stata salvata",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "Il codice di recupero fornito per l’autenticazione a due fattori non è valido.",
   "There are no active addresses yet.": "Non ci sono ancora indirizzi attivi.",
   "There are no calls logged yet.": "Non ci sono ancora chiamate registrate.",
-  "There are no contact information yet.": "Non ci sono ancora informazioni di contatto.",
+  "There are no contact informations yet.": "Non ci sono ancora informazioni di contatto.",
+  "There are no contact information types yet.": "Non ci sono ancora tipi di informazioni di contatto.",
   "There are no documents yet.": "Non ci sono ancora documenti.",
   "There are no events on that day, future or past.": "Non ci sono eventi in quel giorno, futuri o passati.",
   "There are no files yet.": "Non ci sono ancora file.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "La religione è stata aggiornata",
   "The reminder has been created": "Il promemoria è stato creato",
   "The reminder has been deleted": "Il promemoria è stato eliminato",
-  "The reminder has been edited": "Il promemoria è stato modificato",
+  "The reminder has been updated": "Il promemoria è stato aggiornato",
   "The response is not a streamed response.": "La risposta non è una risposta in streaming.",
   "The response is not a view.": "La risposta non è una visione.",
   "The role has been created": "Il ruolo è stato creato",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "L’etichetta è stata aggiornata",
   "The task has been created": "L’attività è stata creata",
   "The task has been deleted": "L’attività è stata eliminata",
-  "The task has been edited": "L’attività è stata modificata",
+  "The task has been updated": "L’attività è stata aggiornata",
   "The team's name and owner information.": "Il nome del team e le informazioni sul proprietario.",
   "The Telegram channel has been deleted": "Il canale Telegram è stato cancellato",
   "The template has been created": "Il modello è stato creato",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "Questo utente è stato già invitato nel team.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Questo utente farà parte del tuo account, ma non avrà accesso a tutte le casseforti in questo account a meno che tu non fornisca loro un accesso specifico. Questa persona sarà anche in grado di creare depositi.",
   "This will immediately:": "Ciò consentirà immediatamente:",
+  "Threads": "Discussioni",
   "Three things that happened today": "Tre cose accadute oggi",
   "Thursday": "Giovedì",
   "Timezone": "Fuso orario",
@@ -1274,6 +1294,7 @@
   "Translate It": "Traducilo",
   "Transportation": "Trasporti",
   "Tuesday": "Martedì",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "Conferma a due fattori",
   "Two Factor Authentication": "Autenticazione a due fattori",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "L’autenticazione a due fattori è stata attivata. Scansiona il QR code seguente usando l’app di autenticazione sul tuo cellulare oppure scrivi il codice di configurazione.",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 Residenza secondaria",
   "🏡 Home": "🏡 Casa",
   "🏢 Work": "🏢 Lavoro",
+  "📟 Pager": "📟 Pager",
+  "📠 Fax": "📠 Fax",
+  "📱 Mobile": "📱 Mobile",
   "🔔 Reminder: :label for :contactName": "🔔 Promemoria: :label per :contactName",
   "😀 Good": "😀 Bene",
   "😁 Positive": "😁 Positivo",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 Negativo",
   "😩 Awful": "😩 Terribile",
   "😶‍🌫️ Neutral": "😶‍🌫️ Neutrale",
-  "🥳 Awesome": "🥳 Fantastico"
+  "🥳 Awesome": "🥳 Fantastico",
+  "🧑🏼 Personal": "🧑🏼 personale"
 }
