--- a/lang/ja.json
+++ b/lang/ja.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "本気ですか？これにより、ドキュメントが完全に削除されます。",
   "Are you sure? This will delete the goal and all the streaks permanently.": "本気ですか？これにより、ゴールとすべてのストリークが完全に削除されます。",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "本気ですか？これにより、すべての連絡先からアドレスの種類が削除されますが、連絡先自体は削除されません。",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "本気ですか？これにより、すべての連絡先から連絡先情報の種類が削除されますが、連絡先自体は削除されません。",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "本気ですか？これにより、すべての連絡先から連絡先情報タイプが削除されますが、連絡先自体は削除されません。",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "本気ですか？これにより、すべての連絡先から性別が削除されますが、連絡先自体は削除されません。",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "本気ですか？これにより、すべての連絡先からテンプレートが削除されますが、連絡先自体は削除されません。",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "チームを削除しますか？ チームを削除すると、全てのデータが完全に削除されます。",
@@ -234,6 +234,7 @@
   "Bird": "鳥",
   "Birthdate": "生年月日",
   "Birthday": "誕生日",
+  "Bluesky": "ブルースキー",
   "Body": "体",
   "boss": "ボス",
   "Bought": "買った",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "現在の数値の表示方法:",
   "Customize how contacts should be displayed": "連絡先の表示方法をカスタマイズする",
   "Custom name order": "カスタム名の順序",
+  "Custom…": "カスタム…",
   "Daily affirmation": "毎日のアファーメーション",
   "Dashboard": "ダッシュボード",
+  "Data": "データ",
   "date": "日付",
   "Date of the event": "イベントの日付",
   "Date of the event:": "イベントの日付:",
@@ -383,6 +386,8 @@
   "Delete": "削除",
   "Delete :name": ":nameを削除",
   "Delete Account": "アカウント削除",
+  "Delete a contact information": "連絡先情報を削除します",
+  "Delete a contact information type": "連絡先情報タイプを削除します",
   "Delete a new key": "新しいキーを削除する",
   "Delete API Token": "APIトークン削除",
   "Delete contact": "連絡先を削除する",
@@ -480,6 +485,7 @@
   "Family": "家族",
   "Family summary": "家族の概要",
   "Favorites": "お気に入り",
+  "Fax": "ファックス",
   "Female": "女性",
   "File": "ファイル",
   "Files": "ファイル",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "ギフト機会では、すべてのギフトを分類できます。",
   "Gift states": "ギフトの状態",
   "Gift states let you define the various states for your gifts.": "ギフトの状態を使用すると、ギフトのさまざまな状態を定義できます。",
+  "GitHub": "github",
   "Give this email address a name": "このメールアドレスに名前を付けてください",
   "Goals": "目標",
   "Go back": "戻る",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "グループ タイプを使用すると、人々をグループ化できます。",
   "Had a promotion": "昇進がありました",
   "Hamster": "ハムスター",
+  "Hangouts": "ハングアウト",
   "Have a great day,": "すてきな一日を、",
   "he/him": "彼/彼",
   "Hello!": "こんにちは",
@@ -548,6 +556,7 @@
   "History of the notification sent": "送信された通知の履歴",
   "Hobbies": "趣味",
   "Home": "ホーム",
+  "Home House": "ホームハウス",
   "Horse": "馬",
   "How are you?": "元気ですか？",
   "How could I have done this day better?": "この日をどうすればもっと良くできたでしょうか？",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "ウィキペディアからの情報",
   "in love with": "恋してる",
   "Inspirational post": "インスピレーションを与える投稿",
+  "Instagram": "Instagram",
+  "Instant messaging": "インスタントメッセージング",
   "Insufficient Storage": "ストレージ不足",
   "Internal Server Error": "内部サーバーエラー",
   "Introduction": "導入",
@@ -618,6 +629,7 @@
   "Just to say hello": "ただ挨拶するために",
   "Key name": "キー名",
   "kilometers (km)": "キロメートル (km)",
+  "Kind": "親切",
   "km": "km",
   "Label:": "ラベル：",
   "Labels": "ラベル",
@@ -706,6 +718,7 @@
   "miles": "マイル",
   "miles (mi)": "マイル (mi)",
   "Misdirected Request": "誤ったリクエスト",
+  "Mobile": "携帯",
   "Modules in this page": "このページのモジュール",
   "Monday": "月曜日",
   "Monica. All rights reserved. 2017 — :date.": "Monica。無断転載を禁じます。 2017 — :date。",
@@ -751,6 +764,7 @@
   "No labels yet.": "まだラベルがありません。",
   "No life event types yet.": "ライフ イベント タイプはまだありません。",
   "Non-Authoritative Information": "信頼できない情報",
+  "None": "なし",
   "No notes found.": "メモが見つかりませんでした。",
   "No results found": "結果が見つかりません",
   "No role": "役割なし",
@@ -798,6 +812,7 @@
   "Other": "他の",
   "Out of respect and appreciation": "敬意と感謝の気持ちから",
   "Page Expired": "ページが無効です",
+  "Pager": "ページャ",
   "Pages": "ページ",
   "Pagination Navigation": "ページネーション",
   "Parent": "親",
@@ -823,6 +838,7 @@
   "Pet category": "ペットカテゴリー",
   "Pets": "ペット",
   "Phone": "電話",
+  "Phone number": "電話番号",
   "Photo": "写真",
   "Photos": "写真",
   "Played basketball": "バスケットボールをした",
@@ -1006,6 +1022,7 @@
   "Slices of life": "人生の断片",
   "Small animal": "小動物",
   "Social": "社交",
+  "Social profile": "ソーシャルプロファイル",
   "Solve": "解決",
   "Some dates have a special type that we will use in the software to calculate an age.": "一部の日付には、ソフトウェアで年齢を計算するために使用する特別なタイプがあります。",
   "So… it works 😼": "それで…うまくいきます 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "利用規約",
   "Test email for Monica": "Monicaのテストメール",
   "Test email sent!": "テストメールを送信しました!",
+  "Text": "文章",
   "Thanks,": "ありがとう、",
   "Thanks for giving Monica a try.": "Monicaを試してくれてありがとう。",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "ご登録いただきありがとうございます!始める前に、先ほどメールでお送りしたリンクをクリックして、メール アドレスを確認していただけますか?メールが届かない場合は、喜んで別のメールをお送りいたします。",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "住所タイプが更新されました",
   "The call has been created": "通話が作成されました",
   "The call has been deleted": "通話は削除されました",
-  "The call has been edited": "通話は編集されました",
+  "The call has been updated": "通話が更新されました",
   "The call reason has been created": "通話理由が作成されました",
   "The call reason has been deleted": "通話理由が削除されました",
   "The call reason has been updated": "通話理由が更新されました",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "連絡先はまだどのグループにも属していません。",
   "The contact has been added": "連絡先が追加されました",
   "The contact has been deleted": "連絡先が削除されました",
-  "The contact has been edited": "連絡先が編集されました",
   "The contact has been removed from the group": "連絡先がグループから削除されました",
+  "The contact has been updated": "連絡先が更新されました",
   "The contact information has been created": "連絡先情報が作成されました",
   "The contact information has been deleted": "連絡先情報が削除されました",
-  "The contact information has been edited": "連絡先情報が編集されました",
+  "The contact information has been updated": "連絡先情報が更新されました",
   "The contact information type has been created": "連絡先情報タイプが作成されました",
   "The contact information type has been deleted": "連絡先情報の種類が削除されました",
   "The contact information type has been updated": "連絡先情報のタイプが更新されました",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "指定されたデータは無効でした。",
   "The goal has been created": "目標が作成されました",
   "The goal has been deleted": "ゴールは削除されました",
-  "The goal has been edited": "目標が編集されました",
+  "The goal has been updated": "目標が更新されました",
   "The group has been added": "グループが追加されました",
   "The group has been deleted": "グループが削除されました",
   "The group has been updated": "グループが更新されました",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "ライフメトリクスが更新されました",
   "The loan has been created": "ローンが作成されました",
   "The loan has been deleted": "借金は削除されました",
-  "The loan has been edited": "ローンが編集されました",
   "The loan has been settled": "借金は完済しました",
+  "The loan has been updated": "ローンが更新されました",
   "The loan is an object": "ローンは対象物です",
   "The loan is monetary": "借金は金銭的なものです",
   "The module has been added": "モジュールが追加されました",
   "The module has been removed": "モジュールが削除されました",
   "The note has been created": "ノートが作成されました",
   "The note has been deleted": "メモは削除されました",
-  "The note has been edited": "メモが編集されました",
+  "The note has been updated": "メモが更新されました",
   "The notification has been sent": "通知が送信されました",
   "The operation either timed out or was not allowed.": "操作がタイムアウトしたか、許可されませんでした。",
   "The page has been added": "ページが追加されました",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "ペットカテゴリーを更新しました",
   "The pet has been added": "ペットが追加されました",
   "The pet has been deleted": "ペットは削除されました",
-  "The pet has been edited": "ペットが編集されました",
+  "The pet has been updated": "ペットが更新されました",
   "The photo has been added": "写真が追加されました",
   "The photo has been deleted": "写真は削除されました",
   "The position has been saved": "位置が保存されました",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "二要素認証のリカバリーコードが無効です。",
   "There are no active addresses yet.": "アクティブなアドレスはまだありません。",
   "There are no calls logged yet.": "まだ通話は記録されていません。",
-  "There are no contact information yet.": "連絡先情報はまだありません。",
+  "There are no contact informations yet.": "連絡先情報はまだありません。",
+  "There are no contact information types yet.": "連絡先情報はまだありません。",
   "There are no documents yet.": "まだ書類はありません。",
   "There are no events on that day, future or past.": "その日、未来にも過去にも出来事はありません。",
   "There are no files yet.": "まだファイルがありません。",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "宗教が更新されました",
   "The reminder has been created": "リマインダーが作成されました",
   "The reminder has been deleted": "リマインダーが削除されました",
-  "The reminder has been edited": "リマインダーが編集されました",
+  "The reminder has been updated": "リマインダーが更新されました",
   "The response is not a streamed response.": "レスポンスは、ストリーミング形式ではありません。",
   "The response is not a view.": "レスポンスは、ビューではありません。",
   "The role has been created": "ロールが作成されました",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "タグ更新されました",
   "The task has been created": "タスクが作成されました",
   "The task has been deleted": "タスクは削除されました",
-  "The task has been edited": "タスクが編集されました",
+  "The task has been updated": "タスクが更新されました",
   "The team's name and owner information.": "チーム名とオーナー情報",
   "The Telegram channel has been deleted": "Telegram チャンネルが削除されました",
   "The template has been created": "テンプレートが作成されました",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "このユーザーは既にチームに招待されています。",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "このユーザーはあなたのアカウントの一部になりますが、特定のアクセス権を付与しない限り、このアカウント内のすべてのコンテナーにアクセスできるわけではありません。この人は Vault を作成することもできます。",
   "This will immediately:": "これにより、すぐに次のことが行われます。",
+  "Threads": "スレッド",
   "Three things that happened today": "今日あった３つのこと",
   "Thursday": "木曜日",
   "Timezone": "タイムゾーン",
@@ -1274,6 +1294,7 @@
   "Translate It": "翻訳してください",
   "Transportation": "交通機関",
   "Tuesday": "火曜日",
+  "Twitter": "ツイッター",
   "Two-factor Confirmation": "二要素確認",
   "Two Factor Authentication": "二要素認証",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "二要素認証が有効になりました。 お使いの携帯電話の認証アプリを使用して、QRコードをスキャンするか、セットアップキーを入力します。",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 二次住居",
   "🏡 Home": "🏡 ホーム",
   "🏢 Work": "🏢 仕事",
+  "📟 Pager": "pagerページャー",
+  "📠 Fax": "faxファックス",
+  "📱 Mobile": "mobileモバイル",
   "🔔 Reminder: :label for :contactName": "🔔 リマインダー: :contactName の :label",
   "😀 Good": "😀 いいですね",
   "😁 Positive": "😁 ポジティブ",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 ネガティブ",
   "😩 Awful": "😩 ひどい",
   "😶‍🌫️ Neutral": "😶‍🌫️中立",
-  "🥳 Awesome": "🥳 素晴らしい"
+  "🥳 Awesome": "🥳 素晴らしい",
+  "🧑🏼 Personal": "🧑🏼個人"
 }
