--- a/lang/ml.json
+++ b/lang/ml.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "നിങ്ങൾക്ക് ഉറപ്പാണോ? ഇത് പ്രമാണത്തെ ശാശ്വതമായി ഇല്ലാതാക്കും.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "നിങ്ങൾക്ക് ഉറപ്പാണോ? ഇത് ലക്ഷ്യവും എല്ലാ സ്ട്രീക്കുകളും ശാശ്വതമായി ഇല്ലാതാക്കും.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "നിങ്ങൾക്ക് ഉറപ്പാണോ? ഇത് എല്ലാ കോൺടാക്റ്റുകളിൽ നിന്നും വിലാസ തരങ്ങളെ നീക്കം ചെയ്യും, എന്നാൽ കോൺടാക്റ്റുകൾ തന്നെ ഇല്ലാതാക്കില്ല.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "നിങ്ങൾക്ക് ഉറപ്പാണോ? ഇത് എല്ലാ കോൺടാക്റ്റുകളിൽ നിന്നും കോൺടാക്റ്റ് വിവര തരങ്ങളെ നീക്കം ചെയ്യും, എന്നാൽ കോൺടാക്റ്റുകൾ തന്നെ ഇല്ലാതാക്കില്ല.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "നിങ്ങൾക്ക് ഉറപ്പാണോ? ഇത് എല്ലാ കോൺടാക്റ്റുകളിൽ നിന്നും കോൺടാക്റ്റ് വിവര തരം നീക്കംചെയ്യും, പക്ഷേ കോൺടാക്റ്റുകൾ സ്വയം ഇല്ലാതാക്കില്ല.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "നിങ്ങൾക്ക് ഉറപ്പാണോ? ഇത് എല്ലാ കോൺടാക്റ്റുകളിൽ നിന്നും ലിംഗഭേദം നീക്കം ചെയ്യും, എന്നാൽ കോൺടാക്റ്റുകൾ സ്വയം ഇല്ലാതാക്കില്ല.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "നിങ്ങൾക്ക് ഉറപ്പാണോ? ഇത് എല്ലാ കോൺടാക്റ്റുകളിൽ നിന്നും ടെംപ്ലേറ്റ് നീക്കംചെയ്യും, എന്നാൽ കോൺടാക്റ്റുകൾ തന്നെ ഇല്ലാതാക്കില്ല.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "ഈ ടീമിനെ ഇല്ലാതാക്കണമെന്ന് തീർച്ചയാണോ? ഒരു ടീം ഇല്ലാതാക്കിയാൽ, അതിന്റെ എല്ലാ ഉറവിടങ്ങളും ഡാറ്റയും ശാശ്വതമായി ഇല്ലാതാക്കപ്പെടും.",
@@ -234,6 +234,7 @@
   "Bird": "പക്ഷി",
   "Birthdate": "ജനനത്തീയതി",
   "Birthday": "ജന്മദിനം",
+  "Bluesky": "ബ്ലൂസ്കി",
   "Body": "ശരീരം",
   "boss": "മുതലാളി",
   "Bought": "വാങ്ങി",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "അക്കങ്ങൾ പ്രദർശിപ്പിക്കുന്നതിനുള്ള നിലവിലെ രീതി:",
   "Customize how contacts should be displayed": "കോൺടാക്റ്റുകൾ എങ്ങനെ പ്രദർശിപ്പിക്കണമെന്ന് ഇഷ്ടാനുസൃതമാക്കുക",
   "Custom name order": "ഇഷ്‌ടാനുസൃത നാമ ക്രമം",
+  "Custom…": "ഇഷ്ടാനുസൃത ...",
   "Daily affirmation": "പ്രതിദിന സ്ഥിരീകരണം",
   "Dashboard": "ഡാഷ്ബോർഡ്",
+  "Data": "അടിസ്ഥാനവിവരം",
   "date": "തീയതി",
   "Date of the event": "പരിപാടിയുടെ തീയതി",
   "Date of the event:": "ഇവന്റിന്റെ തീയതി:",
@@ -383,6 +386,8 @@
   "Delete": "ഇല്ലാതാക്കുക",
   "Delete :name": ":name ഇല്ലാതാക്കുക",
   "Delete Account": "അക്കൗണ്ട് ഇല്ലാതാക്കുക",
+  "Delete a contact information": "ഒരു കോൺടാക്റ്റ് വിവരങ്ങൾ ഇല്ലാതാക്കുക",
+  "Delete a contact information type": "ഒരു കോൺടാക്റ്റ് വിവര തരം ഇല്ലാതാക്കുക",
   "Delete a new key": "ഒരു പുതിയ കീ ഇല്ലാതാക്കുക",
   "Delete API Token": "API ടോക്കൺ ഇല്ലാതാക്കുക",
   "Delete contact": "കോൺടാക്റ്റ് ഇല്ലാതാക്കുക",
@@ -480,6 +485,7 @@
   "Family": "കുടുംബം",
   "Family summary": "കുടുംബ സംഗ്രഹം",
   "Favorites": "പ്രിയപ്പെട്ടവ",
+  "Fax": "ഫാക്സ്",
   "Female": "സ്ത്രീ",
   "File": "ഫയൽ",
   "Files": "ഫയലുകൾ",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "നിങ്ങളുടെ എല്ലാ സമ്മാനങ്ങളും തരംതിരിക്കാൻ സമ്മാന അവസരങ്ങൾ നിങ്ങളെ അനുവദിക്കുന്നു.",
   "Gift states": "സമ്മാനം സംസ്ഥാനങ്ങൾ",
   "Gift states let you define the various states for your gifts.": "നിങ്ങളുടെ സമ്മാനങ്ങൾക്കായി വിവിധ സംസ്ഥാനങ്ങൾ നിർവചിക്കാൻ ഗിഫ്റ്റ് സ്റ്റേറ്റുകൾ നിങ്ങളെ അനുവദിക്കുന്നു.",
+  "GitHub": "GitHub",
   "Give this email address a name": "ഈ ഇമെയിൽ വിലാസത്തിന് ഒരു പേര് നൽകുക",
   "Goals": "ലക്ഷ്യങ്ങൾ",
   "Go back": "മടങ്ങിപ്പോവുക",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "ഗ്രൂപ്പ് തരങ്ങൾ ആളുകളെ ഒരുമിച്ച് കൂട്ടാൻ നിങ്ങളെ അനുവദിക്കുന്നു.",
   "Had a promotion": "ഒരു പ്രമോഷൻ ഉണ്ടായിരുന്നു",
   "Hamster": "ഹാംസ്റ്റർ",
+  "Hangouts": "Hangouts",
   "Have a great day,": "നല്ലൊരു ദിനം ആശംസിക്കുന്നു,",
   "he/him": "അവൻ/അവൻ",
   "Hello!": "ഹലോ!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "അയച്ച അറിയിപ്പിന്റെ ചരിത്രം",
   "Hobbies": "ഹോബികൾ",
   "Home": "വീട്",
+  "Home House": "ഹോം ഹ House സ്",
   "Horse": "കുതിര",
   "How are you?": "സുഖമാണോ?",
   "How could I have done this day better?": "ഈ ദിവസം എനിക്ക് എങ്ങനെ മികച്ചതാക്കാമായിരുന്നു?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "വിക്കിപീഡിയയിൽ നിന്നുള്ള വിവരങ്ങൾ",
   "in love with": "പ്രണയത്തിലാണ്",
   "Inspirational post": "പ്രചോദനാത്മകമായ പോസ്റ്റ്",
+  "Instagram": "ഇൻസ്റ്റാഗ്രാം",
+  "Instant messaging": "തൽക്ഷണ സന്ദേശമയയ്ക്കൽ",
   "Insufficient Storage": "അപര്യാപ്തമായ സംഭരണം",
   "Internal Server Error": "ഇന്റേർണൽ സെർവർ പിശക്",
   "Introduction": "ആമുഖം",
@@ -618,6 +629,7 @@
   "Just to say hello": "ഹലോ പറയാൻ മാത്രം",
   "Key name": "പ്രധാന നാമം",
   "kilometers (km)": "കിലോമീറ്റർ (കി.മീ.)",
+  "Kind": "തരം",
   "km": "കി.മീ",
   "Label:": "ലേബൽ:",
   "Labels": "ലേബലുകൾ",
@@ -706,6 +718,7 @@
   "miles": "മൈലുകൾ",
   "miles (mi)": "മൈൽ (മൈൽ)",
   "Misdirected Request": "തെറ്റായ അഭ്യർത്ഥന",
+  "Mobile": "ഇളക്കാവുന്ന",
   "Modules in this page": "ഈ പേജിലെ മൊഡ്യൂളുകൾ",
   "Monday": "തിങ്കളാഴ്ച",
   "Monica. All rights reserved. 2017 — :date.": "Monica. എല്ലാ അവകാശങ്ങളും നിക്ഷിപ്തം. 2017 — :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "ഇതുവരെ ലേബലുകളൊന്നുമില്ല.",
   "No life event types yet.": "ഇതുവരെ ജീവിത സംഭവങ്ങളുടെ തരങ്ങളൊന്നുമില്ല.",
   "Non-Authoritative Information": "ആധികാരികമല്ലാത്ത വിവരങ്ങൾ",
+  "None": "ഒന്നുമല്ലാത്തത്",
   "No notes found.": "കുറിപ്പുകളൊന്നും കണ്ടെത്തിയില്ല.",
   "No results found": "ഒരു ഫലവും കണ്ടെത്താനായില്ല",
   "No role": "വേഷമില്ല",
@@ -798,6 +812,7 @@
   "Other": "മറ്റുള്ളവ",
   "Out of respect and appreciation": "ബഹുമാനവും അഭിനന്ദനവും കാരണം",
   "Page Expired": "പേജ് കാലഹരണപ്പെട്ടു",
+  "Pager": "കടധകർച്ച",
   "Pages": "പേജുകൾ",
   "Pagination Navigation": "പേജിനേഷൻ നാവിഗേഷൻ",
   "Parent": "രക്ഷിതാവ്",
@@ -823,6 +838,7 @@
   "Pet category": "വളർത്തുമൃഗങ്ങളുടെ വിഭാഗം",
   "Pets": "വളർത്തുമൃഗങ്ങൾ",
   "Phone": "ഫോൺ",
+  "Phone number": "ഫോൺ നമ്പർ",
   "Photo": "ഫോട്ടോ",
   "Photos": "ഫോട്ടോകൾ",
   "Played basketball": "ബാസ്കറ്റ്ബോൾ കളിച്ചു",
@@ -1006,6 +1022,7 @@
   "Slices of life": "ജീവിതത്തിന്റെ കഷ്ണങ്ങൾ",
   "Small animal": "ചെറിയ മൃഗം",
   "Social": "സാമൂഹിക",
+  "Social profile": "സാമൂഹിക പ്രൊഫൈൽ",
   "Solve": "പരിഹരിക്കുക",
   "Some dates have a special type that we will use in the software to calculate an age.": "ചില തീയതികൾക്ക് ഒരു പ്രത്യേക തരം ഉണ്ട്, അത് ഒരു പ്രായം കണക്കാക്കാൻ ഞങ്ങൾ സോഫ്റ്റ്വെയറിൽ ഉപയോഗിക്കും.",
   "So… it works 😼": "അങ്ങനെ... അത് പ്രവർത്തിക്കുന്നു 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "സേവന നിബന്ധനകൾ",
   "Test email for Monica": "Monicaയുടെ ഇമെയിൽ പരീക്ഷിക്കുക",
   "Test email sent!": "ടെസ്റ്റ് ഇമെയിൽ അയച്ചു!",
+  "Text": "മൂലഗന്ഥം",
   "Thanks,": "നന്ദി,",
   "Thanks for giving Monica a try.": "Monica ശ്രമിച്ചതിന് നന്ദി.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "സൈൻ അപ്പ് ചെയ്തതിന് നന്ദി! ആരംഭിക്കുന്നതിന് മുമ്പ്, ഞങ്ങൾ നിങ്ങൾക്ക് ഇമെയിൽ അയച്ച ലിങ്കിൽ ക്ലിക്കുചെയ്ത് നിങ്ങളുടെ ഇമെയിൽ വിലാസം പരിശോധിക്കാമോ? നിങ്ങൾക്ക് ഇമെയിൽ ലഭിച്ചില്ലെങ്കിൽ, ഞങ്ങൾ നിങ്ങൾക്ക് സന്തോഷത്തോടെ മറ്റൊന്ന് അയയ്ക്കും.",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "വിലാസ തരം അപ്ഡേറ്റ് ചെയ്തു",
   "The call has been created": "കോൾ സൃഷ്ടിച്ചു",
   "The call has been deleted": "കോൾ ഇല്ലാതാക്കി",
-  "The call has been edited": "കോൾ എഡിറ്റ് ചെയ്തു",
+  "The call has been updated": "കോൾ അപ്ഡേറ്റുചെയ്തു",
   "The call reason has been created": "കോൾ കാരണം സൃഷ്ടിച്ചു",
   "The call reason has been deleted": "കോളിന്റെ കാരണം ഇല്ലാതാക്കി",
   "The call reason has been updated": "കോൾ കാരണം അപ്ഡേറ്റ് ചെയ്തു",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "കോൺടാക്റ്റ് ഇതുവരെ ഒരു ഗ്രൂപ്പിലും ഉൾപ്പെട്ടിട്ടില്ല.",
   "The contact has been added": "കോൺടാക്റ്റ് ചേർത്തു",
   "The contact has been deleted": "കോൺടാക്റ്റ് ഇല്ലാതാക്കി",
-  "The contact has been edited": "കോൺടാക്റ്റ് എഡിറ്റ് ചെയ്തു",
   "The contact has been removed from the group": "കോൺടാക്റ്റ് ഗ്രൂപ്പിൽ നിന്ന് നീക്കം ചെയ്തു",
+  "The contact has been updated": "കോൺടാക്റ്റ് അപ്ഡേറ്റുചെയ്തു",
   "The contact information has been created": "ബന്ധപ്പെടാനുള്ള വിവരങ്ങൾ സൃഷ്ടിച്ചു",
   "The contact information has been deleted": "ബന്ധപ്പെടാനുള്ള വിവരങ്ങൾ ഇല്ലാതാക്കി",
-  "The contact information has been edited": "ബന്ധപ്പെടാനുള്ള വിവരങ്ങൾ എഡിറ്റ് ചെയ്തിട്ടുണ്ട്",
+  "The contact information has been updated": "കോൺടാക്റ്റ് വിവരങ്ങൾ അപ്ഡേറ്റുചെയ്തു",
   "The contact information type has been created": "ബന്ധപ്പെടാനുള്ള വിവര തരം സൃഷ്ടിച്ചു",
   "The contact information type has been deleted": "ബന്ധപ്പെടാനുള്ള വിവര തരം ഇല്ലാതാക്കി",
   "The contact information type has been updated": "ബന്ധപ്പെടാനുള്ള വിവര തരം അപ്ഡേറ്റ് ചെയ്തു",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "നൽകിയ ഡാറ്റ അസാധുവാണ്.",
   "The goal has been created": "ലക്ഷ്യം സൃഷ്ടിച്ചു",
   "The goal has been deleted": "ലക്ഷ്യം ഇല്ലാതാക്കി",
-  "The goal has been edited": "ലക്ഷ്യം തിരുത്തിയിട്ടുണ്ട്",
+  "The goal has been updated": "ലക്ഷ്യം അപ്ഡേറ്റുചെയ്തു",
   "The group has been added": "ഗ്രൂപ്പ് ചേർത്തിട്ടുണ്ട്",
   "The group has been deleted": "ഗ്രൂപ്പ് ഇല്ലാതാക്കി",
   "The group has been updated": "ഗ്രൂപ്പ് അപ്ഡേറ്റ് ചെയ്തിട്ടുണ്ട്",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "ലൈഫ് മെട്രിക് അപ്ഡേറ്റ് ചെയ്തു",
   "The loan has been created": "വായ്പ സൃഷ്ടിച്ചു",
   "The loan has been deleted": "വായ്പ ഇല്ലാതാക്കി",
-  "The loan has been edited": "ലോൺ എഡിറ്റ് ചെയ്തിട്ടുണ്ട്",
   "The loan has been settled": "ലോൺ അടച്ചു തീർത്തു",
+  "The loan has been updated": "വായ്പ അപ്ഡേറ്റുചെയ്തു",
   "The loan is an object": "വായ്പ ഒരു വസ്തുവാണ്",
   "The loan is monetary": "വായ്പ പണമാണ്",
   "The module has been added": "മൊഡ്യൂൾ ചേർത്തു",
   "The module has been removed": "മൊഡ്യൂൾ നീക്കം ചെയ്തു",
   "The note has been created": "കുറിപ്പ് തയ്യാറാക്കിയിട്ടുണ്ട്",
   "The note has been deleted": "കുറിപ്പ് ഇല്ലാതാക്കി",
-  "The note has been edited": "കുറിപ്പ് തിരുത്തിയിട്ടുണ്ട്",
+  "The note has been updated": "കുറിപ്പ് അപ്ഡേറ്റുചെയ്തു",
   "The notification has been sent": "അറിയിപ്പ് അയച്ചിട്ടുണ്ട്",
   "The operation either timed out or was not allowed.": "ഓപ്പറേഷൻ സമയം കഴിഞ്ഞു അല്ലെങ്കിൽ അനുവദിച്ചില്ല.",
   "The page has been added": "പേജ് ചേർത്തു",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "വളർത്തുമൃഗങ്ങളുടെ വിഭാഗം അപ്‌ഡേറ്റ് ചെയ്‌തു",
   "The pet has been added": "വളർത്തുമൃഗത്തെ ചേർത്തു",
   "The pet has been deleted": "വളർത്തുമൃഗത്തെ ഇല്ലാതാക്കി",
-  "The pet has been edited": "പെറ്റ് എഡിറ്റ് ചെയ്തിട്ടുണ്ട്",
+  "The pet has been updated": "വളർത്തുമൃഗങ്ങൾ അപ്ഡേറ്റുചെയ്തു",
   "The photo has been added": "ഫോട്ടോ ചേർത്തിട്ടുണ്ട്",
   "The photo has been deleted": "ഫോട്ടോ ഇല്ലാതാക്കി",
   "The position has been saved": "സ്ഥാനം രക്ഷപ്പെട്ടു",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "നൽകിയിരിക്കുന്ന രണ്ട് ഫാക്ടർ വീണ്ടെടുക്കൽ കോഡ് അസാധുവാണ്.",
   "There are no active addresses yet.": "ഇതുവരെ സജീവമായ വിലാസങ്ങളൊന്നുമില്ല.",
   "There are no calls logged yet.": "ഇതുവരെ കോളുകളൊന്നും ലോഗ് ചെയ്തിട്ടില്ല.",
-  "There are no contact information yet.": "ഇതുവരെ ബന്ധപ്പെടാനുള്ള വിവരങ്ങളൊന്നുമില്ല.",
+  "There are no contact informations yet.": "ഇതുവരെ ബന്ധപ്പെടാനുള്ള വിവരങ്ങളൊന്നുമില്ല.",
+  "There are no contact information types yet.": "കോൺടാക്റ്റ് വിവര തരങ്ങളൊന്നുമില്ല.",
   "There are no documents yet.": "ഇതുവരെ രേഖകളൊന്നുമില്ല.",
   "There are no events on that day, future or past.": "ആ ദിവസമോ ഭാവിയിലോ ഭൂതകാലത്തിലോ സംഭവങ്ങളൊന്നുമില്ല.",
   "There are no files yet.": "ഇതുവരെ ഫയലുകളൊന്നുമില്ല.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "മതം നവീകരിച്ചു",
   "The reminder has been created": "റിമൈൻഡർ സൃഷ്ടിച്ചു",
   "The reminder has been deleted": "റിമൈൻഡർ ഇല്ലാതാക്കി",
-  "The reminder has been edited": "റിമൈൻഡർ എഡിറ്റ് ചെയ്തു",
+  "The reminder has been updated": "ഓർമ്മപ്പെടുത്തൽ അപ്ഡേറ്റുചെയ്തു",
   "The response is not a streamed response.": "പ്രതികരണം സ്ട്രീം ചെയ്ത പ്രതികരണമല്ല.",
   "The response is not a view.": "പ്രതികരണം കാഴ്ചയല്ല.",
   "The role has been created": "റോൾ സൃഷ്ടിച്ചു",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "ടാഗ് അപ്ഡേറ്റ് ചെയ്തു",
   "The task has been created": "ചുമതല സൃഷ്ടിച്ചു",
   "The task has been deleted": "ചുമതല ഇല്ലാതാക്കി",
-  "The task has been edited": "ചുമതല എഡിറ്റ് ചെയ്തു",
+  "The task has been updated": "ചുമതല അപ്ഡേറ്റുചെയ്തു",
   "The team's name and owner information.": "ടീമിന്റെ പേരും ഉടമയുടെ വിവരങ്ങളും.",
   "The Telegram channel has been deleted": "ടെലിഗ്രാം ചാനൽ ഇല്ലാതാക്കി",
   "The template has been created": "ടെംപ്ലേറ്റ് സൃഷ്ടിച്ചു",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "ഈ ഉപയോക്താവിനെ ഇതിനകം ടീമിലേക്ക് ക്ഷണിച്ചു.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "ഈ ഉപയോക്താവ് നിങ്ങളുടെ അക്കൗണ്ടിന്റെ ഭാഗമായിരിക്കും, എന്നാൽ നിങ്ങൾ അവർക്ക് പ്രത്യേക ആക്‌സസ് നൽകിയില്ലെങ്കിൽ ഈ അക്കൗണ്ടിലെ എല്ലാ നിലവറകളിലേക്കും ആക്‌സസ് ലഭിക്കില്ല. ഈ വ്യക്തിക്ക് നിലവറകൾ സൃഷ്ടിക്കാനും കഴിയും.",
   "This will immediately:": "ഇത് ഉടനടി ചെയ്യും:",
+  "Threads": "ത്രെഡുകൾ",
   "Three things that happened today": "ഇന്ന് നടന്ന മൂന്ന് കാര്യങ്ങൾ",
   "Thursday": "വ്യാഴാഴ്ച",
   "Timezone": "സമയ മേഖല",
@@ -1274,6 +1294,7 @@
   "Translate It": "ഇത് വിവർത്തനം ചെയ്യുക",
   "Transportation": "ഗതാഗതം",
   "Tuesday": "ചൊവ്വാഴ്ച",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "രണ്ട്-ഘടക സ്ഥിരീകരണം",
   "Two Factor Authentication": "രണ്ട് ഫാക്ടർ ആധികാരികത",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "രണ്ട് ഘടകം പ്രാമാണീകരണം ഇപ്പോൾ പ്രവർത്തനക്ഷമമാക്കിയിരിക്കുന്നു. നിങ്ങളുടെ ഫോണിന്റെ ഓതന്റിക്കേറ്റർ ആപ്ലിക്കേഷൻ ഉപയോഗിച്ച് ഇനിപ്പറയുന്ന QR കോഡ് സ്കാൻ ചെയ്യുക അല്ലെങ്കിൽ സജ്ജീകരണ കീ നൽകുക.",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 സെക്കൻഡറി വസതി",
   "🏡 Home": "🏡 വീട്",
   "🏢 Work": "🏢 ജോലി",
+  "📟 Pager": "📟 പേജ്",
+  "📠 Fax": "Fax",
+  "📱 Mobile": "📱 മൊബൈൽ",
   "🔔 Reminder: :label for :contactName": "🔔 ഓർമ്മപ്പെടുത്തൽ: :contactName എന്നതിനുള്ള :label",
   "😀 Good": "😀 കൊള്ളാം",
   "😁 Positive": "😁 പോസിറ്റീവ്",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 നെഗറ്റീവ്",
   "😩 Awful": "😩 ഭയങ്കരം",
   "😶‍🌫️ Neutral": "😶‍🌫️ ന്യൂട്രൽ",
-  "🥳 Awesome": "🥳 ഗംഭീരം"
+  "🥳 Awesome": "🥳 ഗംഭീരം",
+  "🧑🏼 Personal": "🧑🏼 വ്യക്തിഗത"
 }
