--- a/lang/nl.json
+++ b/lang/nl.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Weet je het zeker? Hiermee wordt het document permanent verwijderd.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Weet je het zeker? Hierdoor worden het doel en alle streaks permanent verwijderd.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Weet je het zeker? Hiermee worden de adrestypen van alle contacten verwijderd, maar worden de contacten zelf niet verwijderd.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Weet je het zeker? Hierdoor worden de typen contactgegevens van alle contacten verwijderd, maar worden de contacten zelf niet verwijderd.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Weet je het zeker? Dit verwijdert het contactinformatietype uit alle contacten, maar verwijdert de contacten niet zelf.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Weet je het zeker? Hiermee worden de geslachten van alle contacten verwijderd, maar worden de contacten zelf niet verwijderd.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Weet je het zeker? Hierdoor wordt de sjabloon uit alle contacten verwijderd, maar worden de contacten zelf niet verwijderd.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Weet je zeker dat je dit team wilt verwijderen? Zodra een team is verwijderd, worden alle bronnen en gegevens ook permanent verwijderd.",
@@ -234,6 +234,7 @@
   "Bird": "Vogel",
   "Birthdate": "Geboortedatum",
   "Birthday": "Verjaardag",
+  "Bluesky": "Blusky",
   "Body": "Lichaam",
   "boss": "baas",
   "Bought": "Gekocht",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "Huidige manier om cijfers weer te geven:",
   "Customize how contacts should be displayed": "Pas aan hoe contacten moeten worden weergegeven",
   "Custom name order": "Aangepaste naamvolgorde",
+  "Custom…": "Aangepast…",
   "Daily affirmation": "Dagelijkse bevestiging",
   "Dashboard": "Dashboard",
+  "Data": "Gegevens",
   "date": "datum",
   "Date of the event": "Datum van het evenement",
   "Date of the event:": "Datum van het evenement:",
@@ -383,6 +386,8 @@
   "Delete": "Verwijderen",
   "Delete :name": "Verwijder :name",
   "Delete Account": "Account verwijderen",
+  "Delete a contact information": "Verwijder een contactgegevens",
+  "Delete a contact information type": "Verwijder een contactinformatietype",
   "Delete a new key": "Verwijder een nieuwe sleutel",
   "Delete API Token": "API-token verwijderen",
   "Delete contact": "Verwijder contact",
@@ -480,6 +485,7 @@
   "Family": "Familie",
   "Family summary": "Familie samenvatting",
   "Favorites": "Favorieten",
+  "Fax": "Fax",
   "Female": "Vrouwelijk",
   "File": "Bestand",
   "Files": "Bestanden",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Met cadeaugelegenheden kunt u al uw geschenken categoriseren.",
   "Gift states": "Geschenkstaten",
   "Gift states let you define the various states for your gifts.": "Met geschenkstatussen kunt u de verschillende statussen voor uw geschenken definiëren.",
+  "GitHub": "Gitub",
   "Give this email address a name": "Geef dit e-mailadres een naam",
   "Goals": "Doelen",
   "Go back": "Ga terug",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "Met groepstypen kunt u mensen groeperen.",
   "Had a promotion": "Promotie gehad",
   "Hamster": "Hamster",
+  "Hangouts": "Rondhangsels",
   "Have a great day,": "Een fijne dag verder,",
   "he/him": "hij/hem",
   "Hello!": "Hallo!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "Geschiedenis van de verzonden melding",
   "Hobbies": "Hobby’s",
   "Home": "Startpagina",
+  "Home House": "Thuisbasis",
   "Horse": "Paard",
   "How are you?": "Hoe is het met je?",
   "How could I have done this day better?": "Hoe had ik deze dag beter kunnen doen?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "Informatie uit Wikipedia",
   "in love with": "verliefd op",
   "Inspirational post": "Inspirerende post",
+  "Instagram": "Instagram",
+  "Instant messaging": "Instant messaging",
   "Insufficient Storage": "Onvoldoende opslag",
   "Internal Server Error": "Interne serverfout",
   "Introduction": "Invoering",
@@ -618,6 +629,7 @@
   "Just to say hello": "Gewoon om hallo te zeggen",
   "Key name": "Sleutelnaam",
   "kilometers (km)": "kilometer (km)",
+  "Kind": "Vriendelijk",
   "km": "km",
   "Label:": "Etiket:",
   "Labels": "Etiketten",
@@ -706,6 +718,7 @@
   "miles": "mijlen",
   "miles (mi)": "mijl (mijlen)",
   "Misdirected Request": "Verkeerd geadresseerd verzoek",
+  "Mobile": "Mobiel",
   "Modules in this page": "Modules op deze pagina",
   "Monday": "Maandag",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Alle rechten voorbehouden. 2017 — :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "Nog geen etiketten.",
   "No life event types yet.": "Er zijn nog geen typen levensgebeurtenissen.",
   "Non-Authoritative Information": "Niet-gemachtigde informatie",
+  "None": "Geen",
   "No notes found.": "Geen notities gevonden.",
   "No results found": "geen resultaten gevonden",
   "No role": "Geen rol",
@@ -798,6 +812,7 @@
   "Other": "Ander",
   "Out of respect and appreciation": "Uit respect en waardering",
   "Page Expired": "Pagina niet meer geldig",
+  "Pager": "Pager",
   "Pages": "Pagina’s",
   "Pagination Navigation": "Paginanavigatie",
   "Parent": "Ouder",
@@ -823,6 +838,7 @@
   "Pet category": "Categorie huisdieren",
   "Pets": "Huisdieren",
   "Phone": "Telefoon",
+  "Phone number": "Telefoonnummer",
   "Photo": "Foto",
   "Photos": "Foto’s",
   "Played basketball": "Speelde basketbal",
@@ -1006,6 +1022,7 @@
   "Slices of life": "Plakjes leven",
   "Small animal": "Klein dier",
   "Social": "Sociaal",
+  "Social profile": "Sociaal profiel",
   "Solve": "Oplossen",
   "Some dates have a special type that we will use in the software to calculate an age.": "Sommige datums hebben een speciaal type dat we in de software zullen gebruiken om een leeftijd te berekenen.",
   "So… it works 😼": "Dus... het werkt 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "Algemene voorwaarden",
   "Test email for Monica": "Test-e-mail voor Monica",
   "Test email sent!": "Testmail verzonden!",
+  "Text": "Tekst",
   "Thanks,": "Bedankt,",
   "Thanks for giving Monica a try.": "Bedankt dat je Monica hebt geprobeerd.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Bedankt voor het aanmelden! Kunt u, voordat u aan de slag gaat, uw e-mailadres verifiëren door op de link te klikken die we zojuist naar u hebben gemaild? Als u de e-mail niet heeft ontvangen, sturen wij u graag een nieuwe.",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "Het adrestype is bijgewerkt",
   "The call has been created": "Het gesprek is aangemaakt",
   "The call has been deleted": "De oproep is verwijderd",
-  "The call has been edited": "De oproep is bewerkt",
+  "The call has been updated": "De oproep is bijgewerkt",
   "The call reason has been created": "De oproepreden is aangemaakt",
   "The call reason has been deleted": "De oproepreden is verwijderd",
   "The call reason has been updated": "De oproepreden is bijgewerkt",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "Het contact behoort nog tot geen enkele groep.",
   "The contact has been added": "Het contact is toegevoegd",
   "The contact has been deleted": "Het contact is verwijderd",
-  "The contact has been edited": "Het contact is bewerkt",
   "The contact has been removed from the group": "Het contact is uit de groep verwijderd",
+  "The contact has been updated": "Het contact is bijgewerkt",
   "The contact information has been created": "De contactgegevens zijn aangemaakt",
   "The contact information has been deleted": "De contactgegevens zijn verwijderd",
-  "The contact information has been edited": "De contactgegevens zijn aangepast",
+  "The contact information has been updated": "De contactgegevens is bijgewerkt",
   "The contact information type has been created": "Het type contactgegevens is aangemaakt",
   "The contact information type has been deleted": "Het type contactgegevens is verwijderd",
   "The contact information type has been updated": "Het type contactgegevens is bijgewerkt",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "De gegeven data was ongeldig.",
   "The goal has been created": "Het doel is gemaakt",
   "The goal has been deleted": "Het doel is verwijderd",
-  "The goal has been edited": "Het doel is aangepast",
+  "The goal has been updated": "Het doel is bijgewerkt",
   "The group has been added": "De groep is toegevoegd",
   "The group has been deleted": "De groep is verwijderd",
   "The group has been updated": "De groep is bijgewerkt",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "De levensduurstatistiek is bijgewerkt",
   "The loan has been created": "De lening is gecreëerd",
   "The loan has been deleted": "De lening is verwijderd",
-  "The loan has been edited": "De lening is aangepast",
   "The loan has been settled": "De lening is afgewikkeld",
+  "The loan has been updated": "De lening is bijgewerkt",
   "The loan is an object": "De lening is een object",
   "The loan is monetary": "De lening is geldelijk",
   "The module has been added": "De module is toegevoegd",
   "The module has been removed": "De module is verwijderd",
   "The note has been created": "De notitie is gemaakt",
   "The note has been deleted": "De notitie is verwijderd",
-  "The note has been edited": "De notitie is bewerkt",
+  "The note has been updated": "De notitie is bijgewerkt",
   "The notification has been sent": "De melding is verzonden",
   "The operation either timed out or was not allowed.": "Er is een time-out opgetreden voor de bewerking of deze is niet toegestaan.",
   "The page has been added": "De pagina is toegevoegd",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "De categorie huisdieren is bijgewerkt",
   "The pet has been added": "Het huisdier is toegevoegd",
   "The pet has been deleted": "Het huisdier is verwijderd",
-  "The pet has been edited": "Het huisdier is bewerkt",
+  "The pet has been updated": "Het huisdier is bijgewerkt",
   "The photo has been added": "De foto is toegevoegd",
   "The photo has been deleted": "De foto is verwijderd",
   "The position has been saved": "De positie is opgeslagen",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "De gegeven twee-staps herstelcode was ongeldig.",
   "There are no active addresses yet.": "Er zijn nog geen actieve adressen.",
   "There are no calls logged yet.": "Er zijn nog geen oproepen geregistreerd.",
-  "There are no contact information yet.": "Er zijn nog geen contactgegevens.",
+  "There are no contact informations yet.": "Er zijn nog geen contactgegevens.",
+  "There are no contact information types yet.": "Er zijn nog geen types voor contactinformatie.",
   "There are no documents yet.": "Er zijn nog geen documenten.",
   "There are no events on that day, future or past.": "Er zijn geen gebeurtenissen op die dag, toekomst of verleden.",
   "There are no files yet.": "Er zijn nog geen bestanden.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "De religie is bijgewerkt",
   "The reminder has been created": "De herinnering is aangemaakt",
   "The reminder has been deleted": "De herinnering is verwijderd",
-  "The reminder has been edited": "De herinnering is bewerkt",
+  "The reminder has been updated": "De herinnering is bijgewerkt",
   "The response is not a streamed response.": "De respons is niet gestreamd.",
   "The response is not a view.": "De respons is geen view.",
   "The role has been created": "De rol is gemaakt",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "De tag is bijgewerkt",
   "The task has been created": "De taak is gemaakt",
   "The task has been deleted": "De taak is verwijderd",
-  "The task has been edited": "De taak is bewerkt",
+  "The task has been updated": "De taak is bijgewerkt",
   "The team's name and owner information.": "De naam van het team en de informatie over de eigenaar.",
   "The Telegram channel has been deleted": "Het Telegram-kanaal is verwijderd",
   "The template has been created": "De sjabloon is gemaakt",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "Deze gebruiker is al uitgenodigd voor het team.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Deze gebruiker maakt deel uit van uw account, maar krijgt geen toegang tot alle kluizen in dit account, tenzij u er specifieke toegang toe geeft. Deze persoon kan ook kluizen maken.",
   "This will immediately:": "Dit zal onmiddellijk:",
+  "Threads": "Draden",
   "Three things that happened today": "Drie dingen die vandaag zijn gebeurd",
   "Thursday": "Donderdag",
   "Timezone": "Tijdzone",
@@ -1274,6 +1294,7 @@
   "Translate It": "Vertaal het",
   "Transportation": "Vervoer",
   "Tuesday": "Dinsdag",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "Bevestiging met twee factoren",
   "Two Factor Authentication": "Tweestapsverificatie",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Tweestapsverificatie is nu ingeschakeld. Scan de volgende QR-code met de authenticatie-applicatie van je telefoon of gebruik de setup-sleutel.",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 Tweede verblijfplaats",
   "🏡 Home": "🏡Thuis",
   "🏢 Work": "🏢 Werk",
+  "📟 Pager": "📟 pager",
+  "📠 Fax": "📠 Fax",
+  "📱 Mobile": "📱 Mobiel",
   "🔔 Reminder: :label for :contactName": "🔔 Herinnering: :label voor :contactName",
   "😀 Good": "😀 Goed",
   "😁 Positive": "😁 Positief",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 Negatief",
   "😩 Awful": "😩 Verschrikkelijk",
   "😶‍🌫️ Neutral": "😶‍🌫️ Neutraal",
-  "🥳 Awesome": "🥳 Geweldig"
+  "🥳 Awesome": "🥳 Geweldig",
+  "🧑🏼 Personal": "🧑🏼 Persoonlijk"
 }
