--- a/lang/nn.json
+++ b/lang/nn.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Er du sikker? Dette vil slette dokumentet permanent.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Er du sikker? Dette vil slette målet og alle strekene permanent.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette fjerner adressetypene fra alle kontakter, men sletter ikke selve kontaktene.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette fjerner kontaktinformasjonstypene fra alle kontakter, men sletter ikke selve kontaktene.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette vil fjerne kontaktinformasjonstypen fra alle kontakter, men vil ikke slette kontaktene selv.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette fjerner kjønnene fra alle kontakter, men sletter ikke selve kontaktene.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette fjerner malen fra alle kontakter, men sletter ikke selve kontaktene.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Er du sikker på at du vil slette dette teamet? Når et team er slettet, vil alle dets ressurser og data bli slettet permanent.",
@@ -234,6 +234,7 @@
   "Bird": "Fugl",
   "Birthdate": "Bursdag",
   "Birthday": "Fødselsdag",
+  "Bluesky": "Bluesky",
   "Body": "Kropp",
   "boss": "sjef",
   "Bought": "Kjøpt",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "Gjeldende måte å vise tall på:",
   "Customize how contacts should be displayed": "Tilpass hvordan kontakter skal vises",
   "Custom name order": "Egendefinert navnebestilling",
+  "Custom…": "Skikk…",
   "Daily affirmation": "Daglig bekreftelse",
   "Dashboard": "Dashbord",
+  "Data": "Data",
   "date": "Dato",
   "Date of the event": "Dato for arrangementet",
   "Date of the event:": "Dato for arrangementet:",
@@ -383,6 +386,8 @@
   "Delete": "Slett",
   "Delete :name": "Slett :name",
   "Delete Account": "Slett konto",
+  "Delete a contact information": "Slett en kontaktinformasjon",
+  "Delete a contact information type": "Slett en kontaktinformasjonstype",
   "Delete a new key": "Slett en ny nøkkel",
   "Delete API Token": "Slett API-token",
   "Delete contact": "Slett kontakt",
@@ -480,6 +485,7 @@
   "Family": "Familie",
   "Family summary": "Familieoppsummering",
   "Favorites": "Favoritter",
+  "Fax": "Faks",
   "Female": "Hunn",
   "File": "Fil",
   "Files": "Filer",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Gaveanledninger lar deg kategorisere alle gavene dine.",
   "Gift states": "Gave opplyser",
   "Gift states let you define the various states for your gifts.": "Gavetilstander lar deg definere de forskjellige tilstandene for gavene dine.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Gi denne e-postadressen et navn",
   "Goals": "Mål",
   "Go back": "Gå tilbake",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "Gruppetyper lar deg gruppere folk sammen.",
   "Had a promotion": "Hadde en forfremmelse",
   "Hamster": "Hamster",
+  "Hangouts": "Hangouts",
   "Have a great day,": "Ha en flott dag,",
   "he/him": "han/ham",
   "Hello!": "Hallo!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "Historien om varselet som ble sendt",
   "Hobbies": "Hobbyer",
   "Home": "Hjem",
+  "Home House": "Hjemmehus",
   "Horse": "Hest",
   "How are you?": "Hvordan har du det?",
   "How could I have done this day better?": "Hvordan kunne jeg ha gjort denne dagen bedre?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "Informasjon fra Wikipedia",
   "in love with": "forelsket i",
   "Inspirational post": "Inspirerende innlegg",
+  "Instagram": "Instagram",
+  "Instant messaging": "Direktemeldinger",
   "Insufficient Storage": "Manglende lagringsplass",
   "Internal Server Error": "intern server feil",
   "Introduction": "Introduksjon",
@@ -618,6 +629,7 @@
   "Just to say hello": "Bare for å si hei",
   "Key name": "Nøkkelnavn",
   "kilometers (km)": "kilometer (km)",
+  "Kind": "Type",
   "km": "km",
   "Label:": "Merkelapp:",
   "Labels": "Etiketter",
@@ -706,6 +718,7 @@
   "miles": "miles",
   "miles (mi)": "miles (mi)",
   "Misdirected Request": "Feilrettet forespørsel",
+  "Mobile": "Mobil",
   "Modules in this page": "Moduler på denne siden",
   "Monday": "mandag",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Alle rettigheter forbeholdt. 2017 – :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "Ingen etiketter ennå.",
   "No life event types yet.": "Ingen typer livshendelser ennå.",
   "Non-Authoritative Information": "Ikke-autoritativ informasjon",
+  "None": "Ingen",
   "No notes found.": "Ingen notater funnet.",
   "No results found": "Ingen resultater",
   "No role": "Ingen rolle",
@@ -798,6 +812,7 @@
   "Other": "Annen",
   "Out of respect and appreciation": "Av respekt og takknemlighet",
   "Page Expired": "Sida har utløpt",
+  "Pager": "Pager",
   "Pages": "Sider",
   "Pagination Navigation": "Pagineringsnavigering",
   "Parent": "Foreldre",
@@ -823,6 +838,7 @@
   "Pet category": "Kjæledyrskategori",
   "Pets": "Kjæledyr",
   "Phone": "Telefon",
+  "Phone number": "Telefonnummer",
   "Photo": "Foto",
   "Photos": "Bilder",
   "Played basketball": "Spilte basketball",
@@ -1006,6 +1022,7 @@
   "Slices of life": "Skiver av livet",
   "Small animal": "Lite dyr",
   "Social": "Sosial",
+  "Social profile": "Sosial profil",
   "Solve": "Løse",
   "Some dates have a special type that we will use in the software to calculate an age.": "Noen datoer har en spesiell type som vi vil bruke i programvaren for å beregne en alder.",
   "So… it works 😼": "Så... det fungerer 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "Vilkår for bruk",
   "Test email for Monica": "Test e-post for Monica",
   "Test email sent!": "Testmail sendt!",
+  "Text": "Tekst",
   "Thanks,": "Takk,",
   "Thanks for giving Monica a try.": "Takk for at du prøvde Monica.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Takk for at du registrerte deg! Før du begynner, kan du bekrefte e-postadressen din ved å klikke på linken vi nettopp sendte til deg? Hvis du ikke har mottatt e-posten, sender vi deg gjerne en annen.",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "Adressetypen er oppdatert",
   "The call has been created": "Samtalen er opprettet",
   "The call has been deleted": "Samtalen er slettet",
-  "The call has been edited": "Samtalen er redigert",
+  "The call has been updated": "Samtalen er oppdatert",
   "The call reason has been created": "Anropsårsaken er opprettet",
   "The call reason has been deleted": "Årsaken til anropet er slettet",
   "The call reason has been updated": "Årsaken til samtalen er oppdatert",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "Kontakten tilhører ikke noen gruppe ennå.",
   "The contact has been added": "Kontakten er lagt til",
   "The contact has been deleted": "Kontakten er slettet",
-  "The contact has been edited": "Kontakten er redigert",
   "The contact has been removed from the group": "Kontakten er fjernet fra gruppen",
+  "The contact has been updated": "Kontakten er oppdatert",
   "The contact information has been created": "Kontaktinformasjonen er opprettet",
   "The contact information has been deleted": "Kontaktinformasjonen er slettet",
-  "The contact information has been edited": "Kontaktinformasjonen er redigert",
+  "The contact information has been updated": "Kontaktinformasjonen er oppdatert",
   "The contact information type has been created": "Kontaktinformasjonstypen er opprettet",
   "The contact information type has been deleted": "Kontaktinformasjonstypen er slettet",
   "The contact information type has been updated": "Kontaktinformasjonstypen er oppdatert",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "De oppgitte dataene var ugyldige.",
   "The goal has been created": "Målet er skapt",
   "The goal has been deleted": "Målet er slettet",
-  "The goal has been edited": "Målet er redigert",
+  "The goal has been updated": "Målet er oppdatert",
   "The group has been added": "Gruppen er lagt til",
   "The group has been deleted": "Gruppen er slettet",
   "The group has been updated": "Gruppen er oppdatert",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "Levetidsberegningen er oppdatert",
   "The loan has been created": "Lånet er opprettet",
   "The loan has been deleted": "Lånet er slettet",
-  "The loan has been edited": "Lånet er redigert",
   "The loan has been settled": "Lånet er gjort opp",
+  "The loan has been updated": "Lånet er oppdatert",
   "The loan is an object": "Lånet er et objekt",
   "The loan is monetary": "Lånet er monetært",
   "The module has been added": "Modulen er lagt til",
   "The module has been removed": "Modulen er fjernet",
   "The note has been created": "Notatet er opprettet",
   "The note has been deleted": "Notatet er slettet",
-  "The note has been edited": "Notatet er redigert",
+  "The note has been updated": "Notatet er oppdatert",
   "The notification has been sent": "Varselet er sendt",
   "The operation either timed out or was not allowed.": "Operasjonen ble enten tidsavbrutt eller ikke tillatt.",
   "The page has been added": "Siden er lagt til",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "Kjæledyrkategorien er oppdatert",
   "The pet has been added": "Kjæledyret er lagt til",
   "The pet has been deleted": "Kjæledyret er slettet",
-  "The pet has been edited": "Kjæledyret er redigert",
+  "The pet has been updated": "Kjæledyret er oppdatert",
   "The photo has been added": "Bildet er lagt til",
   "The photo has been deleted": "Bildet er slettet",
   "The position has been saved": "Stillingen er lagret",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "Den oppgitte tofaktorgjenopprettingskoden var ugyldig.",
   "There are no active addresses yet.": "Det er ingen aktive adresser ennå.",
   "There are no calls logged yet.": "Det er ingen anrop logget ennå.",
-  "There are no contact information yet.": "Det er ingen kontaktinformasjon ennå.",
+  "There are no contact informations yet.": "Det er ingen kontaktinformasjon ennå.",
+  "There are no contact information types yet.": "Det er ingen kontaktinformasjonstyper ennå.",
   "There are no documents yet.": "Det er ingen dokumenter ennå.",
   "There are no events on that day, future or past.": "Det er ingen hendelser på den dagen, fremtiden eller fortiden.",
   "There are no files yet.": "Det er ingen filer ennå.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "Religionen er oppdatert",
   "The reminder has been created": "Påminnelsen er opprettet",
   "The reminder has been deleted": "Påminnelsen er slettet",
-  "The reminder has been edited": "Påminnelsen er redigert",
+  "The reminder has been updated": "Påminnelsen er oppdatert",
   "The response is not a streamed response.": "Svaret er ikke et strømmet svar.",
   "The response is not a view.": "Svaret er ikke et syn.",
   "The role has been created": "Rollen er opprettet",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "Taggen er oppdatert",
   "The task has been created": "Oppgaven er opprettet",
   "The task has been deleted": "Oppgaven er slettet",
-  "The task has been edited": "Oppgaven er redigert",
+  "The task has been updated": "Oppgaven er oppdatert",
   "The team's name and owner information.": "Lagets navn og eierinformasjon.",
   "The Telegram channel has been deleted": "Telegram-kanalen er slettet",
   "The template has been created": "Malen er opprettet",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "Denne brukeren er allerede invitert til teamet.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Denne brukeren vil være en del av kontoen din, men vil ikke få tilgang til alle hvelvene i denne kontoen med mindre du gir spesifikk tilgang til dem. Denne personen vil også kunne lage hvelv.",
   "This will immediately:": "Dette vil umiddelbart:",
+  "Threads": "Tråder",
   "Three things that happened today": "Tre ting som skjedde i dag",
   "Thursday": "Torsdag",
   "Timezone": "Tidssone",
@@ -1274,6 +1294,7 @@
   "Translate It": "Oversett det",
   "Transportation": "Transport",
   "Tuesday": "tirsdag",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "To-faktor bekreftelse",
   "Two Factor Authentication": "Tofaktorautentisering",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Tofaktorautentisering er nå aktivert. Skann følgende QR-kode ved å bruke telefonens autentiseringsprogram eller skriv inn oppsettnøkkelen.",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 Sekundærbolig",
   "🏡 Home": "🏡 Hjemme",
   "🏢 Work": "🏢 Jobb",
+  "📟 Pager": "📟 Pager",
+  "📠 Fax": "📠 Faks",
+  "📱 Mobile": "📱 mobil",
   "🔔 Reminder: :label for :contactName": "🔔 Påminnelse: :label for :contactName",
   "😀 Good": "😀 Bra",
   "😁 Positive": "😁 Positivt",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 Negativt",
   "😩 Awful": "😩 Forferdelig",
   "😶‍🌫️ Neutral": "😶‍🌫️ Nøytral",
-  "🥳 Awesome": "🥳 Fantastisk"
+  "🥳 Awesome": "🥳 Fantastisk",
+  "🧑🏼 Personal": "🧑🏼 Personlig"
 }
