--- a/lang/pa.json
+++ b/lang/pa.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "ਤੁਹਾਨੂੰ ਪੂਰਾ ਵਿਸ਼ਵਾਸ ਹੈ? ਇਹ ਦਸਤਾਵੇਜ਼ ਨੂੰ ਪੱਕੇ ਤੌਰ ’ਤੇ ਮਿਟਾ ਦੇਵੇਗਾ।",
   "Are you sure? This will delete the goal and all the streaks permanently.": "ਤੁਹਾਨੂੰ ਪੂਰਾ ਵਿਸ਼ਵਾਸ ਹੈ? ਇਹ ਟੀਚਾ ਅਤੇ ਸਾਰੀਆਂ ਸਟ੍ਰੀਕਾਂ ਨੂੰ ਸਥਾਈ ਤੌਰ ’ਤੇ ਮਿਟਾ ਦੇਵੇਗਾ।",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "ਤੁਹਾਨੂੰ ਪੂਰਾ ਵਿਸ਼ਵਾਸ ਹੈ? ਇਹ ਸਾਰੇ ਸੰਪਰਕਾਂ ਤੋਂ ਪਤੇ ਦੀਆਂ ਕਿਸਮਾਂ ਨੂੰ ਹਟਾ ਦੇਵੇਗਾ, ਪਰ ਸੰਪਰਕਾਂ ਨੂੰ ਆਪਣੇ ਆਪ ਨਹੀਂ ਮਿਟਾਏਗਾ।",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "ਤੁਹਾਨੂੰ ਪੂਰਾ ਵਿਸ਼ਵਾਸ ਹੈ? ਇਹ ਸਾਰੇ ਸੰਪਰਕਾਂ ਤੋਂ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਕਿਸਮਾਂ ਨੂੰ ਹਟਾ ਦੇਵੇਗਾ, ਪਰ ਸੰਪਰਕਾਂ ਨੂੰ ਆਪਣੇ ਆਪ ਨਹੀਂ ਮਿਟਾਏਗਾ।",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "ਤੁਹਾਨੂੰ ਪੂਰਾ ਵਿਸ਼ਵਾਸ ਹੈ? ਇਹ ਸਾਰੇ ਸੰਪਰਕਾਂ ਤੋਂ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਕਿਸਮ ਨੂੰ ਹਟਾ ਦੇਵੇਗਾ, ਪਰ ਉਹਨਾਂ ਸੰਪਰਕਾਂ ਨੂੰ ਖੁਦ ਮਿਟਾ ਦੇਵੇਗਾ.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "ਤੁਹਾਨੂੰ ਪੂਰਾ ਵਿਸ਼ਵਾਸ ਹੈ? ਇਹ ਸਾਰੇ ਸੰਪਰਕਾਂ ਤੋਂ ਲਿੰਗ ਨੂੰ ਹਟਾ ਦੇਵੇਗਾ, ਪਰ ਸੰਪਰਕਾਂ ਨੂੰ ਆਪਣੇ ਆਪ ਨਹੀਂ ਮਿਟਾਏਗਾ।",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "ਤੁਹਾਨੂੰ ਪੂਰਾ ਵਿਸ਼ਵਾਸ ਹੈ? ਇਹ ਸਾਰੇ ਸੰਪਰਕਾਂ ਤੋਂ ਟੈਮਪਲੇਟ ਨੂੰ ਹਟਾ ਦੇਵੇਗਾ, ਪਰ ਸੰਪਰਕਾਂ ਨੂੰ ਆਪਣੇ ਆਪ ਨਹੀਂ ਮਿਟਾਏਗਾ।",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "ਕੀ ਤੁਸੀਂ ਯਕੀਨੀ ਤੌਰ ’ਤੇ ਇਸ ਟੀਮ ਨੂੰ ਮਿਟਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ? ਇੱਕ ਵਾਰ ਟੀਮ ਨੂੰ ਮਿਟਾਉਣ ਤੋਂ ਬਾਅਦ, ਇਸਦੇ ਸਾਰੇ ਸਰੋਤ ਅਤੇ ਡੇਟਾ ਸਥਾਈ ਤੌਰ ’ਤੇ ਮਿਟਾ ਦਿੱਤੇ ਜਾਣਗੇ।",
@@ -234,6 +234,7 @@
   "Bird": "ਪੰਛੀ",
   "Birthdate": "ਜਨਮ ਮਿਤੀ",
   "Birthday": "ਜਨਮਦਿਨ",
+  "Bluesky": "ਬਲੂਸਕੀ",
   "Body": "ਸਰੀਰ",
   "boss": "ਬੌਸ",
   "Bought": "ਖਰੀਦਿਆ",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "ਨੰਬਰ ਪ੍ਰਦਰਸ਼ਿਤ ਕਰਨ ਦਾ ਮੌਜੂਦਾ ਤਰੀਕਾ:",
   "Customize how contacts should be displayed": "ਵਿਉਂਤਬੱਧ ਕਰੋ ਕਿ ਸੰਪਰਕ ਕਿਵੇਂ ਪ੍ਰਦਰਸ਼ਿਤ ਕੀਤੇ ਜਾਣੇ ਚਾਹੀਦੇ ਹਨ",
   "Custom name order": "ਕਸਟਮ ਨਾਮ ਆਰਡਰ",
+  "Custom…": "ਕਸਟਮ ...",
   "Daily affirmation": "ਰੋਜ਼ਾਨਾ ਪੁਸ਼ਟੀ",
   "Dashboard": "ਡੈਸ਼ਬੋਰਡ",
+  "Data": "ਡਾਟਾ",
   "date": "ਤਾਰੀਖ਼",
   "Date of the event": "ਘਟਨਾ ਦੀ ਮਿਤੀ",
   "Date of the event:": "ਘਟਨਾ ਦੀ ਮਿਤੀ:",
@@ -383,6 +386,8 @@
   "Delete": "ਮਿਟਾਓ",
   "Delete :name": ":name ਨੂੰ ਮਿਟਾਓ",
   "Delete Account": "ਖਾਤਾ ਮਿਟਾਓ",
+  "Delete a contact information": "ਇੱਕ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਹਟਾਓ",
+  "Delete a contact information type": "ਇੱਕ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਕਿਸਮ ਹਟਾਓ",
   "Delete a new key": "ਇੱਕ ਨਵੀਂ ਕੁੰਜੀ ਮਿਟਾਓ",
   "Delete API Token": "API ਟੋਕਨ ਮਿਟਾਓ",
   "Delete contact": "ਸੰਪਰਕ ਮਿਟਾਓ",
@@ -480,6 +485,7 @@
   "Family": "ਪਰਿਵਾਰ",
   "Family summary": "ਪਰਿਵਾਰਕ ਸੰਖੇਪ",
   "Favorites": "ਮਨਪਸੰਦ",
+  "Fax": "ਫੈਕਸ",
   "Female": "ਔਰਤ",
   "File": "ਫਾਈਲ",
   "Files": "ਫਾਈਲਾਂ",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "ਤੋਹਫ਼ੇ ਦੇ ਮੌਕੇ ਤੁਹਾਨੂੰ ਤੁਹਾਡੇ ਸਾਰੇ ਤੋਹਫ਼ਿਆਂ ਨੂੰ ਸ਼੍ਰੇਣੀਬੱਧ ਕਰਨ ਦਿੰਦੇ ਹਨ।",
   "Gift states": "ਤੋਹਫ਼ੇ ਦੇ ਰਾਜ",
   "Gift states let you define the various states for your gifts.": "ਤੋਹਫ਼ੇ ਦੇ ਰਾਜ ਤੁਹਾਨੂੰ ਤੁਹਾਡੇ ਤੋਹਫ਼ਿਆਂ ਲਈ ਵੱਖ-ਵੱਖ ਰਾਜਾਂ ਨੂੰ ਪਰਿਭਾਸ਼ਿਤ ਕਰਨ ਦਿੰਦੇ ਹਨ।",
+  "GitHub": "GitHub",
   "Give this email address a name": "ਇਸ ਈਮੇਲ ਪਤੇ ਨੂੰ ਇੱਕ ਨਾਮ ਦਿਓ",
   "Goals": "ਟੀਚੇ",
   "Go back": "ਵਾਪਸ ਜਾਓ",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "ਸਮੂਹ ਕਿਸਮਾਂ ਤੁਹਾਨੂੰ ਲੋਕਾਂ ਨੂੰ ਇਕੱਠੇ ਸਮੂਹ ਕਰਨ ਦਿੰਦੀਆਂ ਹਨ।",
   "Had a promotion": "ਦੀ ਤਰੱਕੀ ਹੋਈ ਸੀ",
   "Hamster": "ਹੈਮਸਟਰ",
+  "Hangouts": "ਹੈਂਗਆਉਟਸ",
   "Have a great day,": "ਤੁਹਾਡਾ ਦਿਨ ਅੱਛਾ ਹੋਵੇ,",
   "he/him": "ਉਹ/ਉਸਨੂੰ",
   "Hello!": "ਸਤ ਸ੍ਰੀ ਅਕਾਲ!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "ਭੇਜੀ ਗਈ ਸੂਚਨਾ ਦਾ ਇਤਿਹਾਸ",
   "Hobbies": "ਸ਼ੌਕ",
   "Home": "ਘਰ",
+  "Home House": "ਘਰ ਦਾ ਘਰ",
   "Horse": "ਘੋੜਾ",
   "How are you?": "ਤੁਸੀ ਕਿਵੇਂ ਹੋ?",
   "How could I have done this day better?": "ਮੈਂ ਇਸ ਦਿਨ ਨੂੰ ਬਿਹਤਰ ਕਿਵੇਂ ਕਰ ਸਕਦਾ ਸੀ?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "ਵਿਕੀਪੀਡੀਆ ਤੋਂ ਜਾਣਕਾਰੀ",
   "in love with": "ਨਾਲ ਪਿਆਰ ਵਿੱਚ",
   "Inspirational post": "ਪ੍ਰੇਰਣਾਦਾਇਕ ਪੋਸਟ",
+  "Instagram": "ਇੰਸਟਾਗ੍ਰਾਮ",
+  "Instant messaging": "ਤਤਕਾਲ ਮੈਸੇਜਿੰਗ",
   "Insufficient Storage": "ਨਾਕਾਫ਼ੀ ਸਟੋਰੇਜ",
   "Internal Server Error": "ਅੰਦਰੂਨੀ ਸਰਵਰ ਗੜਬੜ",
   "Introduction": "ਜਾਣ-ਪਛਾਣ",
@@ -618,6 +629,7 @@
   "Just to say hello": "ਸਿਰਫ਼ ਹੈਲੋ ਕਹਿਣ ਲਈ",
   "Key name": "ਮੁੱਖ ਨਾਮ",
   "kilometers (km)": "ਕਿਲੋਮੀਟਰ (ਕਿ.ਮੀ.)",
+  "Kind": "ਦਿਆਲੂ",
   "km": "ਕਿਲੋਮੀਟਰ",
   "Label:": "ਲੇਬਲ:",
   "Labels": "ਲੇਬਲ",
@@ -706,6 +718,7 @@
   "miles": "ਮੀਲ",
   "miles (mi)": "ਮੀਲ (ਮੀਲ)",
   "Misdirected Request": "ਗਲਤ ਨਿਰਦੇਸ਼ਿਤ ਬੇਨਤੀ",
+  "Mobile": "ਮੋਬਾਈਲ",
   "Modules in this page": "ਇਸ ਪੰਨੇ ਵਿੱਚ ਮੋਡੀਊਲ",
   "Monday": "ਸੋਮਵਾਰ",
   "Monica. All rights reserved. 2017 — :date.": "Monica। ਸਾਰੇ ਹੱਕ ਰਾਖਵੇਂ ਹਨ. 2017 — :date।",
@@ -751,6 +764,7 @@
   "No labels yet.": "ਅਜੇ ਤੱਕ ਕੋਈ ਲੇਬਲ ਨਹੀਂ।",
   "No life event types yet.": "ਅਜੇ ਤੱਕ ਕੋਈ ਜੀਵਨ ਘਟਨਾ ਕਿਸਮ ਨਹੀਂ ਹੈ।",
   "Non-Authoritative Information": "ਗੈਰ-ਪ੍ਰਮਾਣਿਕ ​​ਜਾਣਕਾਰੀ",
+  "None": "ਕੋਈ ਨਹੀਂ",
   "No notes found.": "ਕੋਈ ਨੋਟ ਨਹੀਂ ਮਿਲੇ।",
   "No results found": "ਕੋਈ ਨਤੀਜੇ ਨਹੀਂ ਮਿਲੇ",
   "No role": "ਕੋਈ ਭੂਮਿਕਾ ਨਹੀਂ",
@@ -798,6 +812,7 @@
   "Other": "ਹੋਰ",
   "Out of respect and appreciation": "ਸਤਿਕਾਰ ਅਤੇ ਪ੍ਰਸ਼ੰਸਾ ਦੇ ਬਾਹਰ",
   "Page Expired": "ਪੰਨੇ ਦੀ ਮਿਆਦ ਪੁੱਗ ਗਈ",
+  "Pager": "ਪੇਜ਼ਰ",
   "Pages": "ਪੰਨੇ",
   "Pagination Navigation": "ਪੰਨਾ ਨੈਵੀਗੇਸ਼ਨ",
   "Parent": "ਮਾਪੇ",
@@ -823,6 +838,7 @@
   "Pet category": "ਪਾਲਤੂ ਸ਼੍ਰੇਣੀ",
   "Pets": "ਪਾਲਤੂ",
   "Phone": "ਫ਼ੋਨ",
+  "Phone number": "ਫੋਨ ਨੰਬਰ",
   "Photo": "ਤਸਵੀਰ",
   "Photos": "ਫੋਟੋਆਂ",
   "Played basketball": "ਬਾਸਕਟਬਾਲ ਖੇਡਿਆ",
@@ -1006,6 +1022,7 @@
   "Slices of life": "ਜੀਵਨ ਦੇ ਟੁਕੜੇ",
   "Small animal": "ਛੋਟਾ ਜਾਨਵਰ",
   "Social": "ਸਮਾਜਿਕ",
+  "Social profile": "ਸੋਸ਼ਲ ਪ੍ਰੋਫਾਈਲ",
   "Solve": "ਹੱਲ",
   "Some dates have a special type that we will use in the software to calculate an age.": "ਕੁਝ ਤਾਰੀਖਾਂ ਦੀ ਇੱਕ ਵਿਸ਼ੇਸ਼ ਕਿਸਮ ਹੁੰਦੀ ਹੈ ਜਿਸਦੀ ਵਰਤੋਂ ਅਸੀਂ ਇੱਕ ਉਮਰ ਦੀ ਗਣਨਾ ਕਰਨ ਲਈ ਸੌਫਟਵੇਅਰ ਵਿੱਚ ਕਰਾਂਗੇ।",
   "So… it works 😼": "ਇਸ ਲਈ... ਇਹ ਕੰਮ ਕਰਦਾ ਹੈ 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "ਸੇਵਾ ਦੀਆਂ ਸ਼ਰਤਾਂ",
   "Test email for Monica": "Monica ਲਈ ਟੈਸਟ ਈਮੇਲ",
   "Test email sent!": "ਟੈਸਟ ਈਮੇਲ ਭੇਜੀ ਗਈ!",
+  "Text": "ਟੈਕਸਟ",
   "Thanks,": "ਧੰਨਵਾਦ,",
   "Thanks for giving Monica a try.": "Monica ਨੂੰ ਅਜ਼ਮਾਉਣ ਲਈ ਧੰਨਵਾਦ।",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "ਸਾਈਨ ਅੱਪ ਕਰਨ ਲਈ ਧੰਨਵਾਦ! ਸ਼ੁਰੂ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ, ਕੀ ਤੁਸੀਂ ਉਸ ਲਿੰਕ ’ਤੇ ਕਲਿੱਕ ਕਰਕੇ ਆਪਣੇ ਈਮੇਲ ਪਤੇ ਦੀ ਪੁਸ਼ਟੀ ਕਰ ਸਕਦੇ ਹੋ ਜੋ ਅਸੀਂ ਤੁਹਾਨੂੰ ਈਮੇਲ ਕੀਤਾ ਹੈ? ਜੇਕਰ ਤੁਹਾਨੂੰ ਈਮੇਲ ਪ੍ਰਾਪਤ ਨਹੀਂ ਹੋਈ, ਤਾਂ ਅਸੀਂ ਖੁਸ਼ੀ ਨਾਲ ਤੁਹਾਨੂੰ ਇੱਕ ਹੋਰ ਭੇਜਾਂਗੇ।",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "ਪਤੇ ਦੀ ਕਿਸਮ ਅੱਪਡੇਟ ਕੀਤੀ ਗਈ ਹੈ",
   "The call has been created": "ਕਾਲ ਬਣਾਈ ਗਈ ਹੈ",
   "The call has been deleted": "ਕਾਲ ਮਿਟਾ ਦਿੱਤੀ ਗਈ ਹੈ",
-  "The call has been edited": "ਕਾਲ ਦਾ ਸੰਪਾਦਨ ਕੀਤਾ ਗਿਆ ਹੈ",
+  "The call has been updated": "ਕਾਲ ਨੂੰ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The call reason has been created": "ਕਾਲ ਕਾਰਨ ਬਣਾਇਆ ਗਿਆ ਹੈ",
   "The call reason has been deleted": "ਕਾਲ ਕਾਰਨ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
   "The call reason has been updated": "ਕਾਲ ਕਾਰਨ ਅੱਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "ਸੰਪਰਕ ਅਜੇ ਕਿਸੇ ਸਮੂਹ ਨਾਲ ਸਬੰਧਤ ਨਹੀਂ ਹੈ।",
   "The contact has been added": "ਸੰਪਰਕ ਜੋੜਿਆ ਗਿਆ ਹੈ",
   "The contact has been deleted": "ਸੰਪਰਕ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
-  "The contact has been edited": "ਸੰਪਰਕ ਸੰਪਾਦਿਤ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The contact has been removed from the group": "ਸੰਪਰਕ ਨੂੰ ਗਰੁੱਪ ਤੋਂ ਹਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
+  "The contact has been updated": "ਸੰਪਰਕ ਨੂੰ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The contact information has been created": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਬਣਾਈ ਗਈ ਹੈ",
   "The contact information has been deleted": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਮਿਟਾ ਦਿੱਤੀ ਗਈ ਹੈ",
-  "The contact information has been edited": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਸੰਪਾਦਿਤ ਕੀਤੀ ਗਈ ਹੈ",
+  "The contact information has been updated": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਨੂੰ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The contact information type has been created": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਦੀ ਕਿਸਮ ਬਣਾਈ ਗਈ ਹੈ",
   "The contact information type has been deleted": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਦੀ ਕਿਸਮ ਮਿਟਾ ਦਿੱਤੀ ਗਈ ਹੈ",
   "The contact information type has been updated": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਦੀ ਕਿਸਮ ਅੱਪਡੇਟ ਕੀਤੀ ਗਈ ਹੈ",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "ਦਿੱਤਾ ਗਿਆ ਡੇਟਾ ਅਵੈਧ ਸੀ।",
   "The goal has been created": "ਟੀਚਾ ਬਣਾਇਆ ਗਿਆ ਹੈ",
   "The goal has been deleted": "ਟੀਚਾ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
-  "The goal has been edited": "ਟੀਚਾ ਸੰਪਾਦਿਤ ਕੀਤਾ ਗਿਆ ਹੈ",
+  "The goal has been updated": "ਟੀਚਾ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The group has been added": "ਗਰੁੱਪ ਨੂੰ ਸ਼ਾਮਲ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The group has been deleted": "ਗਰੁੱਪ ਨੂੰ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
   "The group has been updated": "ਗਰੁੱਪ ਨੂੰ ਅੱਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "ਜੀਵਨ ਮੈਟ੍ਰਿਕ ਨੂੰ ਅੱਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The loan has been created": "ਕਰਜ਼ਾ ਬਣਾਇਆ ਗਿਆ ਹੈ",
   "The loan has been deleted": "ਕਰਜ਼ਾ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
-  "The loan has been edited": "ਲੋਨ ਸੰਪਾਦਿਤ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The loan has been settled": "ਕਰਜ਼ੇ ਦਾ ਨਿਪਟਾਰਾ ਹੋ ਗਿਆ ਹੈ",
+  "The loan has been updated": "ਕਰਜ਼ਾ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The loan is an object": "ਕਰਜ਼ਾ ਇੱਕ ਵਸਤੂ ਹੈ",
   "The loan is monetary": "ਕਰਜ਼ਾ ਮੁਦਰਾ ਹੈ",
   "The module has been added": "ਮੋਡੀਊਲ ਜੋੜਿਆ ਗਿਆ ਹੈ",
   "The module has been removed": "ਮੋਡੀਊਲ ਨੂੰ ਹਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
   "The note has been created": "ਨੋਟ ਬਣਾਇਆ ਗਿਆ ਹੈ",
   "The note has been deleted": "ਨੋਟ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
-  "The note has been edited": "ਨੋਟ ਸੰਪਾਦਿਤ ਕੀਤਾ ਗਿਆ ਹੈ",
+  "The note has been updated": "ਨੋਟ ਨੂੰ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The notification has been sent": "ਨੋਟੀਫਿਕੇਸ਼ਨ ਭੇਜ ਦਿੱਤਾ ਗਿਆ ਹੈ",
   "The operation either timed out or was not allowed.": "ਓਪਰੇਸ਼ਨ ਜਾਂ ਤਾਂ ਸਮਾਂ ਸਮਾਪਤ ਹੋ ਗਿਆ ਜਾਂ ਇਜਾਜ਼ਤ ਨਹੀਂ ਦਿੱਤੀ ਗਈ।",
   "The page has been added": "ਪੰਨਾ ਜੋੜਿਆ ਗਿਆ ਹੈ",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "ਪਾਲਤੂ ਜਾਨਵਰਾਂ ਦੀ ਸ਼੍ਰੇਣੀ ਨੂੰ ਅੱਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The pet has been added": "ਪਾਲਤੂ ਜਾਨਵਰ ਨੂੰ ਜੋੜਿਆ ਗਿਆ ਹੈ",
   "The pet has been deleted": "ਪਾਲਤੂ ਜਾਨਵਰ ਨੂੰ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
-  "The pet has been edited": "ਪਾਲਤੂ ਜਾਨਵਰ ਨੂੰ ਸੰਪਾਦਿਤ ਕੀਤਾ ਗਿਆ ਹੈ",
+  "The pet has been updated": "ਪਾਲਤੂਆਂ ਨੂੰ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The photo has been added": "ਫੋਟੋ ਸ਼ਾਮਲ ਕੀਤੀ ਗਈ ਹੈ",
   "The photo has been deleted": "ਫੋਟੋ ਮਿਟਾ ਦਿੱਤੀ ਗਈ ਹੈ",
   "The position has been saved": "ਸਥਿਤੀ ਨੂੰ ਸੰਭਾਲਿਆ ਗਿਆ ਹੈ",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "ਪ੍ਰਦਾਨ ਕੀਤਾ ਦੋ ਫੈਕਟਰ ਰਿਕਵਰੀ ਕੋਡ ਅਵੈਧ ਸੀ।",
   "There are no active addresses yet.": "ਅਜੇ ਤੱਕ ਕੋਈ ਕਿਰਿਆਸ਼ੀਲ ਪਤੇ ਨਹੀਂ ਹਨ।",
   "There are no calls logged yet.": "ਹਾਲੇ ਤੱਕ ਕੋਈ ਕਾਲ ਲੌਗ ਨਹੀਂ ਕੀਤੀ ਗਈ ਹੈ।",
-  "There are no contact information yet.": "ਅਜੇ ਤੱਕ ਕੋਈ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਨਹੀਂ ਹੈ।",
+  "There are no contact informations yet.": "ਅਜੇ ਤੱਕ ਕੋਈ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਨਹੀਂ ਹੈ।",
+  "There are no contact information types yet.": "ਹਾਲੇ ਕੋਈ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਕਿਸਮਾਂ ਨਹੀਂ ਹਨ.",
   "There are no documents yet.": "ਅਜੇ ਤੱਕ ਕੋਈ ਦਸਤਾਵੇਜ਼ ਨਹੀਂ ਹਨ।",
   "There are no events on that day, future or past.": "ਉਸ ਦਿਨ, ਭਵਿੱਖ ਜਾਂ ਅਤੀਤ ਦੀਆਂ ਕੋਈ ਘਟਨਾਵਾਂ ਨਹੀਂ ਹਨ।",
   "There are no files yet.": "ਹਾਲੇ ਤੱਕ ਕੋਈ ਫ਼ਾਈਲਾਂ ਨਹੀਂ ਹਨ।",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "ਧਰਮ ਨੂੰ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The reminder has been created": "ਰੀਮਾਈਂਡਰ ਬਣਾਇਆ ਗਿਆ ਹੈ",
   "The reminder has been deleted": "ਰੀਮਾਈਂਡਰ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
-  "The reminder has been edited": "ਰੀਮਾਈਂਡਰ ਨੂੰ ਸੰਪਾਦਿਤ ਕੀਤਾ ਗਿਆ ਹੈ",
+  "The reminder has been updated": "ਰੀਮਾਈਂਡਰ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The response is not a streamed response.": "ਜਵਾਬ ਇੱਕ ਸਟ੍ਰੀਮਡ ਜਵਾਬ ਨਹੀਂ ਹੈ।",
   "The response is not a view.": "ਜਵਾਬ ਇੱਕ ਦ੍ਰਿਸ਼ ਨਹੀਂ ਹੈ.",
   "The role has been created": "ਭੂਮਿਕਾ ਬਣਾਈ ਗਈ ਹੈ",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "ਟੈਗ ਨੂੰ ਅੱਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The task has been created": "ਟਾਸਕ ਬਣਾਇਆ ਗਿਆ ਹੈ",
   "The task has been deleted": "ਕਾਰਜ ਨੂੰ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
-  "The task has been edited": "ਕਾਰਜ ਸੰਪਾਦਿਤ ਕੀਤਾ ਗਿਆ ਹੈ",
+  "The task has been updated": "ਕੰਮ ਨੂੰ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The team's name and owner information.": "ਟੀਮ ਦਾ ਨਾਮ ਅਤੇ ਮਾਲਕ ਦੀ ਜਾਣਕਾਰੀ।",
   "The Telegram channel has been deleted": "ਟੈਲੀਗ੍ਰਾਮ ਚੈਨਲ ਨੂੰ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
   "The template has been created": "ਟੈਪਲੇਟ ਬਣਾਇਆ ਗਿਆ ਹੈ",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "ਇਸ ਉਪਭੋਗਤਾ ਨੂੰ ਪਹਿਲਾਂ ਹੀ ਟੀਮ ਵਿੱਚ ਸੱਦਾ ਦਿੱਤਾ ਗਿਆ ਹੈ।",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "ਇਹ ਉਪਭੋਗਤਾ ਤੁਹਾਡੇ ਖਾਤੇ ਦਾ ਹਿੱਸਾ ਹੋਵੇਗਾ, ਪਰ ਜਦੋਂ ਤੱਕ ਤੁਸੀਂ ਉਹਨਾਂ ਨੂੰ ਖਾਸ ਪਹੁੰਚ ਨਹੀਂ ਦਿੰਦੇ ਹੋ, ਉਦੋਂ ਤੱਕ ਇਸ ਖਾਤੇ ਦੇ ਸਾਰੇ ਵਾਲਟ ਤੱਕ ਪਹੁੰਚ ਪ੍ਰਾਪਤ ਨਹੀਂ ਕਰੇਗਾ। ਇਹ ਵਿਅਕਤੀ ਵਾਲਟ ਵੀ ਬਣਾਉਣ ਦੇ ਯੋਗ ਹੋਵੇਗਾ।",
   "This will immediately:": "ਇਹ ਤੁਰੰਤ ਕਰੇਗਾ:",
+  "Threads": "ਥਰਿੱਡਜ਼",
   "Three things that happened today": "ਤਿੰਨ ਗੱਲਾਂ ਜੋ ਅੱਜ ਹੋਈਆਂ",
   "Thursday": "ਵੀਰਵਾਰ",
   "Timezone": "ਸਮਾਂ ਖੇਤਰ",
@@ -1274,6 +1294,7 @@
   "Translate It": "ਇਸਦਾ ਅਨੁਵਾਦ ਕਰੋ",
   "Transportation": "ਆਵਾਜਾਈ",
   "Tuesday": "ਮੰਗਲਵਾਰ",
+  "Twitter": "ਟਵਿੱਟਰ",
   "Two-factor Confirmation": "ਦੋ-ਕਾਰਕ ਪੁਸ਼ਟੀ",
   "Two Factor Authentication": "ਦੋ ਕਾਰਕ ਪ੍ਰਮਾਣਿਕਤਾ",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "ਦੋ ਕਾਰਕ ਪ੍ਰਮਾਣਿਕਤਾ ਹੁਣ ਸਮਰੱਥ ਹੈ। ਆਪਣੇ ਫ਼ੋਨ ਦੀ ਪ੍ਰਮਾਣਕ ਐਪਲੀਕੇਸ਼ਨ ਦੀ ਵਰਤੋਂ ਕਰਕੇ ਹੇਠਾਂ ਦਿੱਤੇ QR ਕੋਡ ਨੂੰ ਸਕੈਨ ਕਰੋ ਜਾਂ ਸੈੱਟਅੱਪ ਕੁੰਜੀ ਦਾਖਲ ਕਰੋ।",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 ਸੈਕੰਡਰੀ ਨਿਵਾਸ",
   "🏡 Home": "🏡 ਘਰ",
   "🏢 Work": "🏢 ਕੰਮ",
+  "📟 Pager": "📟 ਪੇਜ਼ਰ",
+  "📠 Fax": "📠 ਫੈਕਸ",
+  "📱 Mobile": "📱 ਮੋਬਾਈਲ",
   "🔔 Reminder: :label for :contactName": "🔔 ਰੀਮਾਈਂਡਰ: :contactName ਲਈ :label",
   "😀 Good": "😀 ਚੰਗਾ",
   "😁 Positive": "😁 ਸਕਾਰਾਤਮਕ",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 ਨਕਾਰਾਤਮਕ",
   "😩 Awful": "😩 ਭਿਆਨਕ",
   "😶‍🌫️ Neutral": "😶‍🌫️ ਨਿਰਪੱਖ",
-  "🥳 Awesome": "🥳 ਸ਼ਾਨਦਾਰ"
+  "🥳 Awesome": "🥳 ਸ਼ਾਨਦਾਰ",
+  "🧑🏼 Personal": "🧑🏼 ਨਿੱਜੀ"
 }
