--- a/lang/pl.json
+++ b/lang/pl.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Jesteś pewny? Spowoduje to trwałe usunięcie dokumentu.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Jesteś pewny? Spowoduje to trwałe usunięcie gola i wszystkich serii.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Jesteś pewny? Spowoduje to usunięcie typów adresów ze wszystkich kontaktów, ale nie spowoduje usunięcia samych kontaktów.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Jesteś pewny? Spowoduje to usunięcie typów informacji kontaktowych ze wszystkich kontaktów, ale nie spowoduje usunięcia samych kontaktów.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Jesteś pewien? To usunie typ danych kontaktowych ze wszystkich kontaktów, ale sam nie usunie kontaktów.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Jesteś pewny? Spowoduje to usunięcie płci ze wszystkich kontaktów, ale nie spowoduje usunięcia samych kontaktów.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Jesteś pewny? Spowoduje to usunięcie szablonu ze wszystkich kontaktów, ale nie spowoduje usunięcia samych kontaktów.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Czy na pewno chcesz usunąć ten zespół? Po usunięciu zespołu wszystkie jego zasoby i dane zostaną trwale usunięte.",
@@ -234,6 +234,7 @@
   "Bird": "Ptak",
   "Birthdate": "Data urodzenia",
   "Birthday": "Urodziny",
+  "Bluesky": "Bluesy",
   "Body": "Ciało",
   "boss": "szef",
   "Bought": "Kupił",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "Obecny sposób wyświetlania liczb:",
   "Customize how contacts should be displayed": "Dostosuj sposób wyświetlania kontaktów",
   "Custom name order": "Niestandardowa kolejność nazw",
+  "Custom…": "Zwyczaj…",
   "Daily affirmation": "Codzienna afirmacja",
   "Dashboard": "Panel",
+  "Data": "Dane",
   "date": "data",
   "Date of the event": "Data wydarzenia",
   "Date of the event:": "Data wydarzenia:",
@@ -383,6 +386,8 @@
   "Delete": "Usuń",
   "Delete :name": "Usuń :name",
   "Delete Account": "Usuń Konto",
+  "Delete a contact information": "Usuń dane kontaktowe",
+  "Delete a contact information type": "Usuń typ informacji kontaktowych",
   "Delete a new key": "Usuń nowy klucz",
   "Delete API Token": "Usuń Token API",
   "Delete contact": "Usuń kontakt",
@@ -480,6 +485,7 @@
   "Family": "Rodzina",
   "Family summary": "Podsumowanie rodzinne",
   "Favorites": "Ulubione",
+  "Fax": "Faks",
   "Female": "Kobieta",
   "File": "Plik",
   "Files": "Pliki",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Okazje na prezenty pozwalają kategoryzować wszystkie prezenty.",
   "Gift states": "Stany prezentów",
   "Gift states let you define the various states for your gifts.": "Stany prezentów umożliwiają zdefiniowanie różnych stanów prezentów.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Nadaj temu adresowi e-mail nazwę",
   "Goals": "Cele",
   "Go back": "Wróć",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "Typy grup umożliwiają grupowanie osób.",
   "Had a promotion": "Miał awans",
   "Hamster": "Chomik",
+  "Hangouts": "Hangouty",
   "Have a great day,": "Miłego dnia,",
   "he/him": "on/on",
   "Hello!": "Cześć!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "Historia wysłanego powiadomienia",
   "Hobbies": "Zainteresowania",
   "Home": "Strona główna",
+  "Home House": "Domowy dom",
   "Horse": "Koń",
   "How are you?": "Jak się masz?",
   "How could I have done this day better?": "Jak mogłem lepiej przeżyć ten dzień?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "Informacje z Wikipedii",
   "in love with": "zakochany w",
   "Inspirational post": "Inspirujący wpis",
+  "Instagram": "Instagram",
+  "Instant messaging": "Wiadomości błyskawiczne",
   "Insufficient Storage": "Niewystarczające miejsce do przechowywania",
   "Internal Server Error": "Wewnętrzny błąd serwera",
   "Introduction": "Wprowadzenie",
@@ -618,6 +629,7 @@
   "Just to say hello": "Tylko żeby się przywitać",
   "Key name": "Nazwa klucza",
   "kilometers (km)": "kilometry (km)",
+  "Kind": "Uprzejmy",
   "km": "km",
   "Label:": "Etykieta:",
   "Labels": "Etykiety",
@@ -706,6 +718,7 @@
   "miles": "mile",
   "miles (mi)": "mile (mi)",
   "Misdirected Request": "Błędnie skierowane żądanie",
+  "Mobile": "Przenośny",
   "Modules in this page": "Moduły na tej stronie",
   "Monday": "Poniedziałek",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Wszelkie prawa zastrzeżone. 2017 — :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "Nie ma jeszcze etykiet.",
   "No life event types yet.": "Nie ma jeszcze typów wydarzeń życiowych.",
   "Non-Authoritative Information": "Informacje niepotwierdzone",
+  "None": "Nic",
   "No notes found.": "Nie znaleziono żadnych notatek.",
   "No results found": "Nie znaleziono wyników",
   "No role": "Żadnej roli",
@@ -798,6 +812,7 @@
   "Other": "Inny",
   "Out of respect and appreciation": "Z szacunku i uznania",
   "Page Expired": "Strona Wygasła",
+  "Pager": "Pager",
   "Pages": "Strony",
   "Pagination Navigation": "Nawigacja Stron",
   "Parent": "Rodzic",
@@ -823,6 +838,7 @@
   "Pet category": "Kategoria zwierzaka",
   "Pets": "Zwierzęta",
   "Phone": "Telefon",
+  "Phone number": "Numer telefonu",
   "Photo": "Zdjęcie",
   "Photos": "Zdjęcia",
   "Played basketball": "Grał w koszykówkę",
@@ -1006,6 +1022,7 @@
   "Slices of life": "Kawałki życia",
   "Small animal": "Małe zwierzę",
   "Social": "Społeczny",
+  "Social profile": "Profil społeczny",
   "Solve": "Rozwiąż",
   "Some dates have a special type that we will use in the software to calculate an age.": "Niektóre daty mają specjalny typ, którego będziemy używać w oprogramowaniu do obliczania wieku.",
   "So… it works 😼": "Zatem… to działa 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "Warunki Korzystania z Usługi",
   "Test email for Monica": "Testowy e-mail dla Monica",
   "Test email sent!": "Testowy e-mail wysłany!",
+  "Text": "Tekst",
   "Thanks,": "Dzięki,",
   "Thanks for giving Monica a try.": "Dziękuję za umożliwienie Monica wypróbowania.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Dziękujemy za zarejestrowanie się! Czy zanim zaczniesz, możesz zweryfikować swój adres e-mail, klikając link, który właśnie wysłaliśmy do Ciebie e-mailem? Jeśli nie otrzymałeś wiadomości e-mail, z przyjemnością wyślemy Ci kolejną.",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "Typ adresu został zaktualizowany",
   "The call has been created": "Połączenie zostało utworzone",
   "The call has been deleted": "Połączenie zostało usunięte",
-  "The call has been edited": "Rozmowa została edytowana",
+  "The call has been updated": "Połączenie zostało zaktualizowane",
   "The call reason has been created": "Powód połączenia został utworzony",
   "The call reason has been deleted": "Powód połączenia został usunięty",
   "The call reason has been updated": "Powód połączenia został zaktualizowany",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "Kontakt nie należy jeszcze do żadnej grupy.",
   "The contact has been added": "Kontakt został dodany",
   "The contact has been deleted": "Kontakt został usunięty",
-  "The contact has been edited": "Kontakt został edytowany",
   "The contact has been removed from the group": "Kontakt został usunięty z grupy",
+  "The contact has been updated": "Kontakt został zaktualizowany",
   "The contact information has been created": "Dane kontaktowe zostały utworzone",
   "The contact information has been deleted": "Dane kontaktowe zostały usunięte",
-  "The contact information has been edited": "Dane kontaktowe zostały zmienione",
+  "The contact information has been updated": "Informacje kontaktowe zostały zaktualizowane",
   "The contact information type has been created": "Utworzono typ informacji kontaktowych",
   "The contact information type has been deleted": "Typ informacji kontaktowych został usunięty",
   "The contact information type has been updated": "Typ informacji kontaktowych został zaktualizowany",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "Podane dane były nieprawidłowe.",
   "The goal has been created": "Cel został stworzony",
   "The goal has been deleted": "Cel został usunięty",
-  "The goal has been edited": "Cel został edytowany",
+  "The goal has been updated": "Cel został zaktualizowany",
   "The group has been added": "Grupa została dodana",
   "The group has been deleted": "Grupa została usunięta",
   "The group has been updated": "Grupa została zaktualizowana",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "Wskaźnik życia został zaktualizowany",
   "The loan has been created": "Pożyczka została utworzona",
   "The loan has been deleted": "Pożyczka została usunięta",
-  "The loan has been edited": "Pożyczka została poprawiona",
   "The loan has been settled": "Pożyczka została uregulowana",
+  "The loan has been updated": "Pożyczka została zaktualizowana",
   "The loan is an object": "Pożyczka jest przedmiotem",
   "The loan is monetary": "Pożyczka ma charakter pieniężny",
   "The module has been added": "Moduł został dodany",
   "The module has been removed": "Moduł został usunięty",
   "The note has been created": "Notatka została utworzona",
   "The note has been deleted": "Notatka została usunięta",
-  "The note has been edited": "Notatka została poprawiona",
+  "The note has been updated": "Notatka została zaktualizowana",
   "The notification has been sent": "Powiadomienie zostało wysłane",
   "The operation either timed out or was not allowed.": "Operacja przekroczyła limit czasu lub nie została dozwolona.",
   "The page has been added": "Strona została dodana",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "Kategoria zwierzaka została zaktualizowana",
   "The pet has been added": "Zwierzę zostało dodane",
   "The pet has been deleted": "Zwierzę zostało usunięte",
-  "The pet has been edited": "Zwierzę zostało edytowane",
+  "The pet has been updated": "PET został zaktualizowany",
   "The photo has been added": "Zdjęcie zostało dodane",
   "The photo has been deleted": "Zdjęcie zostało usunięte",
   "The position has been saved": "Pozycja została zapisana",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "Podany dwuskładnikowy kod odzyskiwania był nieprawidłowy.",
   "There are no active addresses yet.": "Nie ma jeszcze aktywnych adresów.",
   "There are no calls logged yet.": "Nie zarejestrowano jeszcze żadnych połączeń.",
-  "There are no contact information yet.": "Nie ma jeszcze informacji kontaktowych.",
+  "There are no contact informations yet.": "Nie ma jeszcze informacji kontaktowych.",
+  "There are no contact information types yet.": "Nie ma jeszcze rodzajów informacji kontaktowych.",
   "There are no documents yet.": "Nie ma jeszcze żadnych dokumentów.",
   "There are no events on that day, future or past.": "W tym dniu nie ma żadnych wydarzeń, ani przyszłych, ani przeszłych.",
   "There are no files yet.": "Nie ma jeszcze żadnych plików.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "Religia została zaktualizowana",
   "The reminder has been created": "Przypomnienie zostało utworzone",
   "The reminder has been deleted": "Przypomnienie zostało usunięte",
-  "The reminder has been edited": "Przypomnienie zostało edytowane",
+  "The reminder has been updated": "Przypomnienie zostało zaktualizowane",
   "The response is not a streamed response.": "Odpowiedź nie jest odpowiedzią przesyłaną strumieniowo.",
   "The response is not a view.": "Odpowiedź nie jest widokiem.",
   "The role has been created": "Rola została utworzona",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "Tag został zaktualizowany",
   "The task has been created": "Zadanie zostało utworzone",
   "The task has been deleted": "Zadanie zostało usunięte",
-  "The task has been edited": "Zadanie zostało edytowane",
+  "The task has been updated": "Zadanie zostało zaktualizowane",
   "The team's name and owner information.": "Nazwa zespołu i informacje o właścicielu.",
   "The Telegram channel has been deleted": "Kanał Telegramu został usunięty",
   "The template has been created": "Szablon został utworzony",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "Ten użytkownik został już zaproszony do zespołu.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Ten użytkownik będzie częścią Twojego konta, ale nie uzyska dostępu do wszystkich skarbców na tym koncie, chyba że zapewnisz im określony dostęp. Osoba ta będzie mogła również tworzyć skarbce.",
   "This will immediately:": "Spowoduje to natychmiastowe:",
+  "Threads": "Wątki",
   "Three things that happened today": "Trzy rzeczy, które wydarzyły się dzisiaj",
   "Thursday": "Czwartek",
   "Timezone": "Strefa czasowa",
@@ -1274,6 +1294,7 @@
   "Translate It": "Przetłumacz to",
   "Transportation": "Transport",
   "Tuesday": "Wtorek",
+  "Twitter": "Świergot",
   "Two-factor Confirmation": "Potwierdzenie dwuczynnikowe",
   "Two Factor Authentication": "Uwierzytelnianie Dwuskładnikowe",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Uwierzytelnianie dwuskładnikowe jest teraz aktywne. Zeskanuj poniższy kod QR za pomocą aplikacji uwierzytelniającej w telefonie lub wprowadź klucz ustawień.",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 Drugie miejsce zamieszkania",
   "🏡 Home": "🏡 Dom",
   "🏢 Work": "🏢 Pracuj",
+  "📟 Pager": "📟 Pager",
+  "📠 Fax": "📠 Faks",
+  "📱 Mobile": "📱 Mobile",
   "🔔 Reminder: :label for :contactName": "🔔 Przypomnienie: :label dla :contactName",
   "😀 Good": "😀 Dobrze",
   "😁 Positive": "😁 Pozytywne",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 Negatywny",
   "😩 Awful": "😩 Straszne",
   "😶‍🌫️ Neutral": "😶‍🌫️ Neutralny",
-  "🥳 Awesome": "🥳 Świetne"
+  "🥳 Awesome": "🥳 Świetne",
+  "🧑🏼 Personal": "🧑🏼 Osobiste"
 }
