--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Tem certeza? Isso excluirá o documento permanentemente.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Tem certeza? Isso excluirá o gol e todas as sequências permanentemente.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Tem certeza? Isso removerá os tipos de endereço de todos os contatos, mas não excluirá os contatos em si.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Tem certeza? Isso removerá os tipos de informações de contato de todos os contatos, mas não excluirá os contatos em si.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Tem certeza? Isso removerá o tipo de informação de contato de todos os contatos, mas não excluirá os contatos.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Tem certeza? Isso removerá os gêneros de todos os contatos, mas não excluirá os contatos em si.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Tem certeza? Isso removerá o modelo de todos os contatos, mas não excluirá os contatos em si.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Tem certeza que quer excluir este time? Uma vez excluído, todos os dados e recursos relativos a ela serão excluídos permanentemente.",
@@ -234,6 +234,7 @@
   "Bird": "Pássaro",
   "Birthdate": "Data de nascimento",
   "Birthday": "Aniversário",
+  "Bluesky": "Bluesky",
   "Body": "Corpo",
   "boss": "chefe",
   "Bought": "Comprado",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "Maneira atual de exibir números:",
   "Customize how contacts should be displayed": "Personalize como os contatos devem ser exibidos",
   "Custom name order": "Ordem de nome personalizado",
+  "Custom…": "Personalizado…",
   "Daily affirmation": "Afirmação diária",
   "Dashboard": "Painel",
+  "Data": "Dados",
   "date": "data",
   "Date of the event": "Data do evento",
   "Date of the event:": "Data do evento:",
@@ -383,6 +386,8 @@
   "Delete": "Excluir",
   "Delete :name": "Excluir :name",
   "Delete Account": "Excluir Conta",
+  "Delete a contact information": "Excluir uma informação de contato",
+  "Delete a contact information type": "Excluir um tipo de informação de contato",
   "Delete a new key": "Excluir uma nova chave",
   "Delete API Token": "Excluir Token da API",
   "Delete contact": "Excluir contato",
@@ -480,6 +485,7 @@
   "Family": "Família",
   "Family summary": "Resumo da família",
   "Favorites": "Favoritos",
+  "Fax": "Fax",
   "Female": "Fêmea",
   "File": "Arquivo",
   "Files": "arquivos",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "As ocasiões para presentes permitem categorizar todos os seus presentes.",
   "Gift states": "Estados de presente",
   "Gift states let you define the various states for your gifts.": "Os estados de presentes permitem definir os vários estados de seus presentes.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Dê um nome a este endereço de e-mail",
   "Goals": "Metas",
   "Go back": "Volte",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "Os tipos de grupo permitem agrupar pessoas.",
   "Had a promotion": "Teve uma promoção",
   "Hamster": "Hamster",
+  "Hangouts": "Hangouts",
   "Have a great day,": "Tenha um ótimo dia,",
   "he/him": "ele/ele",
   "Hello!": "Olá!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "Histórico da notificação enviada",
   "Hobbies": "Hobbies",
   "Home": "Lar",
+  "Home House": "Casa de casa",
   "Horse": "Cavalo",
   "How are you?": "Como vai você?",
   "How could I have done this day better?": "Como eu poderia ter feito melhor este dia?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "Informações da Wikipédia",
   "in love with": "apaixonado por",
   "Inspirational post": "Postagem inspiradora",
+  "Instagram": "Instagram",
+  "Instant messaging": "Mensagens instantâneas",
   "Insufficient Storage": "Armazenamento Insuficiente",
   "Internal Server Error": "Erro Interno Do Servidor",
   "Introduction": "Introdução",
@@ -618,6 +629,7 @@
   "Just to say hello": "Apenas para dizer olá",
   "Key name": "Nome da chave",
   "kilometers (km)": "quilômetros (km)",
+  "Kind": "Tipo",
   "km": "quilômetros",
   "Label:": "Rótulo:",
   "Labels": "Etiquetas",
@@ -706,6 +718,7 @@
   "miles": "milhas",
   "miles (mi)": "milhas (mi)",
   "Misdirected Request": "Solicitação Mal Direcionada",
+  "Mobile": "Móvel",
   "Modules in this page": "Módulos nesta página",
   "Monday": "Segunda-feira",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Todos os direitos reservados. 2017 — :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "Ainda não há rótulos.",
   "No life event types yet.": "Ainda não há tipos de eventos de vida.",
   "Non-Authoritative Information": "Informações Não Autorizadas",
+  "None": "Nenhum",
   "No notes found.": "Nenhuma nota encontrada.",
   "No results found": "Nenhum resultado encontrado",
   "No role": "Sem função",
@@ -798,6 +812,7 @@
   "Other": "Outro",
   "Out of respect and appreciation": "Por respeito e apreço",
   "Page Expired": "Página expirou",
+  "Pager": "Pager",
   "Pages": "Páginas",
   "Pagination Navigation": "Navegação da Paginação",
   "Parent": "Pai",
@@ -823,6 +838,7 @@
   "Pet category": "Categoria de animal de estimação",
   "Pets": "Animais de estimação",
   "Phone": "Telefone",
+  "Phone number": "Número de telefone",
   "Photo": "Foto",
   "Photos": "Fotos",
   "Played basketball": "Joguei basquete",
@@ -1006,6 +1022,7 @@
   "Slices of life": "Fatias de vida",
   "Small animal": "Animal pequeno",
   "Social": "Social",
+  "Social profile": "Perfil social",
   "Solve": "Resolver",
   "Some dates have a special type that we will use in the software to calculate an age.": "Algumas datas possuem um tipo especial que usaremos no software para calcular a idade.",
   "So… it works 😼": "Então… funciona 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "Termos de Serviço",
   "Test email for Monica": "E-mail de teste para Monica",
   "Test email sent!": "E-mail de teste enviado!",
+  "Text": "Texto",
   "Thanks,": "Obrigado,",
   "Thanks for giving Monica a try.": "Obrigado por dar uma chance à Monica.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Obrigado por inscrever-se! Antes de começar, você poderia verificar seu endereço de e-mail clicando no link que acabamos de enviar para você? Se você não recebeu o e-mail, teremos prazer em lhe enviar outro.",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "O tipo de endereço foi atualizado",
   "The call has been created": "A chamada foi criada",
   "The call has been deleted": "A chamada foi excluída",
-  "The call has been edited": "A chamada foi editada",
+  "The call has been updated": "A chamada foi atualizada",
   "The call reason has been created": "O motivo da chamada foi criado",
   "The call reason has been deleted": "O motivo da chamada foi excluído",
   "The call reason has been updated": "O motivo da chamada foi atualizado",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "O contato ainda não pertence a nenhum grupo.",
   "The contact has been added": "O contato foi adicionado",
   "The contact has been deleted": "O contato foi excluído",
-  "The contact has been edited": "O contato foi editado",
   "The contact has been removed from the group": "O contato foi removido do grupo",
+  "The contact has been updated": "O contato foi atualizado",
   "The contact information has been created": "As informações de contato foram criadas",
   "The contact information has been deleted": "As informações de contato foram excluídas",
-  "The contact information has been edited": "As informações de contato foram editadas",
+  "The contact information has been updated": "As informações de contato foram atualizadas",
   "The contact information type has been created": "O tipo de informações de contato foi criado",
   "The contact information type has been deleted": "O tipo de informação de contato foi excluído",
   "The contact information type has been updated": "O tipo de informações de contato foi atualizado",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "Os dados fornecidos eram inválidos.",
   "The goal has been created": "A meta foi criada",
   "The goal has been deleted": "A meta foi excluída",
-  "The goal has been edited": "A meta foi editada",
+  "The goal has been updated": "O objetivo foi atualizado",
   "The group has been added": "O grupo foi adicionado",
   "The group has been deleted": "O grupo foi excluído",
   "The group has been updated": "O grupo foi atualizado",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "A métrica de vida foi atualizada",
   "The loan has been created": "O empréstimo foi criado",
   "The loan has been deleted": "O empréstimo foi excluído",
-  "The loan has been edited": "O empréstimo foi editado",
   "The loan has been settled": "O empréstimo foi liquidado",
+  "The loan has been updated": "O empréstimo foi atualizado",
   "The loan is an object": "O empréstimo é um objeto",
   "The loan is monetary": "O empréstimo é monetário",
   "The module has been added": "O módulo foi adicionado",
   "The module has been removed": "O módulo foi removido",
   "The note has been created": "A nota foi criada",
   "The note has been deleted": "A nota foi excluída",
-  "The note has been edited": "A nota foi editada",
+  "The note has been updated": "A nota foi atualizada",
   "The notification has been sent": "A notificação foi enviada",
   "The operation either timed out or was not allowed.": "A operação expirou ou não foi permitida.",
   "The page has been added": "A página foi adicionada",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "A categoria de animais de estimação foi atualizada",
   "The pet has been added": "O animal de estimação foi adicionado",
   "The pet has been deleted": "O animal de estimação foi excluído",
-  "The pet has been edited": "O animal de estimação foi editado",
+  "The pet has been updated": "O animal foi atualizado",
   "The photo has been added": "A foto foi adicionada",
   "The photo has been deleted": "A foto foi excluída",
   "The position has been saved": "A posição foi salva",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "O código de recuperação de dois fatores fornecido era inválido.",
   "There are no active addresses yet.": "Ainda não há endereços ativos.",
   "There are no calls logged yet.": "Ainda não há chamadas registradas.",
-  "There are no contact information yet.": "Ainda não há informações de contato.",
+  "There are no contact informations yet.": "Ainda não há informações de contato.",
+  "There are no contact information types yet.": "Ainda não há tipos de informações de contato.",
   "There are no documents yet.": "Ainda não há documentos.",
   "There are no events on that day, future or past.": "Não há eventos naquele dia, futuros ou passados.",
   "There are no files yet.": "Ainda não há arquivos.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "A religião foi atualizada",
   "The reminder has been created": "O lembrete foi criado",
   "The reminder has been deleted": "O lembrete foi excluído",
-  "The reminder has been edited": "O lembrete foi editado",
+  "The reminder has been updated": "O lembrete foi atualizado",
   "The response is not a streamed response.": "A resposta não é uma resposta transmitida.",
   "The response is not a view.": "A resposta não é uma visualização.",
   "The role has been created": "A função foi criada",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "A tag foi atualizada",
   "The task has been created": "A tarefa foi criada",
   "The task has been deleted": "A tarefa foi excluída",
-  "The task has been edited": "A tarefa foi editada",
+  "The task has been updated": "A tarefa foi atualizada",
   "The team's name and owner information.": "Nome do time e informações do dono.",
   "The Telegram channel has been deleted": "O canal Telegram foi excluído",
   "The template has been created": "O modelo foi criado",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "Este usuário já foi convidado para o time.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Este usuário fará parte da sua conta, mas não terá acesso a todos os cofres desta conta, a menos que você conceda acesso específico a eles. Essa pessoa também poderá criar cofres.",
   "This will immediately:": "Isso irá imediatamente:",
+  "Threads": "Tópicos",
   "Three things that happened today": "Três coisas que aconteceram hoje",
   "Thursday": "Quinta-feira",
   "Timezone": "Fuso horário",
@@ -1274,6 +1294,7 @@
   "Translate It": "Traduza isso",
   "Transportation": "Transporte",
   "Tuesday": "Terça-feira",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "Confirmação de dois fatores",
   "Two Factor Authentication": "Autenticação em dois fatores",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "A autenticação de dois fatores agora está habilitada. Digitalize o código QR a seguir usando o aplicativo autenticador do seu telefone ou digite a chave de configuração.",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 Residência secundária",
   "🏡 Home": "🏡 Casa",
   "🏢 Work": "🏢 Trabalho",
+  "📟 Pager": "📟 Pager",
+  "📠 Fax": "📠 Fax",
+  "📱 Mobile": "📱 Mobile",
   "🔔 Reminder: :label for :contactName": "🔔 Lembrete: :label para :contactName",
   "😀 Good": "😀 Bom",
   "😁 Positive": "😁 Positivo",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 Negativo",
   "😩 Awful": "😩 Horrível",
   "😶‍🌫️ Neutral": "😶‍🌫️ Neutro",
-  "🥳 Awesome": "🥳 Incrível"
+  "🥳 Awesome": "🥳 Incrível",
+  "🧑🏼 Personal": "🧑🏼 Pessoal"
 }
