--- a/lang/ro.json
+++ b/lang/ro.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Esti sigur? Acest lucru va șterge definitiv documentul.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Esti sigur? Acest lucru va șterge definitiv obiectivul și toate dungile.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Esti sigur? Aceasta va elimina tipurile de adrese din toate contactele, dar nu va șterge contactele în sine.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Esti sigur? Aceasta va elimina tipurile de informații de contact din toate contactele, dar nu va șterge persoanele de contact în sine.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Ești sigur? Acest lucru va elimina tipul de informații de contact din toate contactele, dar nu va șterge contactele în sine.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Esti sigur? Aceasta va elimina sexele din toate contactele, dar nu va șterge persoanele de contact în sine.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Esti sigur? Acest lucru va elimina șablonul din toate contactele, dar nu va șterge persoanele de contact în sine.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Sunteți sigur că doriți să ștergeți această echipă? Odată ce o echipă este ștearsă, toate resursele și datele sale vor fi șterse definitiv.",
@@ -234,6 +234,7 @@
   "Bird": "Pasăre",
   "Birthdate": "Data de naștere",
   "Birthday": "Zi de nastere",
+  "Bluesky": "Bluesky",
   "Body": "Corp",
   "boss": "sef",
   "Bought": "Cumparat",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "Mod curent de afișare a numerelor:",
   "Customize how contacts should be displayed": "Personalizați modul în care ar trebui să fie afișate contactele",
   "Custom name order": "Comanda de nume personalizată",
+  "Custom…": "Obicei ...",
   "Daily affirmation": "Afirmare zilnică",
   "Dashboard": "Tablou de bord",
+  "Data": "Date",
   "date": "Data",
   "Date of the event": "Data evenimentului",
   "Date of the event:": "Data evenimentului:",
@@ -383,6 +386,8 @@
   "Delete": "Șterge",
   "Delete :name": "Șterge :name",
   "Delete Account": "Șterge Contul",
+  "Delete a contact information": "Ștergeți o informație de contact",
+  "Delete a contact information type": "Ștergeți un tip de informații de contact",
   "Delete a new key": "Ștergeți o cheie nouă",
   "Delete API Token": "Șterge simbolul API",
   "Delete contact": "Ștergeți contactul",
@@ -480,6 +485,7 @@
   "Family": "Familie",
   "Family summary": "Rezumatul familiei",
   "Favorites": "Favorite",
+  "Fax": "Fax",
   "Female": "Femeie",
   "File": "Fişier",
   "Files": "Fișiere",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Ocaziile cadou vă permit să vă clasificați toate cadourile.",
   "Gift states": "Stări de cadou",
   "Gift states let you define the various states for your gifts.": "Stările de cadouri vă permit să definiți diferitele stări pentru cadourile dvs.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Dați un nume acestei adrese de e-mail",
   "Goals": "Goluri",
   "Go back": "Întoarce-te",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "Tipurile de grup vă permit să grupați oameni împreună.",
   "Had a promotion": "A avut o promovare",
   "Hamster": "Hamster",
+  "Hangouts": "Hangouts",
   "Have a great day,": "O zi bună,",
   "he/him": "el/lui",
   "Hello!": "Bună!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "Istoricul notificării trimise",
   "Hobbies": "Hobby-uri",
   "Home": "Pagina principală",
+  "Home House": "Casa de casă",
   "Horse": "Cal",
   "How are you?": "Ce mai faci?",
   "How could I have done this day better?": "Cum aș fi putut face ziua asta mai bine?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "Informații de pe Wikipedia",
   "in love with": "în dragoste cu",
   "Inspirational post": "Postare de inspirație",
+  "Instagram": "Instagram",
+  "Instant messaging": "Mesaje instantanee",
   "Insufficient Storage": "Spațiu de stocare insuficient",
   "Internal Server Error": "Internal Server Error",
   "Introduction": "Introducere",
@@ -618,6 +629,7 @@
   "Just to say hello": "Doar pentru a saluta",
   "Key name": "Numele cheii",
   "kilometers (km)": "kilometri (km)",
+  "Kind": "Fel",
   "km": "km",
   "Label:": "Eticheta:",
   "Labels": "Etichete",
@@ -706,6 +718,7 @@
   "miles": "mile",
   "miles (mi)": "mile (mi)",
   "Misdirected Request": "Solicitare direcționată greșit",
+  "Mobile": "Mobil",
   "Modules in this page": "Modulele din această pagină",
   "Monday": "luni",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Toate drepturile rezervate. 2017 — :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "Încă nu există etichete.",
   "No life event types yet.": "Încă nu există tipuri de evenimente de viață.",
   "Non-Authoritative Information": "Informații neautoritare",
+  "None": "Nici unul",
   "No notes found.": "Nu s-au găsit note.",
   "No results found": "Nici un rezultat gasit",
   "No role": "Nici un rol",
@@ -798,6 +812,7 @@
   "Other": "Alte",
   "Out of respect and appreciation": "Din respect și apreciere",
   "Page Expired": "Pagina a expirat",
+  "Pager": "Pager",
   "Pages": "Pagini",
   "Pagination Navigation": "Navigare Paginare",
   "Parent": "Mamă",
@@ -823,6 +838,7 @@
   "Pet category": "Categoria animalelor de companie",
   "Pets": "Animale de companie",
   "Phone": "Telefon",
+  "Phone number": "Număr de telefon",
   "Photo": "Fotografie",
   "Photos": "Fotografii",
   "Played basketball": "A jucat baschet",
@@ -1006,6 +1022,7 @@
   "Slices of life": "Bucuri de viață",
   "Small animal": "Animal mic",
   "Social": "Social",
+  "Social profile": "Profil social",
   "Solve": "Rezolvă",
   "Some dates have a special type that we will use in the software to calculate an age.": "Unele date au un tip special pe care îl vom folosi în software pentru a calcula o vârstă.",
   "So… it works 😼": "Deci... funcționează 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "Termenii serviciului",
   "Test email for Monica": "E-mail de testare pentru Monica",
   "Test email sent!": "E-mail de test trimis!",
+  "Text": "Text",
   "Thanks,": "Mulțumiri,",
   "Thanks for giving Monica a try.": "Mulțumesc că ai încercat Monica.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Mulțumesc pentru înscriere! Înainte de a începe, ați putea să vă verificați adresa de e-mail făcând clic pe linkul pe care tocmai vi l-am trimis prin e-mail? Dacă nu ați primit e-mailul, vă vom trimite cu plăcere altul.",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "Tipul de adresă a fost actualizat",
   "The call has been created": "Apelul a fost creat",
   "The call has been deleted": "Apelul a fost șters",
-  "The call has been edited": "Apelul a fost editat",
+  "The call has been updated": "Apelul a fost actualizat",
   "The call reason has been created": "Motivul apelului a fost creat",
   "The call reason has been deleted": "Motivul apelului a fost șters",
   "The call reason has been updated": "Motivul apelului a fost actualizat",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "Contactul nu aparține încă niciunui grup.",
   "The contact has been added": "Contactul a fost adăugat",
   "The contact has been deleted": "Contactul a fost șters",
-  "The contact has been edited": "Contactul a fost editat",
   "The contact has been removed from the group": "Persoana de contact a fost eliminată din grup",
+  "The contact has been updated": "Contactul a fost actualizat",
   "The contact information has been created": "Informațiile de contact au fost create",
   "The contact information has been deleted": "Informațiile de contact au fost șterse",
-  "The contact information has been edited": "Informațiile de contact au fost editate",
+  "The contact information has been updated": "Informațiile de contact au fost actualizate",
   "The contact information type has been created": "Tipul de informații de contact a fost creat",
   "The contact information type has been deleted": "Tipul de informații de contact a fost șters",
   "The contact information type has been updated": "Tipul de informații de contact a fost actualizat",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "Datele date au fost nevalide.",
   "The goal has been created": "Scopul a fost creat",
   "The goal has been deleted": "Scopul a fost șters",
-  "The goal has been edited": "Scopul a fost editat",
+  "The goal has been updated": "Obiectivul a fost actualizat",
   "The group has been added": "Grupul a fost adăugat",
   "The group has been deleted": "Grupul a fost șters",
   "The group has been updated": "Grupul a fost actualizat",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "Valoarea de viață a fost actualizată",
   "The loan has been created": "Împrumutul a fost creat",
   "The loan has been deleted": "Împrumutul a fost șters",
-  "The loan has been edited": "Împrumutul a fost editat",
   "The loan has been settled": "Împrumutul a fost decontat",
+  "The loan has been updated": "Împrumutul a fost actualizat",
   "The loan is an object": "Împrumutul este un obiect",
   "The loan is monetary": "Împrumutul este monetar",
   "The module has been added": "Modulul a fost adăugat",
   "The module has been removed": "Modulul a fost eliminat",
   "The note has been created": "Nota a fost creată",
   "The note has been deleted": "Nota a fost ștearsă",
-  "The note has been edited": "Nota a fost editată",
+  "The note has been updated": "Nota a fost actualizată",
   "The notification has been sent": "Notificarea a fost trimisă",
   "The operation either timed out or was not allowed.": "Operația fie a expirat, fie nu a fost permisă.",
   "The page has been added": "Pagina a fost adăugată",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "Categoria animalelor de companie a fost actualizată",
   "The pet has been added": "Animalul de companie a fost adăugat",
   "The pet has been deleted": "Animalul de companie a fost șters",
-  "The pet has been edited": "Animalul de companie a fost editat",
+  "The pet has been updated": "Animalul de companie a fost actualizat",
   "The photo has been added": "Fotografia a fost adăugată",
   "The photo has been deleted": "Fotografia a fost ștearsă",
   "The position has been saved": "Poziția a fost salvată",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "Codul de recuperare cu doi factori furnizat a fost nevalid.",
   "There are no active addresses yet.": "Nu există încă adrese active.",
   "There are no calls logged yet.": "Nu există apeluri înregistrate încă.",
-  "There are no contact information yet.": "Nu există încă informații de contact.",
+  "There are no contact informations yet.": "Nu există încă informații de contact.",
+  "There are no contact information types yet.": "Încă nu există tipuri de informații de contact.",
   "There are no documents yet.": "Nu există încă documente.",
   "There are no events on that day, future or past.": "Nu există evenimente în acea zi, viitor sau trecut.",
   "There are no files yet.": "Nu există încă fișiere.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "Religia a fost actualizată",
   "The reminder has been created": "Mementoul a fost creat",
   "The reminder has been deleted": "Mementoul a fost șters",
-  "The reminder has been edited": "Mementoul a fost editat",
+  "The reminder has been updated": "Memento -ul a fost actualizat",
   "The response is not a streamed response.": "Răspunsul nu este un răspuns transmis în flux.",
   "The response is not a view.": "Răspunsul nu este o viziune.",
   "The role has been created": "Rolul a fost creat",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "Eticheta a fost actualizată",
   "The task has been created": "Sarcina a fost creată",
   "The task has been deleted": "Sarcina a fost ștearsă",
-  "The task has been edited": "Sarcina a fost editată",
+  "The task has been updated": "Sarcina a fost actualizată",
   "The team's name and owner information.": "Numele echipei și informații despre proprietar.",
   "The Telegram channel has been deleted": "Canalul Telegram a fost șters",
   "The template has been created": "Șablonul a fost creat",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "Acest utilizator a fost deja invitat în echipă.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Acest utilizator va face parte din contul dvs., dar nu va avea acces la toate seifurile din acest cont decât dacă le acordați acces specific. Această persoană va putea crea și seifuri.",
   "This will immediately:": "Acest lucru va:",
+  "Threads": "Fire",
   "Three things that happened today": "Trei lucruri care s-au întâmplat astăzi",
   "Thursday": "joi",
   "Timezone": "Fus orar",
@@ -1274,6 +1294,7 @@
   "Translate It": "Traduceți-l",
   "Transportation": "Transport",
   "Tuesday": "marţi",
+  "Twitter": "Stare de nervozitate",
   "Two-factor Confirmation": "Confirmare cu doi factori",
   "Two Factor Authentication": "Autentificare Cu Doi Factori",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Autentificarea cu doi factori este acum activată. Scanați următorul cod QR folosind aplicația de autentificare a telefonului sau introduceți cheia de configurare.",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 Reședință secundară",
   "🏡 Home": "🏡 Acasă",
   "🏢 Work": "🏢 Munca",
+  "📟 Pager": "📟 Pager",
+  "📠 Fax": "📠 Fax",
+  "📱 Mobile": "📱 Mobile",
   "🔔 Reminder: :label for :contactName": "🔔 Memento: :label pentru :contactName",
   "😀 Good": "😀 Bun",
   "😁 Positive": "😁 Pozitiv",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 Negativ",
   "😩 Awful": "😩 Îngrozitor",
   "😶‍🌫️ Neutral": "😶‍🌫️ Neutru",
-  "🥳 Awesome": "🥳 Minunat"
+  "🥳 Awesome": "🥳 Minunat",
+  "🧑🏼 Personal": "🧑🏼 Personal"
 }
