--- a/lang/ru.json
+++ b/lang/ru.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Вы уверены? Это приведет к удалению документа навсегда.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Вы уверены? Это навсегда удалит гол и все серии.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Вы уверены? Это удалит типы адресов из всех контактов, но не удалит сами контакты.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Вы уверены? Это приведет к удалению типов контактной информации из всех контактов, но не к удалению самих контактов.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Вы уверены? Это удалит тип контактной информации из всех контактов, но не удалит сами контакты.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Вы уверены? Это приведет к удалению пола из всех контактов, но не к удалению самих контактов.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Вы уверены? Это удалит шаблон из всех контактов, но не удалит сами контакты.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Вы уверены что хотите удалить эту команду? После удаления команды все её ресурсы и данные будут удалены без возможности восстановления.",
@@ -234,6 +234,7 @@
   "Bird": "Птица",
   "Birthdate": "Дата рождения",
   "Birthday": "День рождения",
+  "Bluesky": "Блюзский",
   "Body": "Тело",
   "boss": "босс",
   "Bought": "Купил",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "Текущий способ отображения чисел:",
   "Customize how contacts should be displayed": "Настройте способ отображения контактов",
   "Custom name order": "Пользовательский порядок имен",
+  "Custom…": "Обычай…",
   "Daily affirmation": "Ежедневное подтверждение",
   "Dashboard": "Панель",
+  "Data": "Данные",
   "date": "дата",
   "Date of the event": "Дата мероприятия",
   "Date of the event:": "Дата мероприятия:",
@@ -383,6 +386,8 @@
   "Delete": "Удалить",
   "Delete :name": "Удалить :name",
   "Delete Account": "Удалить аккаунт",
+  "Delete a contact information": "Удалить контактную информацию",
+  "Delete a contact information type": "Удалить тип контактной информации",
   "Delete a new key": "Удалить новый ключ",
   "Delete API Token": "Удалить API токен",
   "Delete contact": "Удалить контакт",
@@ -480,6 +485,7 @@
   "Family": "Семья",
   "Family summary": "Семейное резюме",
   "Favorites": "Избранное",
+  "Fax": "Факс",
   "Female": "Женский",
   "File": "Файл",
   "Files": "Файлы",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Подарочные поводы позволяют классифицировать все ваши подарки.",
   "Gift states": "Подарочные состояния",
   "Gift states let you define the various states for your gifts.": "Состояния подарков позволяют вам определять различные состояния ваших подарков.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Дайте этому адресу электронной почты имя",
   "Goals": "Цели",
   "Go back": "Возвращаться",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "Типы групп позволяют группировать людей вместе.",
   "Had a promotion": "Было повышение по службе",
   "Hamster": "Хомяк",
+  "Hangouts": "Тусовщики",
   "Have a great day,": "Хорошего дня,",
   "he/him": "он/его",
   "Hello!": "Здравствуйте!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "История отправленных уведомлений",
   "Hobbies": "Увлечения",
   "Home": "На главную",
+  "Home House": "Домашний дом",
   "Horse": "Лошадь",
   "How are you?": "Как вы?",
   "How could I have done this day better?": "Как я мог провести этот день лучше?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "Информация из Википедии",
   "in love with": "влюблен в",
   "Inspirational post": "Вдохновляющий пост",
+  "Instagram": "Instagram",
+  "Instant messaging": "Мгновенный обмен сообщениями",
   "Insufficient Storage": "Переполнение хранилища",
   "Internal Server Error": "Внутренняя ошибка",
   "Introduction": "Введение",
@@ -618,6 +629,7 @@
   "Just to say hello": "Просто чтобы поздороваться",
   "Key name": "Имя ключа",
   "kilometers (km)": "километры (км)",
+  "Kind": "Добрый",
   "km": "км",
   "Label:": "Этикетка:",
   "Labels": "Этикетки",
@@ -706,6 +718,7 @@
   "miles": "миль",
   "miles (mi)": "мили (ми)",
   "Misdirected Request": "Неверный запрос",
+  "Mobile": "Мобильный",
   "Modules in this page": "Модули на этой странице",
   "Monday": "Понедельник",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Все права защищены. 2017 — :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "Этикеток пока нет.",
   "No life event types yet.": "Типов жизненных событий пока нет.",
   "Non-Authoritative Information": "Информация не авторитетна",
+  "None": "Никто",
   "No notes found.": "Заметок не найдено.",
   "No results found": "результатов не найдено",
   "No role": "Нет роли",
@@ -798,6 +812,7 @@
   "Other": "Другой",
   "Out of respect and appreciation": "Из уважения и признательности",
   "Page Expired": "Страница устарела",
+  "Pager": "Пейджер",
   "Pages": "Страницы",
   "Pagination Navigation": "Навигация",
   "Parent": "Родитель",
@@ -823,6 +838,7 @@
   "Pet category": "Категория домашнего животного",
   "Pets": "Домашние питомцы",
   "Phone": "Телефон",
+  "Phone number": "Номер телефона",
   "Photo": "Фото",
   "Photos": "Фото",
   "Played basketball": "Играл в баскетбол",
@@ -1006,6 +1022,7 @@
   "Slices of life": "Кусочки жизни",
   "Small animal": "Маленькое животное",
   "Social": "Социальное",
+  "Social profile": "Социальный профиль",
   "Solve": "Решить",
   "Some dates have a special type that we will use in the software to calculate an age.": "Некоторые даты имеют специальный тип, который мы будем использовать в программе для расчета возраста.",
   "So… it works 😼": "Итак… это работает 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "Условия обслуживания",
   "Test email for Monica": "Тестовое письмо для Monica",
   "Test email sent!": "Тестовое письмо отправлено!",
+  "Text": "Текст",
   "Thanks,": "Спасибо,",
   "Thanks for giving Monica a try.": "Спасибо, что дали Monica шанс.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Спасибо за регистрацию! Прежде чем начать, не могли бы вы подтвердить свой адрес электронной почты, нажав на ссылку, которую мы только что отправили вам по электронной почте? Если вы не получили письмо, мы с радостью отправим вам другое.",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "Тип адреса обновлен.",
   "The call has been created": "Звонок создан.",
   "The call has been deleted": "Звонок удален",
-  "The call has been edited": "Звонок был отредактирован",
+  "The call has been updated": "Звонок был обновлен",
   "The call reason has been created": "Причина звонка создана.",
   "The call reason has been deleted": "Причина звонка удалена",
   "The call reason has been updated": "Причина звонка обновлена.",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "Контакт пока не принадлежит ни к одной группе.",
   "The contact has been added": "Контакт добавлен",
   "The contact has been deleted": "Контакт удален",
-  "The contact has been edited": "Контакт был отредактирован",
   "The contact has been removed from the group": "Контакт удален из группы.",
+  "The contact has been updated": "Контакт был обновлен",
   "The contact information has been created": "Контактная информация создана.",
   "The contact information has been deleted": "Контактная информация удалена",
-  "The contact information has been edited": "Контактная информация была отредактирована",
+  "The contact information has been updated": "Контактная информация была обновлена",
   "The contact information type has been created": "Тип контактной информации создан.",
   "The contact information type has been deleted": "Тип контактной информации удален.",
   "The contact information type has been updated": "Тип контактной информации обновлен.",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "Указанные данные недействительны.",
   "The goal has been created": "Цель создана",
   "The goal has been deleted": "Цель удалена",
-  "The goal has been edited": "Цель была изменена",
+  "The goal has been updated": "Цель была обновлена",
   "The group has been added": "Группа добавлена",
   "The group has been deleted": "Группа удалена",
   "The group has been updated": "Группа обновлена",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "Метрика жизни обновлена.",
   "The loan has been created": "Кредит создан.",
   "The loan has been deleted": "Кредит удален.",
-  "The loan has been edited": "Кредит был отредактирован",
   "The loan has been settled": "Кредит погашен",
+  "The loan has been updated": "Кредит был обновлен",
   "The loan is an object": "Кредит – это объект",
   "The loan is monetary": "Кредит денежный",
   "The module has been added": "Модуль был добавлен",
   "The module has been removed": "Модуль был удален",
   "The note has been created": "Заметка создана.",
   "The note has been deleted": "Заметка удалена",
-  "The note has been edited": "Заметка была отредактирована",
+  "The note has been updated": "Примечание была обновлена",
   "The notification has been sent": "Уведомление отправлено",
   "The operation either timed out or was not allowed.": "Операция либо истекла по тайм-ауту, либо была запрещена.",
   "The page has been added": "Страница добавлена",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "Категория домашних животных обновлена.",
   "The pet has been added": "Питомец был добавлен",
   "The pet has been deleted": "Питомец был удален",
-  "The pet has been edited": "Питомец был отредактирован",
+  "The pet has been updated": "Питомец был обновлен",
   "The photo has been added": "Фотография была добавлена",
   "The photo has been deleted": "Фотография удалена",
   "The position has been saved": "Позиция сохранена.",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "Предоставленный двухфакторный код восстановления недействителен.",
   "There are no active addresses yet.": "Активных адресов пока нет.",
   "There are no calls logged yet.": "Пока еще не зарегистрировано ни одного звонка.",
-  "There are no contact information yet.": "Контактной информации пока нет.",
+  "There are no contact informations yet.": "Контактной информации пока нет.",
+  "There are no contact information types yet.": "Там еще нет контактных типов информации.",
   "There are no documents yet.": "Документов пока нет.",
   "There are no events on that day, future or past.": "В этот день нет никаких событий ни в будущем, ни в прошлом.",
   "There are no files yet.": "Файлов пока нет.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "Религия обновлена.",
   "The reminder has been created": "Напоминание создано.",
   "The reminder has been deleted": "Напоминание удалено",
-  "The reminder has been edited": "Напоминание было отредактировано",
+  "The reminder has been updated": "Напоминание было обновлено",
   "The response is not a streamed response.": "Ответ не является потоковым.",
   "The response is not a view.": "Ответ не является представлением.",
   "The role has been created": "Роль создана.",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "Тег обновлен.",
   "The task has been created": "Задача создана",
   "The task has been deleted": "Задача удалена",
-  "The task has been edited": "Задача была отредактирована",
+  "The task has been updated": "Задача была обновлена",
   "The team's name and owner information.": "Название команды и информация о её владельце.",
   "The Telegram channel has been deleted": "Телеграм-канал удален.",
   "The template has been created": "Шаблон создан.",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "Этот пользователь уже был приглашён в команду.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Этот пользователь будет частью вашей учетной записи, но не получит доступа ко всем хранилищам в этой учетной записи, если вы не предоставите к ним специальный доступ. Этот человек также сможет создавать хранилища.",
   "This will immediately:": "Это немедленно:",
+  "Threads": "Нить",
   "Three things that happened today": "Три вещи, которые произошли сегодня",
   "Thursday": "Четверг",
   "Timezone": "Часовой пояс",
@@ -1274,6 +1294,7 @@
   "Translate It": "Перевести",
   "Transportation": "Транспорт",
   "Tuesday": "Вторник",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "Двухфакторное подтверждение",
   "Two Factor Authentication": "Двухфакторная аутентификация",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Двухфакторная аутентификация успешно активирована. Отсканируйте следующий QR-код при помощи приложения аутентификации на Вашем телефоне для проверки подлинности или введите ключ настройки.",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 Второе место жительства",
   "🏡 Home": "🏡 Дом",
   "🏢 Work": "🏢 Работа",
+  "📟 Pager": "📟 Пейджер",
+  "📠 Fax": "📠 Факс",
+  "📱 Mobile": "📱 Мобильный",
   "🔔 Reminder: :label for :contactName": "🔔 Напоминание: :label для :contactName",
   "😀 Good": "😀 Хорошо",
   "😁 Positive": "😁 Позитив",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 Отрицательный",
   "😩 Awful": "😩 Ужасно",
   "😶‍🌫️ Neutral": "😶‍🌫️ Нейтрально",
-  "🥳 Awesome": "🥳 Круто"
+  "🥳 Awesome": "🥳 Круто",
+  "🧑🏼 Personal": "🧑🏼 Личный"
 }
