--- a/lang/sv.json
+++ b/lang/sv.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Är du säker? Detta kommer att radera dokumentet permanent.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Är du säker? Detta tar bort målet och alla streak permanent.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Är du säker? Detta tar bort adresstyperna från alla kontakter, men tar inte bort kontakterna själva.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Är du säker? Detta tar bort kontaktinformationstyperna från alla kontakter, men tar inte bort kontakterna själva.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Är du säker? Detta tar bort kontaktinformationstypen från alla kontakter, men tar inte bort kontakterna själva.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Är du säker? Detta tar bort könen från alla kontakter, men tar inte bort kontakterna själva.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Är du säker? Detta tar bort mallen från alla kontakter, men tar inte bort kontakterna själva.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Är du säker på att du vill ta bort det här laget? När ett lag har tagits bort kommer alla dess resurser och data att raderas permanent.",
@@ -234,6 +234,7 @@
   "Bird": "Fågel",
   "Birthdate": "Födelsedatum",
   "Birthday": "Födelsedag",
+  "Bluesky": "Bluessky",
   "Body": "Kropp",
   "boss": "chef",
   "Bought": "Köpt",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "Aktuellt sätt att visa siffror:",
   "Customize how contacts should be displayed": "Anpassa hur kontakter ska visas",
   "Custom name order": "Anpassad namnordning",
+  "Custom…": "Beställnings…",
   "Daily affirmation": "Daglig bekräftelse",
   "Dashboard": "Instrumentpanel",
+  "Data": "Data",
   "date": "datum",
   "Date of the event": "Datum för händelsen",
   "Date of the event:": "Datum för evenemanget:",
@@ -383,6 +386,8 @@
   "Delete": "Radera",
   "Delete :name": "Ta bort :name",
   "Delete Account": "Radera konto",
+  "Delete a contact information": "Ta bort en kontaktinformation",
+  "Delete a contact information type": "Ta bort en kontaktinformationstyp",
   "Delete a new key": "Ta bort en ny nyckel",
   "Delete API Token": "Radera API-token",
   "Delete contact": "Ta bort kontakt",
@@ -480,6 +485,7 @@
   "Family": "Familj",
   "Family summary": "Familjesammanfattning",
   "Favorites": "Favoriter",
+  "Fax": "Fax",
   "Female": "Kvinna",
   "File": "Fil",
   "Files": "Filer",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Presenttillfällen låter dig kategorisera alla dina gåvor.",
   "Gift states": "Gåva anger",
   "Gift states let you define the various states for your gifts.": "Gåvotillstånd låter dig definiera de olika tillstånden för dina gåvor.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Ge den här e-postadressen ett namn",
   "Goals": "Mål",
   "Go back": "Gå tillbaka",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "Grupptyper låter dig gruppera personer tillsammans.",
   "Had a promotion": "Hade en befordran",
   "Hamster": "Hamster",
+  "Hangouts": "Hangouts",
   "Have a great day,": "Ha en bra dag,",
   "he/him": "han/honom",
   "Hello!": "Hej!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "Historik för det skickade meddelandet",
   "Hobbies": "Hobbyer",
   "Home": "Hem",
+  "Home House": "Hemhus",
   "Horse": "Häst",
   "How are you?": "Hur mår du?",
   "How could I have done this day better?": "Hur kunde jag ha gjort den här dagen bättre?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "Information från Wikipedia",
   "in love with": "förälskad i",
   "Inspirational post": "Inspirerande inlägg",
+  "Instagram": "Instagram",
+  "Instant messaging": "Snabbmeddelanden",
   "Insufficient Storage": "Otillräckligt förvaringsutrymme",
   "Internal Server Error": "internt serverfel",
   "Introduction": "Introduktion",
@@ -618,6 +629,7 @@
   "Just to say hello": "Bara för att säga hej",
   "Key name": "Nyckelnamn",
   "kilometers (km)": "kilometer (km)",
+  "Kind": "Slag",
   "km": "km",
   "Label:": "Märka:",
   "Labels": "Etiketter",
@@ -706,6 +718,7 @@
   "miles": "mil",
   "miles (mi)": "miles (mi)",
   "Misdirected Request": "Felriktad begäran",
+  "Mobile": "Mobil",
   "Modules in this page": "Moduler på denna sida",
   "Monday": "måndag",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Alla rättigheter förbehållna. 2017 — :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "Inga etiketter ännu.",
   "No life event types yet.": "Inga typer av livshändelser än.",
   "Non-Authoritative Information": "Icke-auktoritativ information",
+  "None": "Ingen",
   "No notes found.": "Inga anteckningar hittades.",
   "No results found": "Inga resultat funna",
   "No role": "Ingen roll",
@@ -798,6 +812,7 @@
   "Other": "Övrig",
   "Out of respect and appreciation": "Av respekt och uppskattning",
   "Page Expired": "Sidan är utgången",
+  "Pager": "Personsökare",
   "Pages": "Sidor",
   "Pagination Navigation": "Sidnumrering Navigering",
   "Parent": "Förälder",
@@ -823,6 +838,7 @@
   "Pet category": "Kategori för husdjur",
   "Pets": "Husdjur",
   "Phone": "Telefon",
+  "Phone number": "Telefonnummer",
   "Photo": "Foto",
   "Photos": "Foton",
   "Played basketball": "Spelade basket",
@@ -1006,6 +1022,7 @@
   "Slices of life": "Skivor av livet",
   "Small animal": "Litet djur",
   "Social": "Social",
+  "Social profile": "Social profil",
   "Solve": "Lösa",
   "Some dates have a special type that we will use in the software to calculate an age.": "Vissa datum har en speciell typ som vi kommer att använda i programvaran för att beräkna en ålder.",
   "So… it works 😼": "Så... det fungerar 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "användarvillkor",
   "Test email for Monica": "Testmail för Monica",
   "Test email sent!": "Testmail skickat!",
+  "Text": "Text",
   "Thanks,": "Tack,",
   "Thanks for giving Monica a try.": "Tack för att du gav Monica ett försök.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Tack för att du registrerade dig! Innan du börjar, kan du verifiera din e-postadress genom att klicka på länken vi just skickade till dig via e-post? Om du inte har fått e-postmeddelandet skickar vi gärna ett till.",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "Adresstypen har uppdaterats",
   "The call has been created": "Samtalet har skapats",
   "The call has been deleted": "Samtalet har raderats",
-  "The call has been edited": "Samtalet har redigerats",
+  "The call has been updated": "Samtalet har uppdaterats",
   "The call reason has been created": "Anropsanledningen har skapats",
   "The call reason has been deleted": "Anropsanledningen har tagits bort",
   "The call reason has been updated": "Orsaken till samtalet har uppdaterats",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "Kontakten tillhör inte någon grupp ännu.",
   "The contact has been added": "Kontakten har lagts till",
   "The contact has been deleted": "Kontakten har tagits bort",
-  "The contact has been edited": "Kontakten har redigerats",
   "The contact has been removed from the group": "Kontakten har tagits bort från gruppen",
+  "The contact has been updated": "Kontakten har uppdaterats",
   "The contact information has been created": "Kontaktinformationen har skapats",
   "The contact information has been deleted": "Kontaktuppgifterna har raderats",
-  "The contact information has been edited": "Kontaktinformationen har redigerats",
+  "The contact information has been updated": "Kontaktinformationen har uppdaterats",
   "The contact information type has been created": "Kontaktinformationstypen har skapats",
   "The contact information type has been deleted": "Kontaktinformationstypen har tagits bort",
   "The contact information type has been updated": "Kontaktinformationstypen har uppdaterats",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "De angivna uppgifterna var ogiltiga.",
   "The goal has been created": "Målet är skapat",
   "The goal has been deleted": "Målet har tagits bort",
-  "The goal has been edited": "Målet har redigerats",
+  "The goal has been updated": "Målet har uppdaterats",
   "The group has been added": "Gruppen har lagts till",
   "The group has been deleted": "Gruppen har tagits bort",
   "The group has been updated": "Gruppen har uppdaterats",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "Livsmåttet har uppdaterats",
   "The loan has been created": "Lånet har skapats",
   "The loan has been deleted": "Lånet har raderats",
-  "The loan has been edited": "Lånet har redigerats",
   "The loan has been settled": "Lånet är reglerat",
+  "The loan has been updated": "Lånet har uppdaterats",
   "The loan is an object": "Lånet är ett objekt",
   "The loan is monetary": "Lånet är monetärt",
   "The module has been added": "Modulen har lagts till",
   "The module has been removed": "Modulen har tagits bort",
   "The note has been created": "Anteckningen har skapats",
   "The note has been deleted": "Anteckningen har raderats",
-  "The note has been edited": "Anteckningen har redigerats",
+  "The note has been updated": "Noten har uppdaterats",
   "The notification has been sent": "Aviseringen har skickats",
   "The operation either timed out or was not allowed.": "Operationen tog antingen timeout eller var inte tillåten.",
   "The page has been added": "Sidan har lagts till",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "Husdjurskategorin har uppdaterats",
   "The pet has been added": "Husdjuret har lagts till",
   "The pet has been deleted": "Husdjuret har tagits bort",
-  "The pet has been edited": "Husdjuret har redigerats",
+  "The pet has been updated": "Husdjuret har uppdaterats",
   "The photo has been added": "Fotot har lagts till",
   "The photo has been deleted": "Fotot har tagits bort",
   "The position has been saved": "Positionen har sparats",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "Den angivna tvåfaktorsåterställningskoden var ogiltig.",
   "There are no active addresses yet.": "Det finns inga aktiva adresser ännu.",
   "There are no calls logged yet.": "Det finns inga loggade samtal än.",
-  "There are no contact information yet.": "Det finns inga kontaktuppgifter ännu.",
+  "There are no contact informations yet.": "Det finns inga kontaktuppgifter ännu.",
+  "There are no contact information types yet.": "Det finns inga kontaktinformationstyper än.",
   "There are no documents yet.": "Det finns inga dokument ännu.",
   "There are no events on that day, future or past.": "Det finns inga händelser den dagen, framtiden eller det förflutna.",
   "There are no files yet.": "Det finns inga filer än.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "Religionen har uppdaterats",
   "The reminder has been created": "Påminnelsen har skapats",
   "The reminder has been deleted": "Påminnelsen har raderats",
-  "The reminder has been edited": "Påminnelsen har redigerats",
+  "The reminder has been updated": "Påminnelsen har uppdaterats",
   "The response is not a streamed response.": "Svaret är inte ett streamat svar.",
   "The response is not a view.": "Svaret är inte en syn.",
   "The role has been created": "Rollen är skapad",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "Taggen har uppdaterats",
   "The task has been created": "Uppgiften har skapats",
   "The task has been deleted": "Uppgiften har tagits bort",
-  "The task has been edited": "Uppgiften har redigerats",
+  "The task has been updated": "Uppgiften har uppdaterats",
   "The team's name and owner information.": "Lagets namn och ägarinformation.",
   "The Telegram channel has been deleted": "Telegramkanalen har tagits bort",
   "The template has been created": "Mallen har skapats",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "Den här användaren har redan blivit inbjuden till laget.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Den här användaren kommer att vara en del av ditt konto, men kommer inte att få tillgång till alla valven i det här kontot om du inte ger specifik åtkomst till dem. Den här personen kommer också att kunna skapa valv.",
   "This will immediately:": "Detta kommer omedelbart:",
+  "Threads": "Trådar",
   "Three things that happened today": "Tre saker som hände idag",
   "Thursday": "torsdag",
   "Timezone": "Tidszon",
@@ -1274,6 +1294,7 @@
   "Translate It": "Översätt det",
   "Transportation": "Transport",
   "Tuesday": "tisdag",
+  "Twitter": "Kvittra",
   "Two-factor Confirmation": "Tvåfaktorsbekräftelse",
   "Two Factor Authentication": "Tvåfaktorsautentisering",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Tvåfaktorsautentisering är nu aktiverad. Skanna följande QR-kod med telefonens autentiseringsprogram eller ange inställningsnyckeln.",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 Sekundärbostad",
   "🏡 Home": "🏡 Hemma",
   "🏢 Work": "🏢 Jobba",
+  "📟 Pager": "📟 personsökare",
+  "📠 Fax": "📠 fax",
+  "📱 Mobile": "📱 Mobil",
   "🔔 Reminder: :label for :contactName": "🔔 Påminnelse: :label för :contactName",
   "😀 Good": "😀 Bra",
   "😁 Positive": "😁 Positivt",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 Negativt",
   "😩 Awful": "😩 Hemskt",
   "😶‍🌫️ Neutral": "😶‍🌫️ Neutral",
-  "🥳 Awesome": "🥳 Fantastiskt"
+  "🥳 Awesome": "🥳 Fantastiskt",
+  "🧑🏼 Personal": "🧑🏼 Personlig"
 }
