--- a/lang/te.json
+++ b/lang/te.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "మీరు చెప్పేది నిజమా? ఇది పత్రాన్ని శాశ్వతంగా తొలగిస్తుంది.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "మీరు చెప్పేది నిజమా? ఇది లక్ష్యం మరియు అన్ని స్ట్రీక్‌లను శాశ్వతంగా తొలగిస్తుంది.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "మీరు చెప్పేది నిజమా? ఇది అన్ని కాంటాక్ట్‌ల నుండి అడ్రస్ రకాలను తీసివేస్తుంది, కానీ కాంటాక్ట్‌లను తొలగించదు.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "మీరు చెప్పేది నిజమా? ఇది అన్ని కాంటాక్ట్‌ల నుండి సంప్రదింపు సమాచార రకాలను తీసివేస్తుంది, కానీ కాంటాక్ట్‌లను స్వయంగా తొలగించదు.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "మీకు ఖచ్చితంగా తెలుసా? ఇది అన్ని పరిచయాల నుండి సంప్రదింపు సమాచార రకాన్ని తొలగిస్తుంది, కానీ పరిచయాలను తొలగించదు.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "మీరు చెప్పేది నిజమా? ఇది అన్ని కాంటాక్ట్‌ల నుండి లింగాలను తీసివేస్తుంది, కానీ కాంటాక్ట్‌లను స్వయంగా తొలగించదు.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "మీరు చెప్పేది నిజమా? ఇది అన్ని కాంటాక్ట్‌ల నుండి టెంప్లేట్‌ను తీసివేస్తుంది, కానీ కాంటాక్ట్‌లను స్వయంగా తొలగించదు.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "మీరు ఖచ్చితంగా ఈ బృందాన్ని తొలగించాలనుకుంటున్నారా? బృందం తొలగించబడిన తర్వాత, దాని వనరులు మరియు డేటా మొత్తం శాశ్వతంగా తొలగించబడతాయి.",
@@ -234,6 +234,7 @@
   "Bird": "పక్షి",
   "Birthdate": "పుట్టిన తేదీ",
   "Birthday": "పుట్టినరోజు",
+  "Bluesky": "బ్లూస్కీ",
   "Body": "శరీరం",
   "boss": "బాస్",
   "Bought": "కొన్నారు",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "సంఖ్యలను ప్రదర్శించే ప్రస్తుత మార్గం:",
   "Customize how contacts should be displayed": "పరిచయాలు ఎలా ప్రదర్శించబడాలో అనుకూలీకరించండి",
   "Custom name order": "కస్టమ్ పేరు ఆర్డర్",
+  "Custom…": "కస్టమ్…",
   "Daily affirmation": "రోజువారీ ధృవీకరణ",
   "Dashboard": "డాష్బోర్డ్",
+  "Data": "డేటా",
   "date": "తేదీ",
   "Date of the event": "ఈవెంట్ తేదీ",
   "Date of the event:": "ఈవెంట్ తేదీ:",
@@ -383,6 +386,8 @@
   "Delete": "తొలగించు",
   "Delete :name": "తొలగించు :name",
   "Delete Account": "ఖాతాను తొలగించండి",
+  "Delete a contact information": "సంప్రదింపు సమాచారాన్ని తొలగించండి",
+  "Delete a contact information type": "సంప్రదింపు సమాచార రకాన్ని తొలగించండి",
   "Delete a new key": "కొత్త కీని తొలగించండి",
   "Delete API Token": "API టోకెన్‌ను తొలగించండి",
   "Delete contact": "పరిచయాన్ని తొలగించండి",
@@ -480,6 +485,7 @@
   "Family": "కుటుంబం",
   "Family summary": "కుటుంబ సారాంశం",
   "Favorites": "ఇష్టమైనవి",
+  "Fax": "ఫ్యాక్స్",
   "Female": "స్త్రీ",
   "File": "ఫైల్",
   "Files": "ఫైళ్లు",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "బహుమతి సందర్భాలు మీ అన్ని బహుమతులను వర్గీకరించడానికి మిమ్మల్ని అనుమతిస్తాయి.",
   "Gift states": "బహుమతి రాష్ట్రాలు",
   "Gift states let you define the various states for your gifts.": "మీ బహుమతుల కోసం వివిధ రాష్ట్రాలను నిర్వచించడానికి బహుమతి రాష్ట్రాలు మిమ్మల్ని అనుమతిస్తాయి.",
+  "GitHub": "గితుబ్",
   "Give this email address a name": "ఈ ఇమెయిల్ చిరునామాకు పేరు పెట్టండి",
   "Goals": "లక్ష్యాలు",
   "Go back": "వెనక్కి వెళ్ళు",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "సమూహ రకాలు మిమ్మల్ని వ్యక్తులను సమూహపరచడానికి అనుమతిస్తాయి.",
   "Had a promotion": "ప్రమోషన్ వచ్చింది",
   "Hamster": "చిట్టెలుక",
+  "Hangouts": "Hangouts",
   "Have a great day,": "ఈ రోజు మీకు కుశలంగా ఉండును,",
   "he/him": "అతను/అతడు",
   "Hello!": "హలో!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "పంపిన నోటిఫికేషన్ చరిత్ర",
   "Hobbies": "అభిరుచులు",
   "Home": "హోమ్",
+  "Home House": "హోమ్ హౌస్",
   "Horse": "గుర్రం",
   "How are you?": "మీరు ఎలా ఉన్నారు?",
   "How could I have done this day better?": "నేను ఈ రోజును ఎలా మెరుగ్గా చేయగలను?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "వికీపీడియా నుండి సమాచారం",
   "in love with": "ప్రేమలో",
   "Inspirational post": "స్ఫూర్తిదాయకమైన పోస్ట్",
+  "Instagram": "Instagram",
+  "Instant messaging": "తక్షణ సందేశం",
   "Insufficient Storage": "తగినంత నిల్వ లేదు",
   "Internal Server Error": "అంతర్గత సర్వర్ లోపం",
   "Introduction": "పరిచయం",
@@ -618,6 +629,7 @@
   "Just to say hello": "కేవలం హలో చెప్పడానికే",
   "Key name": "ముఖ్య పేరు",
   "kilometers (km)": "కిలోమీటర్లు (కిమీ)",
+  "Kind": "రకమైన",
   "km": "కి.మీ",
   "Label:": "లేబుల్:",
   "Labels": "లేబుల్స్",
@@ -706,6 +718,7 @@
   "miles": "మైళ్లు",
   "miles (mi)": "మైళ్లు (మై)",
   "Misdirected Request": "తప్పుదారి పట్టించిన అభ్యర్థన",
+  "Mobile": "మొబైల్",
   "Modules in this page": "ఈ పేజీలో మాడ్యూల్స్",
   "Monday": "సోమవారం",
   "Monica. All rights reserved. 2017 — :date.": "Monica. అన్ని హక్కులు ప్రత్యేకించబడ్డాయి. 2017 — :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "ఇంకా లేబుల్‌లు లేవు.",
   "No life event types yet.": "జీవిత సంఘటనల రకాలు ఇంకా లేవు.",
   "Non-Authoritative Information": "అధీకృత సమాచారం",
+  "None": "ఏదీ లేదు",
   "No notes found.": "గమనికలు కనుగొనబడలేదు.",
   "No results found": "ఎటువంటి ఫలితాలు లభించలేదు",
   "No role": "పాత్ర లేదు",
@@ -798,6 +812,7 @@
   "Other": "ఇతర",
   "Out of respect and appreciation": "గౌరవం మరియు ప్రశంసల నుండి",
   "Page Expired": "పేజీ గడువు ముగిసింది",
+  "Pager": "పేజర్",
   "Pages": "పేజీలు",
   "Pagination Navigation": "పేజినేషన్ నావిగేషన్",
   "Parent": "తల్లిదండ్రులు",
@@ -823,6 +838,7 @@
   "Pet category": "పెంపుడు జంతువు వర్గం",
   "Pets": "పెంపుడు జంతువులు",
   "Phone": "ఫోన్",
+  "Phone number": "ఫోన్ నంబర్",
   "Photo": "ఫోటో",
   "Photos": "ఫోటోలు",
   "Played basketball": "బాస్కెట్‌బాల్ ఆడాడు",
@@ -1006,6 +1022,7 @@
   "Slices of life": "జీవితం యొక్క ముక్కలు",
   "Small animal": "చిన్న జంతువు",
   "Social": "సామాజిక",
+  "Social profile": "సామాజిక ప్రొఫైల్",
   "Solve": "పరిష్కరించండి",
   "Some dates have a special type that we will use in the software to calculate an age.": "కొన్ని తేదీలు ఒక ప్రత్యేక రకాన్ని కలిగి ఉంటాయి, వీటిని మేము వయస్సును లెక్కించడానికి సాఫ్ట్‌వేర్‌లో ఉపయోగిస్తాము.",
   "So… it works 😼": "కాబట్టి... ఇది పని చేస్తుంది 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "సేవా నిబంధనలు",
   "Test email for Monica": "Monica కోసం పరీక్ష ఇమెయిల్",
   "Test email sent!": "పరీక్ష ఇమెయిల్ పంపబడింది!",
+  "Text": "వచనం",
   "Thanks,": "ధన్యవాదాలు,",
   "Thanks for giving Monica a try.": "Monica ఒకసారి ప్రయత్నించినందుకు ధన్యవాదాలు.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "సైన్ అప్ చేసినందుకు ధన్యవాదాలు! ప్రారంభించడానికి ముందు, మేము మీకు ఇమెయిల్ పంపిన లింక్‌పై క్లిక్ చేయడం ద్వారా మీరు మీ ఇమెయిల్ చిరునామాను ధృవీకరించగలరా? మీరు ఇమెయిల్‌ను అందుకోకుంటే, మేము మీకు మరొకటి పంపుతాము.",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "చిరునామా రకం నవీకరించబడింది",
   "The call has been created": "కాల్ సృష్టించబడింది",
   "The call has been deleted": "కాల్ తొలగించబడింది",
-  "The call has been edited": "కాల్ సవరించబడింది",
+  "The call has been updated": "కాల్ నవీకరించబడింది",
   "The call reason has been created": "కాల్ కారణం సృష్టించబడింది",
   "The call reason has been deleted": "కాల్ కారణం తొలగించబడింది",
   "The call reason has been updated": "కాల్ కారణం నవీకరించబడింది",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "పరిచయం ఇంకా ఏ సమూహానికి చెందినది కాదు.",
   "The contact has been added": "పరిచయం జోడించబడింది",
   "The contact has been deleted": "పరిచయం తొలగించబడింది",
-  "The contact has been edited": "పరిచయం సవరించబడింది",
   "The contact has been removed from the group": "సమూహం నుండి పరిచయం తీసివేయబడింది",
+  "The contact has been updated": "పరిచయం నవీకరించబడింది",
   "The contact information has been created": "సంప్రదింపు సమాచారం సృష్టించబడింది",
   "The contact information has been deleted": "సంప్రదింపు సమాచారం తొలగించబడింది",
-  "The contact information has been edited": "సంప్రదింపు సమాచారం సవరించబడింది",
+  "The contact information has been updated": "సంప్రదింపు సమాచారం నవీకరించబడింది",
   "The contact information type has been created": "సంప్రదింపు సమాచారం రకం సృష్టించబడింది",
   "The contact information type has been deleted": "సంప్రదింపు సమాచారం రకం తొలగించబడింది",
   "The contact information type has been updated": "సంప్రదింపు సమాచారం రకం నవీకరించబడింది",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "ఇచ్చిన డేటా చెల్లదు.",
   "The goal has been created": "లక్ష్యం సృష్టించబడింది",
   "The goal has been deleted": "లక్ష్యం తొలగించబడింది",
-  "The goal has been edited": "లక్ష్యం సవరించబడింది",
+  "The goal has been updated": "లక్ష్యం నవీకరించబడింది",
   "The group has been added": "సమూహం జోడించబడింది",
   "The group has been deleted": "సమూహం తొలగించబడింది",
   "The group has been updated": "సమూహం నవీకరించబడింది",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "లైఫ్ మెట్రిక్ అప్‌డేట్ చేయబడింది",
   "The loan has been created": "రుణం సృష్టించబడింది",
   "The loan has been deleted": "రుణం తొలగించబడింది",
-  "The loan has been edited": "రుణం సవరించబడింది",
   "The loan has been settled": "రుణం తీర్చబడింది",
+  "The loan has been updated": "రుణం నవీకరించబడింది",
   "The loan is an object": "రుణం ఒక వస్తువు",
   "The loan is monetary": "రుణం ద్రవ్యం",
   "The module has been added": "మాడ్యూల్ జోడించబడింది",
   "The module has been removed": "మాడ్యూల్ తీసివేయబడింది",
   "The note has been created": "గమనిక సృష్టించబడింది",
   "The note has been deleted": "గమనిక తొలగించబడింది",
-  "The note has been edited": "గమనిక సవరించబడింది",
+  "The note has been updated": "గమనిక నవీకరించబడింది",
   "The notification has been sent": "నోటిఫికేషన్ పంపబడింది",
   "The operation either timed out or was not allowed.": "ఆపరేషన్ సమయం ముగిసింది లేదా అనుమతించబడలేదు.",
   "The page has been added": "పేజీ జోడించబడింది",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "పెంపుడు జంతువుల వర్గం నవీకరించబడింది",
   "The pet has been added": "పెంపుడు జంతువు జోడించబడింది",
   "The pet has been deleted": "పెంపుడు జంతువు తొలగించబడింది",
-  "The pet has been edited": "పెంపుడు జంతువు సవరించబడింది",
+  "The pet has been updated": "పెంపుడు జంతువు నవీకరించబడింది",
   "The photo has been added": "ఫోటో జోడించబడింది",
   "The photo has been deleted": "ఫోటో తొలగించబడింది",
   "The position has been saved": "స్థానం సేవ్ చేయబడింది",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "అందించిన రెండు కారకాల రికవరీ కోడ్ చెల్లదు.",
   "There are no active addresses yet.": "ఇంకా క్రియాశీల చిరునామాలు లేవు.",
   "There are no calls logged yet.": "ఇంకా కాల్‌లు ఏవీ లాగిన్ కాలేదు.",
-  "There are no contact information yet.": "ఇంకా సంప్రదింపు సమాచారం లేదు.",
+  "There are no contact informations yet.": "ఇంకా సంప్రదింపు సమాచారం లేదు.",
+  "There are no contact information types yet.": "సంప్రదింపు సమాచార రకాలు ఇంకా లేవు.",
   "There are no documents yet.": "ఇంకా పత్రాలు లేవు.",
   "There are no events on that day, future or past.": "ఆ రోజు, భవిష్యత్తులో లేదా గతంలో ఎటువంటి సంఘటనలు లేవు.",
   "There are no files yet.": "ఇంకా ఫైల్‌లు లేవు.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "మతం నవీకరించబడింది",
   "The reminder has been created": "రిమైండర్ సృష్టించబడింది",
   "The reminder has been deleted": "రిమైండర్ తొలగించబడింది",
-  "The reminder has been edited": "రిమైండర్ సవరించబడింది",
+  "The reminder has been updated": "రిమైండర్ నవీకరించబడింది",
   "The response is not a streamed response.": "ప్రతిస్పందన స్ట్రీమ్ చేసిన ప్రతిస్పందన కాదు.",
   "The response is not a view.": "ప్రతిస్పందన వీక్షణ కాదు.",
   "The role has been created": "పాత్రను రూపొందించారు",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "ట్యాగ్ నవీకరించబడింది",
   "The task has been created": "టాస్క్ సృష్టించబడింది",
   "The task has been deleted": "టాస్క్ తొలగించబడింది",
-  "The task has been edited": "టాస్క్ సవరించబడింది",
+  "The task has been updated": "పని నవీకరించబడింది",
   "The team's name and owner information.": "జట్టు పేరు మరియు యజమాని సమాచారం.",
   "The Telegram channel has been deleted": "టెలిగ్రామ్ ఛానెల్ తొలగించబడింది",
   "The template has been created": "టెంప్లేట్ సృష్టించబడింది",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "ఈ వినియోగదారు ఇప్పటికే బృందానికి ఆహ్వానించబడ్డారు.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "ఈ వినియోగదారు మీ ఖాతాలో భాగమవుతారు, కానీ మీరు వారికి నిర్దిష్ట యాక్సెస్ ఇస్తే తప్ప ఈ ఖాతాలోని అన్ని వాల్ట్‌లకు యాక్సెస్ పొందలేరు. ఈ వ్యక్తి వాల్ట్‌లను కూడా సృష్టించగలడు.",
   "This will immediately:": "ఇది వెంటనే చేస్తుంది:",
+  "Threads": "థ్రెడ్లు",
   "Three things that happened today": "ఈరోజు జరిగిన మూడు విషయాలు",
   "Thursday": "గురువారం",
   "Timezone": "సమయమండలం",
@@ -1274,6 +1294,7 @@
   "Translate It": "అనువదించండి",
   "Transportation": "రవాణా",
   "Tuesday": "మంగళవారం",
+  "Twitter": "ట్విట్టర్",
   "Two-factor Confirmation": "రెండు-కారకాల నిర్ధారణ",
   "Two Factor Authentication": "రెండు కారకాల ప్రమాణీకరణ",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "రెండు కారకాల ప్రమాణీకరణ ఇప్పుడు ప్రారంభించబడింది. మీ ఫోన్ ప్రామాణీకరణ అప్లికేషన్‌ని ఉపయోగించి క్రింది QR కోడ్‌ని స్కాన్ చేయండి లేదా సెటప్ కీని నమోదు చేయండి.",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 ద్వితీయ నివాసం",
   "🏡 Home": "🏡 ఇల్లు",
   "🏢 Work": "🏢 పని",
+  "📟 Pager": "📟 పేజర్",
+  "📠 Fax": "📠 ఫ్యాక్స్",
+  "📱 Mobile": "మొబైల్",
   "🔔 Reminder: :label for :contactName": "🔔 రిమైండర్: :contactName కోసం :label",
   "😀 Good": "😀 బాగుంది",
   "😁 Positive": "😁 పాజిటివ్",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 ప్రతికూల",
   "😩 Awful": "😩 భయంకరం",
   "😶‍🌫️ Neutral": "😶‍🌫️ తటస్థ",
-  "🥳 Awesome": "🥳 అద్భుతం"
+  "🥳 Awesome": "🥳 అద్భుతం",
+  "🧑🏼 Personal": "వ్యక్తిగత"
 }
