--- a/lang/tr.json
+++ b/lang/tr.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Emin misin? Bu, belgeyi kalıcı olarak silecektir.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Emin misin? Bu, hedefi ve tüm serileri kalıcı olarak silecektir.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Emin misin? Bu, adres türlerini tüm kişilerden kaldıracaktır ancak kişilerin kendisini silmez.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Emin misin? Bu, kişi bilgisi türlerini tüm kişilerden kaldıracaktır ancak kişilerin kendisini silmez.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Emin misin? Bu, iletişim bilgileri türünü tüm kişilerden kaldırır, ancak kişilerin kendilerini silmez.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Emin misin? Bu, tüm kişilerden cinsiyetleri kaldıracaktır ancak kişilerin kendisini silmez.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Emin misin? Bu, şablonu tüm kişilerden kaldıracaktır ancak kişilerin kendisi silinmeyecektir.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Bu ekibi silmek istediğinizden emin misiniz? Bir ekip silindiğinde, tüm kaynakları ve verileri kalıcı olarak silinecektir.",
@@ -234,6 +234,7 @@
   "Bird": "Kuş",
   "Birthdate": "Doğum günü",
   "Birthday": "Doğum günü",
+  "Bluesky": "Bluesky",
   "Body": "Vücut",
   "boss": "patron",
   "Bought": "Satın alınmış",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "Sayıları görüntülemenin mevcut yolu:",
   "Customize how contacts should be displayed": "Kişilerin nasıl görüntüleneceğini özelleştirin",
   "Custom name order": "Özel ad sırası",
+  "Custom…": "Gelenek…",
   "Daily affirmation": "Günlük onaylama",
   "Dashboard": "Gösterge Paneli",
+  "Data": "Veri",
   "date": "tarih",
   "Date of the event": "Etkinliğin tarihi",
   "Date of the event:": "Etkinlik tarihi:",
@@ -383,6 +386,8 @@
   "Delete": "Sil",
   "Delete :name": ":name’u sil",
   "Delete Account": "Hesabı Sil",
+  "Delete a contact information": "Bir iletişim bilgilerini sil",
+  "Delete a contact information type": "İletişim Bilgileri Türünü Sil",
   "Delete a new key": "Yeni bir anahtarı silin",
   "Delete API Token": "API Jetonunu Sil",
   "Delete contact": "Kişiyi silmek",
@@ -480,6 +485,7 @@
   "Family": "Aile",
   "Family summary": "Aile özeti",
   "Favorites": "Favoriler",
+  "Fax": "Faks",
   "Female": "Dişi",
   "File": "Dosya",
   "Files": "Dosyalar",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Hediye etkinlikleri, tüm hediyelerinizi kategorilere ayırmanıza olanak tanır.",
   "Gift states": "Hediye durumları",
   "Gift states let you define the various states for your gifts.": "Hediye durumları, hediyeleriniz için çeşitli durumları tanımlamanıza olanak tanır.",
+  "GitHub": "Gitithub",
   "Give this email address a name": "Bu e-posta adresine bir ad verin",
   "Goals": "Hedefler",
   "Go back": "Geri gitmek",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "Grup türleri, insanları bir arada gruplandırmanıza olanak tanır.",
   "Had a promotion": "Promosyon vardı",
   "Hamster": "Hamster",
+  "Hangouts": "Hangouts",
   "Have a great day,": "İyi günler,",
   "he/him": "o / o",
   "Hello!": "Merhaba!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "Gönderilen bildirimin geçmişi",
   "Hobbies": "Hobiler",
   "Home": "Ev",
+  "Home House": "Ev",
   "Horse": "Atış",
   "How are you?": "Nasılsın?",
   "How could I have done this day better?": "Bu günü nasıl daha iyi geçirebilirdim?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "Wikipedia’dan bilgi",
   "in love with": "birine aşık olmak",
   "Inspirational post": "İlham verici yazı",
+  "Instagram": "Instagram",
+  "Instant messaging": "Anlık mesajlaşma",
   "Insufficient Storage": "Yetersiz depolama",
   "Internal Server Error": "İç Sunucu Hatası",
   "Introduction": "giriiş",
@@ -618,6 +629,7 @@
   "Just to say hello": "Sadece merhaba de",
   "Key name": "Anahtar adı",
   "kilometers (km)": "kilometre (km)",
+  "Kind": "Tür",
   "km": "kilometre",
   "Label:": "Etiket:",
   "Labels": "Etiketler",
@@ -706,6 +718,7 @@
   "miles": "mil",
   "miles (mi)": "mil (mil)",
   "Misdirected Request": "Yanlış Yönlendirilmiş İstek",
+  "Mobile": "Hareketli",
   "Modules in this page": "Bu sayfadaki modüller",
   "Monday": "Pazartesi",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Her hakkı saklıdır. 2017 — :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "Henüz etiket yok.",
   "No life event types yet.": "Henüz yaşam olayı türü yok.",
   "Non-Authoritative Information": "Yetkili Olmayan Bilgiler",
+  "None": "Hiçbiri",
   "No notes found.": "Hiçbir not bulunamadı.",
   "No results found": "Sonuç bulunamadı",
   "No role": "Rol yok",
@@ -798,6 +812,7 @@
   "Other": "Diğer",
   "Out of respect and appreciation": "Saygı ve takdir nedeniyle",
   "Page Expired": "Sayfa zaman aşımına uğradı",
+  "Pager": "Çağrı cihazı",
   "Pages": "Sayfalar",
   "Pagination Navigation": "Sayfalandırma Çubuğu",
   "Parent": "Ebeveyn",
@@ -823,6 +838,7 @@
   "Pet category": "Evcil hayvan kategorisi",
   "Pets": "Evcil Hayvanlar",
   "Phone": "Telefon",
+  "Phone number": "Telefon numarası",
   "Photo": "Resim",
   "Photos": "Fotoğraflar",
   "Played basketball": "Basketbol oynadım",
@@ -1006,6 +1022,7 @@
   "Slices of life": "Hayatın dilimleri",
   "Small animal": "Küçük hayvan",
   "Social": "Sosyal",
+  "Social profile": "Sosyal profil",
   "Solve": "Çözmek",
   "Some dates have a special type that we will use in the software to calculate an age.": "Bazı tarihlerin yazılımda yaş hesaplamak için kullanacağımız özel bir türü vardır.",
   "So… it works 😼": "Yani… işe yarıyor 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "Hizmet Koşulları",
   "Test email for Monica": "Monica için e-postayı test edin",
   "Test email sent!": "Test e-postası gönderildi!",
+  "Text": "Metin",
   "Thanks,": "Teşekkürler,",
   "Thanks for giving Monica a try.": "Monica’yı denediğiniz için teşekkürler.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Üye olduğunuz için teşekkürler! Başlamadan önce, size az önce e-postayla gönderdiğimiz bağlantıya tıklayarak e-posta adresinizi doğrulayabilir misiniz? E-postayı almadıysanız, size memnuniyetle başka bir e-posta göndeririz.",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "Adres türü güncellendi",
   "The call has been created": "Çağrı oluşturuldu",
   "The call has been deleted": "Çağrı silindi",
-  "The call has been edited": "Çağrı düzenlendi",
+  "The call has been updated": "Çağrı güncellendi",
   "The call reason has been created": "Çağrı nedeni oluşturuldu",
   "The call reason has been deleted": "Arama nedeni silindi",
   "The call reason has been updated": "Çağrı nedeni güncellendi",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "Kişi henüz herhangi bir gruba ait değil.",
   "The contact has been added": "Kişi eklendi",
   "The contact has been deleted": "Kişi silindi",
-  "The contact has been edited": "Kişi düzenlendi",
   "The contact has been removed from the group": "Kişi gruptan kaldırıldı",
+  "The contact has been updated": "İletişim güncellendi",
   "The contact information has been created": "İletişim bilgileri oluşturuldu",
   "The contact information has been deleted": "İletişim bilgileri silindi",
-  "The contact information has been edited": "İletişim bilgileri düzenlendi",
+  "The contact information has been updated": "İletişim bilgileri güncellendi",
   "The contact information type has been created": "İletişim bilgileri türü oluşturuldu",
   "The contact information type has been deleted": "İletişim bilgisi türü silindi",
   "The contact information type has been updated": "İletişim bilgileri türü güncellendi",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "Verilen veriler geçersizdi.",
   "The goal has been created": "Hedef oluşturuldu",
   "The goal has been deleted": "Hedef silindi",
-  "The goal has been edited": "Hedef düzenlendi",
+  "The goal has been updated": "Amaç güncellendi",
   "The group has been added": "Grup eklendi",
   "The group has been deleted": "Grup silindi",
   "The group has been updated": "Grup güncellendi",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "Yaşam metriği güncellendi",
   "The loan has been created": "Kredi oluşturuldu",
   "The loan has been deleted": "Kredi silindi",
-  "The loan has been edited": "Kredi düzenlendi",
   "The loan has been settled": "Kredi halledildi",
+  "The loan has been updated": "Kredi güncellendi",
   "The loan is an object": "Kredi bir nesnedir",
   "The loan is monetary": "Kredi parasaldır",
   "The module has been added": "Modül eklendi",
   "The module has been removed": "Modül kaldırıldı",
   "The note has been created": "Not oluşturuldu",
   "The note has been deleted": "Not silindi",
-  "The note has been edited": "Not düzenlendi",
+  "The note has been updated": "Not güncellendi",
   "The notification has been sent": "Bildirim gönderildi",
   "The operation either timed out or was not allowed.": "İşlem ya zaman aşımına uğradı ya da izin verilmedi.",
   "The page has been added": "Sayfa eklendi",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "Evcil hayvan kategorisi güncellendi",
   "The pet has been added": "Evcil hayvan eklendi",
   "The pet has been deleted": "Evcil hayvan silindi",
-  "The pet has been edited": "Evcil hayvan düzenlendi",
+  "The pet has been updated": "Evcil hayvan güncellendi",
   "The photo has been added": "Fotoğraf eklendi",
   "The photo has been deleted": "Fotoğraf silindi",
   "The position has been saved": "Konum kaydedildi",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "Sağlanan iki faktörlü kurtarma kodu geçersizdi.",
   "There are no active addresses yet.": "Henüz aktif adres yok.",
   "There are no calls logged yet.": "Henüz kayıtlı bir çağrı yok.",
-  "There are no contact information yet.": "Henüz iletişim bilgisi yok.",
+  "There are no contact informations yet.": "Henüz iletişim bilgisi yok.",
+  "There are no contact information types yet.": "Henüz iletişim bilgisi türü yok.",
   "There are no documents yet.": "Henüz belge yok.",
   "There are no events on that day, future or past.": "O güne, geleceğe veya geçmişe ait hiçbir olay yoktur.",
   "There are no files yet.": "Henüz dosya yok.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "Din güncellendi",
   "The reminder has been created": "Hatırlatıcı oluşturuldu",
   "The reminder has been deleted": "Hatırlatıcı silindi",
-  "The reminder has been edited": "Hatırlatıcı düzenlendi",
+  "The reminder has been updated": "Hatırlatma güncellendi",
   "The response is not a streamed response.": "Yanıt akışlı bir yanıt değil.",
   "The response is not a view.": "Yanıt bir görünüm değildir.",
   "The role has been created": "Rol oluşturuldu",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "Etiket güncellendi",
   "The task has been created": "Görev oluşturuldu",
   "The task has been deleted": "Görev silindi",
-  "The task has been edited": "Görev düzenlendi",
+  "The task has been updated": "Görev güncellendi",
   "The team's name and owner information.": "Ekibin adı ve sahip bilgileri.",
   "The Telegram channel has been deleted": "Telegram kanalı silindi",
   "The template has been created": "Şablon oluşturuldu",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "Bu kullanıcı zaten ekibe davet edildi.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Bu kullanıcı hesabınızın bir parçası olacak ancak siz onlara özel erişim izni vermediğiniz sürece bu hesaptaki tüm kasalara erişim sağlayamayacaktır. Bu kişi aynı zamanda kasalar da oluşturabilecek.",
   "This will immediately:": "Bu hemen:",
+  "Threads": "İplikler",
   "Three things that happened today": "Bugün yaşanan üç şey",
   "Thursday": "Perşembe",
   "Timezone": "Saat dilimi",
@@ -1274,6 +1294,7 @@
   "Translate It": "Çevir",
   "Transportation": "Toplu taşıma",
   "Tuesday": "Salı",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "İki Faktörlü Doğrulama",
   "Two Factor Authentication": "İki Faktörlü Kimlik Doğrulama",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "İki faktörlü kimlik doğrulama şimdi etkinleştirildi. Telefonunuzun kimlik doğrulama uygulamasını kullanarak aşağıdaki QR kodunu tarayın veya kurulum anahtarını girin.",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 İkincil ikamet",
   "🏡 Home": "🏡 Ana Sayfa",
   "🏢 Work": "🏢Çalışmak",
+  "📟 Pager": "📟 Cager",
+  "📠 Fax": "📠 Faks",
+  "📱 Mobile": "📱 Mobil",
   "🔔 Reminder: :label for :contactName": "🔔 Hatırlatma: :contactName için :label",
   "😀 Good": "😀 Güzel",
   "😁 Positive": "😁 Olumlu",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 Olumsuz",
   "😩 Awful": "😩 Berbat",
   "😶‍🌫️ Neutral": "😶‍🌫️ Nötr",
-  "🥳 Awesome": "🥳 Harika"
+  "🥳 Awesome": "🥳 Harika",
+  "🧑🏼 Personal": "🧑🏼 Kişisel"
 }
