--- a/lang/ur.json
+++ b/lang/ur.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "کیا تمہیں یقین ہے؟ یہ دستاویز کو مستقل طور پر حذف کر دے گا۔",
   "Are you sure? This will delete the goal and all the streaks permanently.": "کیا تمہیں یقین ہے؟ اس سے مقصد اور تمام لکیریں مستقل طور پر حذف ہو جائیں گی۔",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "کیا تمہیں یقین ہے؟ یہ تمام رابطوں سے پتے کی اقسام کو ہٹا دے گا، لیکن خود رابطے حذف نہیں کرے گا۔",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "کیا تمہیں یقین ہے؟ یہ تمام رابطوں سے رابطے کی معلومات کی اقسام کو ہٹا دے گا، لیکن خود روابط حذف نہیں کرے گا۔",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "کیا آپ کو یقین ہے؟ اس سے رابطے کی معلومات کو تمام رابطوں سے ہٹا دیا جائے گا ، لیکن رابطوں کو خود حذف نہیں کریں گے۔",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "کیا تمہیں یقین ہے؟ یہ تمام رابطوں سے جنسوں کو ہٹا دے گا، لیکن خود روابط کو حذف نہیں کرے گا۔",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "کیا تمہیں یقین ہے؟ یہ تمام رابطوں سے ٹیمپلیٹ کو ہٹا دے گا، لیکن خود روابط کو حذف نہیں کرے گا۔",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "ہیں آپ کو اس بات کا یقین آپ کو خارج کرنا چاہتے ہیں اس کی ٹیم? ایک بار ایک ٹیم سے خارج کر دیا ہے, اس کے تمام وسائل اور اعداد و شمار ہو جائے گا مستقل طور پر خارج کر دیا.",
@@ -234,6 +234,7 @@
   "Bird": "پرندہ",
   "Birthdate": "تاریخ پیدائش",
   "Birthday": "سالگرہ",
+  "Bluesky": "بلوسکی",
   "Body": "جسم",
   "boss": "باس",
   "Bought": "خریدا",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "نمبر ظاہر کرنے کا موجودہ طریقہ:",
   "Customize how contacts should be displayed": "اپنی مرضی کے مطابق بنائیں کہ رابطے کیسے دکھائے جائیں۔",
   "Custom name order": "حسب ضرورت نام کا آرڈر",
+  "Custom…": "رواج…",
   "Daily affirmation": "روزانہ اثبات",
   "Dashboard": "ڈیش بورڈ",
+  "Data": "ڈیٹا",
   "date": "تاریخ",
   "Date of the event": "تقریب کی تاریخ",
   "Date of the event:": "تقریب کی تاریخ:",
@@ -383,6 +386,8 @@
   "Delete": "کو حذف کریں",
   "Delete :name": ":name کو حذف کریں۔",
   "Delete Account": "اکاؤنٹ کو حذف کریں",
+  "Delete a contact information": "رابطے کی معلومات کو حذف کریں",
+  "Delete a contact information type": "رابطہ کی معلومات کی قسم کو حذف کریں",
   "Delete a new key": "ایک نئی کلید کو حذف کریں۔",
   "Delete API Token": "کو حذف API ٹوکن",
   "Delete contact": "رابطہ حذف کریں۔",
@@ -480,6 +485,7 @@
   "Family": "خاندان",
   "Family summary": "خاندانی خلاصہ",
   "Favorites": "پسندیدہ",
+  "Fax": "فیکس",
   "Female": "عورت",
   "File": "فائل",
   "Files": "فائلوں",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "تحفے کے مواقع آپ کو اپنے تمام تحائف کی درجہ بندی کرنے دیتے ہیں۔",
   "Gift states": "گفٹ اسٹیٹس",
   "Gift states let you define the various states for your gifts.": "تحفے کی ریاستیں آپ کو اپنے تحائف کے لیے مختلف ریاستوں کی وضاحت کرنے دیتی ہیں۔",
+  "GitHub": "گٹ ہب",
   "Give this email address a name": "اس ای میل ایڈریس کو ایک نام دیں۔",
   "Goals": "اہداف",
   "Go back": "واپس جاو",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "گروپ کی قسمیں آپ کو لوگوں کو ایک ساتھ گروپ کرنے دیتی ہیں۔",
   "Had a promotion": "پروموشن ہوا تھا۔",
   "Hamster": "ہیمسٹر",
+  "Hangouts": "hangouts",
   "Have a great day,": "آپ کا دن اچھا گزرے،",
   "he/him": "وہ/وہ",
   "Hello!": "ہیلو!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "بھیجے گئے نوٹیفکیشن کی تاریخ",
   "Hobbies": "شوق",
   "Home": "گھر",
+  "Home House": "گھر گھر",
   "Horse": "گھوڑا",
   "How are you?": "آپ کیسے ہو؟",
   "How could I have done this day better?": "میں اس دن کو کیسے بہتر کر سکتا تھا؟",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "ویکیپیڈیا سے معلومات",
   "in love with": "پیار میں",
   "Inspirational post": "متاثر کن پوسٹ",
+  "Instagram": "انسٹاگرام",
+  "Instant messaging": "فوری پیغام رسانی",
   "Insufficient Storage": "ناکافی اسٹوریج",
   "Internal Server Error": "اندرونی سرور کی خرابی",
   "Introduction": "تعارف",
@@ -618,6 +629,7 @@
   "Just to say hello": "صرف ہیلو کہنے کے لیے",
   "Key name": "کلیدی نام",
   "kilometers (km)": "کلومیٹر (کلومیٹر)",
+  "Kind": "قسم",
   "km": "کلومیٹر",
   "Label:": "لیبل:",
   "Labels": "لیبلز",
@@ -643,7 +655,7 @@
   "Life metrics": "زندگی کی پیمائش",
   "Life metrics let you track metrics that are important to you.": "لائف میٹرکس آپ کو ان میٹرکس کو ٹریک کرنے دیتی ہیں جو آپ کے لیے اہم ہیں۔",
   "Like": "پسند",
-  "LinkedIn": "LinkedIn",
+  "LinkedIn": "لنکڈ",
   "List of addresses": "پتوں کی فہرست",
   "List of addresses of the contacts in the vault": "والٹ میں رابطوں کے پتوں کی فہرست",
   "List of all important dates": "تمام اہم تاریخوں کی فہرست",
@@ -706,6 +718,7 @@
   "miles": "میل",
   "miles (mi)": "میل (میل)",
   "Misdirected Request": "غلط ہدایت کی درخواست",
+  "Mobile": "موبائل",
   "Modules in this page": "اس صفحہ میں ماڈیولز",
   "Monday": "پیر",
   "Monica. All rights reserved. 2017 — :date.": "Monica۔ جملہ حقوق محفوظ ہیں. 2017 — :date۔",
@@ -751,6 +764,7 @@
   "No labels yet.": "ابھی تک کوئی لیبل نہیں ہے۔",
   "No life event types yet.": "ابھی تک زندگی کے واقعات کی کوئی قسم نہیں ہے۔",
   "Non-Authoritative Information": "غیر مستند معلومات",
+  "None": "کوئی نہیں",
   "No notes found.": "کوئی نوٹس نہیں ملا۔",
   "No results found": "کوئی نتیجہ نہیں",
   "No role": "کوئی کردار نہیں۔",
@@ -798,6 +812,7 @@
   "Other": "دیگر",
   "Out of respect and appreciation": "احترام اور تعریف سے باہر",
   "Page Expired": "صفحہ کی میعاد ختم ہو",
+  "Pager": "پیجر",
   "Pages": "صفحات",
   "Pagination Navigation": "صفحہ بندی نیویگیشن",
   "Parent": "والدین",
@@ -823,6 +838,7 @@
   "Pet category": "پالتو جانوروں کے زمرے",
   "Pets": "پالتو جانور",
   "Phone": "فون",
+  "Phone number": "فون نمبر",
   "Photo": "تصویر",
   "Photos": "تصاویر",
   "Played basketball": "باسکٹ بال کھیلا۔",
@@ -1006,6 +1022,7 @@
   "Slices of life": "زندگی کے ٹکڑے",
   "Small animal": "چھوٹا جانور",
   "Social": "سماجی",
+  "Social profile": "سوشل پروفائل",
   "Solve": "حل",
   "Some dates have a special type that we will use in the software to calculate an age.": "کچھ تاریخوں کی ایک خاص قسم ہوتی ہے جسے ہم سافٹ ویئر میں عمر کا حساب لگانے کے لیے استعمال کریں گے۔",
   "So… it works 😼": "تو… یہ کام کرتا ہے 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "سروس کی شرائط",
   "Test email for Monica": "Monica کے لیے ای میل کی جانچ کریں۔",
   "Test email sent!": "ٹیسٹ ای میل بھیج دیا گیا!",
+  "Text": "متن",
   "Thanks,": "شکریہ،",
   "Thanks for giving Monica a try.": "Monica کو آزمانے کا شکریہ۔",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "سائن اپ کرنے کے لیے شکریہ! شروع کرنے سے پہلے، کیا آپ اس لنک پر کلک کر کے اپنے ای میل ایڈریس کی تصدیق کر سکتے ہیں جو ہم نے ابھی آپ کو ای میل کیا ہے؟ اگر آپ کو ای میل موصول نہیں ہوئی تو ہم خوشی سے آپ کو ایک اور بھیجیں گے۔",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "ایڈریس کی قسم کو اپ ڈیٹ کر دیا گیا ہے۔",
   "The call has been created": "کال بن گئی ہے۔",
   "The call has been deleted": "کال ڈیلیٹ کر دی گئی ہے۔",
-  "The call has been edited": "کال میں ترمیم کر دی گئی ہے۔",
+  "The call has been updated": "کال کو اپ ڈیٹ کردیا گیا ہے",
   "The call reason has been created": "کال کی وجہ بنائی گئی ہے۔",
   "The call reason has been deleted": "کال کی وجہ کو حذف کر دیا گیا ہے۔",
   "The call reason has been updated": "کال کی وجہ کو اپ ڈیٹ کر دیا گیا ہے۔",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "رابطہ ابھی تک کسی گروپ سے نہیں ہے۔",
   "The contact has been added": "رابطہ شامل کر دیا گیا ہے۔",
   "The contact has been deleted": "رابطہ حذف کر دیا گیا ہے۔",
-  "The contact has been edited": "رابطے میں ترمیم کر دی گئی ہے۔",
   "The contact has been removed from the group": "رابطہ گروپ سے ہٹا دیا گیا ہے۔",
+  "The contact has been updated": "رابطے کو اپ ڈیٹ کردیا گیا ہے",
   "The contact information has been created": "رابطے کی معلومات بنائی گئی ہے۔",
   "The contact information has been deleted": "رابطے کی معلومات کو حذف کر دیا گیا ہے۔",
-  "The contact information has been edited": "رابطے کی معلومات میں ترمیم کی گئی ہے۔",
+  "The contact information has been updated": "رابطے کی معلومات کو اپ ڈیٹ کردیا گیا ہے",
   "The contact information type has been created": "رابطے کی معلومات کی قسم بنائی گئی ہے۔",
   "The contact information type has been deleted": "رابطے کی معلومات کی قسم کو حذف کر دیا گیا ہے۔",
   "The contact information type has been updated": "رابطے کی معلومات کی قسم کو اپ ڈیٹ کر دیا گیا ہے۔",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "دیا گیا ڈیٹا غلط تھا۔",
   "The goal has been created": "مقصد بنایا گیا ہے۔",
   "The goal has been deleted": "مقصد کو حذف کر دیا گیا ہے۔",
-  "The goal has been edited": "مقصد میں ترمیم کی گئی ہے۔",
+  "The goal has been updated": "گول کو اپ ڈیٹ کردیا گیا ہے",
   "The group has been added": "گروپ کو شامل کیا گیا ہے۔",
   "The group has been deleted": "گروپ کو حذف کر دیا گیا ہے۔",
   "The group has been updated": "گروپ کو اپ ڈیٹ کر دیا گیا ہے۔",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "لائف میٹرک کو اپ ڈیٹ کر دیا گیا ہے۔",
   "The loan has been created": "قرضہ بنایا گیا ہے۔",
   "The loan has been deleted": "قرض حذف کر دیا گیا ہے۔",
-  "The loan has been edited": "قرض میں ترمیم کی گئی ہے۔",
   "The loan has been settled": "قرضہ طے ہو چکا ہے۔",
+  "The loan has been updated": "قرض کو اپ ڈیٹ کردیا گیا ہے",
   "The loan is an object": "قرض ایک چیز ہے۔",
   "The loan is monetary": "قرض مالیاتی ہے۔",
   "The module has been added": "ماڈیول شامل کر دیا گیا ہے۔",
   "The module has been removed": "ماڈیول کو ہٹا دیا گیا ہے۔",
   "The note has been created": "نوٹ بن گیا ہے۔",
   "The note has been deleted": "نوٹ حذف کر دیا گیا ہے۔",
-  "The note has been edited": "نوٹ میں ترمیم کی گئی ہے۔",
+  "The note has been updated": "نوٹ کو اپ ڈیٹ کردیا گیا ہے",
   "The notification has been sent": "نوٹیفکیشن بھیج دیا گیا ہے۔",
   "The operation either timed out or was not allowed.": "آپریشن کا وقت ختم ہو گیا یا اسے اجازت نہیں دی گئی۔",
   "The page has been added": "صفحہ شامل کر دیا گیا ہے۔",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "پالتو جانوروں کے زمرے کو اپ ڈیٹ کر دیا گیا ہے۔",
   "The pet has been added": "پالتو جانور کو شامل کیا گیا ہے۔",
   "The pet has been deleted": "پالتو جانور کو حذف کر دیا گیا ہے۔",
-  "The pet has been edited": "پالتو جانور میں ترمیم کی گئی ہے۔",
+  "The pet has been updated": "پالتو جانور کو اپ ڈیٹ کردیا گیا ہے",
   "The photo has been added": "تصویر شامل کر دی گئی ہے۔",
   "The photo has been deleted": "تصویر کو حذف کر دیا گیا ہے۔",
   "The position has been saved": "پوزیشن محفوظ کر لی گئی ہے۔",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "فراہم کردہ دو فیکٹر ریکوری کوڈ غلط تھا۔",
   "There are no active addresses yet.": "ابھی تک کوئی فعال پتے نہیں ہیں۔",
   "There are no calls logged yet.": "ابھی تک کوئی کال لاگ ان نہیں ہے۔",
-  "There are no contact information yet.": "ابھی تک کوئی رابطہ کی معلومات نہیں ہیں۔",
+  "There are no contact informations yet.": "ابھی تک کوئی رابطہ کی معلومات نہیں ہیں۔",
+  "There are no contact information types yet.": "ابھی تک رابطہ کی معلومات کی کوئی اقسام نہیں ہیں۔",
   "There are no documents yet.": "ابھی تک کوئی دستاویزات نہیں ہیں۔",
   "There are no events on that day, future or past.": "اس دن، مستقبل یا ماضی میں کوئی واقعات نہیں ہیں۔",
   "There are no files yet.": "ابھی تک کوئی فائلیں نہیں ہیں۔",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "مذہب کو اپ ڈیٹ کر دیا گیا ہے۔",
   "The reminder has been created": "یاد دہانی بنائی گئی ہے۔",
   "The reminder has been deleted": "یاد دہانی کو حذف کر دیا گیا ہے۔",
-  "The reminder has been edited": "یاد دہانی میں ترمیم کر دی گئی ہے۔",
+  "The reminder has been updated": "یاد دہانی کو اپ ڈیٹ کردیا گیا ہے",
   "The response is not a streamed response.": "جواب ایک سلسلہ وار جواب نہیں ہے۔",
   "The response is not a view.": "ردعمل ایک نقطہ نظر نہیں ہے.",
   "The role has been created": "کردار بنایا گیا ہے۔",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "ٹیگ کو اپ ڈیٹ کر دیا گیا ہے۔",
   "The task has been created": "ٹاسک بنایا گیا ہے۔",
   "The task has been deleted": "کام کو حذف کر دیا گیا ہے۔",
-  "The task has been edited": "کام میں ترمیم کی گئی ہے۔",
+  "The task has been updated": "کام کو اپ ڈیٹ کردیا گیا ہے",
   "The team's name and owner information.": "ٹیم کا نام اور مالک کے بارے میں معلومات.",
   "The Telegram channel has been deleted": "ٹیلی گرام چینل کو حذف کر دیا گیا ہے۔",
   "The template has been created": "ٹیمپلیٹ بنایا گیا ہے۔",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "یہ صارف پہلے ہی مدعو کرنے کے لئے ٹیم.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "یہ صارف آپ کے اکاؤنٹ کا حصہ ہو گا، لیکن اسے اس اکاؤنٹ کے تمام والٹس تک رسائی حاصل نہیں ہو گی جب تک کہ آپ انہیں مخصوص رسائی نہ دیں۔ یہ شخص والٹ بھی بنا سکے گا۔",
   "This will immediately:": "یہ فوری طور پر کرے گا:",
+  "Threads": "دھاگے",
   "Three things that happened today": "تین چیزیں جو آج ہوئیں",
   "Thursday": "جمعرات",
   "Timezone": "ٹائم زون",
@@ -1274,6 +1294,7 @@
   "Translate It": "اس کا ترجمہ کرو",
   "Transportation": "نقل و حمل",
   "Tuesday": "منگل",
+  "Twitter": "ٹویٹر",
   "Two-factor Confirmation": "دو عنصر کی تصدیق",
   "Two Factor Authentication": "دو عنصر کی تصدیق",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "دو عنصر کی توثیق اب فعال ہے۔ اپنے فون کی تصدیق کنندہ ایپلیکیشن کا استعمال کرتے ہوئے درج ذیل QR کوڈ کو اسکین کریں یا سیٹ اپ کلید درج کریں۔",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 ثانوی رہائش گاہ",
   "🏡 Home": "🏡 گھر",
   "🏢 Work": "🏢 کام",
+  "📟 Pager": "📟 پیجر",
+  "📠 Fax": "📠 فیکس",
+  "📱 Mobile": "📱 موبائل",
   "🔔 Reminder: :label for :contactName": "🔔 یاد دہانی: :contactName کے لیے :label",
   "😀 Good": "😀 اچھا",
   "😁 Positive": "😁 مثبت",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 منفی",
   "😩 Awful": "😩 خوفناک",
   "😶‍🌫️ Neutral": "😶‍🌫️ غیر جانبدار",
-  "🥳 Awesome": "🥳 بہت اچھا"
+  "🥳 Awesome": "🥳 بہت اچھا",
+  "🧑🏼 Personal": "🧑🏼 ذاتی"
 }
