--- a/lang/vi.json
+++ b/lang/vi.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Bạn có chắc không? Điều này sẽ xóa tài liệu vĩnh viễn.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Bạn có chắc không? Điều này sẽ xóa mục tiêu và tất cả các đường sọc vĩnh viễn.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Bạn có chắc không? Thao tác này sẽ xóa các loại địa chỉ khỏi tất cả địa chỉ liên hệ nhưng sẽ không xóa chính địa chỉ liên hệ đó.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Bạn có chắc không? Thao tác này sẽ xóa các loại thông tin liên hệ khỏi tất cả các liên hệ nhưng sẽ không xóa chính các liên hệ đó.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Bạn có chắc không? Điều này sẽ loại bỏ loại thông tin liên hệ khỏi tất cả các liên hệ, nhưng đã giành được các danh bạ.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Bạn có chắc không? Thao tác này sẽ xóa giới tính khỏi tất cả địa chỉ liên hệ nhưng sẽ không xóa chính địa chỉ liên hệ đó.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Bạn có chắc không? Thao tác này sẽ xóa mẫu khỏi tất cả địa chỉ liên hệ nhưng sẽ không xóa chính địa chỉ liên hệ đó.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Bạn có chắc chắn muốn xóa nhóm này không? Khi một nhóm bị xóa, tất cả tài nguyên và dữ liệu của nhóm đó sẽ bị xóa vĩnh viễn.",
@@ -234,6 +234,7 @@
   "Bird": "Chim",
   "Birthdate": "Ngày sinh",
   "Birthday": "Sinh nhật",
+  "Bluesky": "Bluesky",
   "Body": "Thân hình",
   "boss": "ông chủ",
   "Bought": "Mua",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "Cách hiển thị số hiện tại:",
   "Customize how contacts should be displayed": "Tùy chỉnh cách hiển thị danh bạ",
   "Custom name order": "Thứ tự tên tùy chỉnh",
+  "Custom…": "Phong tục…",
   "Daily affirmation": "Khẳng định hàng ngày",
   "Dashboard": "Bảng điều khiển",
+  "Data": "Dữ liệu",
   "date": "ngày",
   "Date of the event": "Ngày diễn ra sự kiện",
   "Date of the event:": "Ngày diễn ra sự kiện:",
@@ -383,6 +386,8 @@
   "Delete": "Xóa",
   "Delete :name": "Xóa :name",
   "Delete Account": "Xóa Tài khoản",
+  "Delete a contact information": "Xóa thông tin liên hệ",
+  "Delete a contact information type": "Xóa loại thông tin liên hệ",
   "Delete a new key": "Xóa khóa mới",
   "Delete API Token": "Xóa API Token",
   "Delete contact": "Xóa liên lạc",
@@ -480,6 +485,7 @@
   "Family": "Gia đình",
   "Family summary": "Tóm tắt gia đình",
   "Favorites": "Yêu thích",
+  "Fax": "Fax",
   "Female": "Nữ giới",
   "File": "Tài liệu",
   "Files": "Các tập tin",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Các dịp tặng quà cho phép bạn phân loại tất cả quà tặng của mình.",
   "Gift states": "Trạng thái quà tặng",
   "Gift states let you define the various states for your gifts.": "Trạng thái quà tặng cho phép bạn xác định các trạng thái khác nhau cho quà tặng của mình.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Đặt tên cho địa chỉ email này",
   "Goals": "Bàn thắng",
   "Go back": "Quay lại",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "Các loại nhóm cho phép bạn nhóm mọi người lại với nhau.",
   "Had a promotion": "Đã có khuyến mãi",
   "Hamster": "chuột đồng",
+  "Hangouts": "Hangouts",
   "Have a great day,": "Có một ngày tuyệt vời,",
   "he/him": "anh ấy / anh ấy",
   "Hello!": "Xin chào!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "Lịch sử thông báo đã gửi",
   "Hobbies": "Sở thích",
   "Home": "Trang chủ",
+  "Home House": "Nhà nhà",
   "Horse": "Ngựa",
   "How are you?": "Bạn có khỏe không?",
   "How could I have done this day better?": "Làm sao tôi có thể làm tốt hơn ngày hôm nay?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "Thông tin từ Wikipedia",
   "in love with": "yêu",
   "Inspirational post": "bài đăng đầy cảm hứng",
+  "Instagram": "Instagram",
+  "Instant messaging": "Tin nhắn tức thời",
   "Insufficient Storage": "Không Đủ Bộ Nhớ",
   "Internal Server Error": "Lỗi Từ Máy Chủ Nội Bộ",
   "Introduction": "Giới thiệu",
@@ -618,6 +629,7 @@
   "Just to say hello": "Chỉ để nói xin chào",
   "Key name": "Tên khóa",
   "kilometers (km)": "km (km)",
+  "Kind": "Loại",
   "km": "km",
   "Label:": "Nhãn:",
   "Labels": "Nhãn",
@@ -706,6 +718,7 @@
   "miles": "dặm",
   "miles (mi)": "dặm (mi)",
   "Misdirected Request": "Yêu Cầu Sai Hướng",
+  "Mobile": "Di động",
   "Modules in this page": "Các mô-đun trong trang này",
   "Monday": "Thứ hai",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Đã đăng ký Bản quyền. 2017 — :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "Chưa có nhãn.",
   "No life event types yet.": "Chưa có loại sự kiện cuộc sống nào.",
   "Non-Authoritative Information": "Thông Tin Không Có Thẩm Quyền",
+  "None": "Không có",
   "No notes found.": "Không tìm thấy ghi chú nào.",
   "No results found": "không có kết quả nào được tìm thấy",
   "No role": "Không có vai trò",
@@ -798,6 +812,7 @@
   "Other": "Khác",
   "Out of respect and appreciation": "Vì sự tôn trọng và đánh giá cao",
   "Page Expired": "Trang Đã Hết Hạn",
+  "Pager": "Máy nhắn tin",
   "Pages": "Trang",
   "Pagination Navigation": "Điều hướng phân trang",
   "Parent": "Cha mẹ",
@@ -823,6 +838,7 @@
   "Pet category": "Danh mục thú cưng",
   "Pets": "Vật nuôi",
   "Phone": "Điện thoại",
+  "Phone number": "Số điện thoại",
   "Photo": "Ảnh",
   "Photos": "Ảnh",
   "Played basketball": "Chơi bóng rổ",
@@ -1006,6 +1022,7 @@
   "Slices of life": "Những lát cắt cuộc sống",
   "Small animal": "Con thú nhỏ",
   "Social": "Xã hội",
+  "Social profile": "Hồ sơ xã hội",
   "Solve": "Gỡ rối",
   "Some dates have a special type that we will use in the software to calculate an age.": "Một số ngày có một loại đặc biệt mà chúng tôi sẽ sử dụng trong phần mềm để tính tuổi.",
   "So… it works 😼": "Vì vậy… nó hoạt động 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "Điều Khoản Dịch Vụ",
   "Test email for Monica": "Email kiểm tra cho Monica",
   "Test email sent!": "Đã gửi email kiểm tra!",
+  "Text": "Chữ",
   "Thanks,": "Cảm ơn,",
   "Thanks for giving Monica a try.": "Cảm ơn vì đã cho Monica thử.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Cảm ơn bạn đã đăng ký! Trước khi bắt đầu, bạn có thể xác minh địa chỉ email của mình bằng cách nhấp vào liên kết chúng tôi vừa gửi qua email cho bạn không? Nếu bạn không nhận được email, chúng tôi sẽ sẵn lòng gửi cho bạn một email khác.",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "Loại địa chỉ đã được cập nhật",
   "The call has been created": "Cuộc gọi đã được tạo",
   "The call has been deleted": "Cuộc gọi đã bị xóa",
-  "The call has been edited": "Cuộc gọi đã được chỉnh sửa",
+  "The call has been updated": "Cuộc gọi đã được cập nhật",
   "The call reason has been created": "Lý do cuộc gọi đã được tạo",
   "The call reason has been deleted": "Lý do cuộc gọi đã bị xóa",
   "The call reason has been updated": "Lý do cuộc gọi đã được cập nhật",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "Liên hệ chưa thuộc về bất kỳ nhóm nào.",
   "The contact has been added": "Liên hệ đã được thêm",
   "The contact has been deleted": "Liên hệ đã bị xóa",
-  "The contact has been edited": "Địa chỉ liên hệ đã được chỉnh sửa",
   "The contact has been removed from the group": "Liên hệ đã bị xóa khỏi nhóm",
+  "The contact has been updated": "Liên hệ đã được cập nhật",
   "The contact information has been created": "Thông tin liên hệ đã được tạo",
   "The contact information has been deleted": "Thông tin liên hệ đã bị xóa",
-  "The contact information has been edited": "Thông tin liên hệ đã được chỉnh sửa",
+  "The contact information has been updated": "Thông tin liên hệ đã được cập nhật",
   "The contact information type has been created": "Loại thông tin liên hệ đã được tạo",
   "The contact information type has been deleted": "Loại thông tin liên hệ đã bị xóa",
   "The contact information type has been updated": "Loại thông tin liên hệ đã được cập nhật",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "Dữ liệu nhận được không hợp lệ.",
   "The goal has been created": "Mục tiêu đã được tạo",
   "The goal has been deleted": "Mục tiêu đã bị xóa",
-  "The goal has been edited": "Mục tiêu đã được chỉnh sửa",
+  "The goal has been updated": "Mục tiêu đã được cập nhật",
   "The group has been added": "Nhóm đã được thêm",
   "The group has been deleted": "Nhóm đã bị xóa",
   "The group has been updated": "Nhóm đã được cập nhật",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "Số liệu cuộc sống đã được cập nhật",
   "The loan has been created": "Khoản vay đã được tạo",
   "The loan has been deleted": "Khoản vay đã bị xóa",
-  "The loan has been edited": "Khoản vay đã được chỉnh sửa",
   "The loan has been settled": "Khoản vay đã được giải quyết",
+  "The loan has been updated": "Khoản vay đã được cập nhật",
   "The loan is an object": "Khoản vay là đối tượng",
   "The loan is monetary": "Khoản vay là tiền tệ",
   "The module has been added": "Mô-đun đã được thêm vào",
   "The module has been removed": "Mô-đun đã bị xóa",
   "The note has been created": "Ghi chú đã được tạo",
   "The note has been deleted": "Ghi chú đã bị xóa",
-  "The note has been edited": "Ghi chú đã được chỉnh sửa",
+  "The note has been updated": "Ghi chú đã được cập nhật",
   "The notification has been sent": "Thông báo đã được gửi",
   "The operation either timed out or was not allowed.": "Thao tác đã hết thời gian chờ hoặc không được phép.",
   "The page has been added": "Trang đã được thêm",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "Danh mục thú cưng đã được cập nhật",
   "The pet has been added": "Thú cưng đã được thêm vào",
   "The pet has been deleted": "Thú cưng đã bị xóa",
-  "The pet has been edited": "Thú cưng đã được chỉnh sửa",
+  "The pet has been updated": "Thú cưng đã được cập nhật",
   "The photo has been added": "Ảnh đã được thêm",
   "The photo has been deleted": "Ảnh đã bị xóa",
   "The position has been saved": "Vị trí đã được lưu",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "Mã xác minh hai yếu tố đã cung cấp không hợp lệ.",
   "There are no active addresses yet.": "Chưa có địa chỉ hoạt động nào.",
   "There are no calls logged yet.": "Chưa có cuộc gọi nào được ghi lại.",
-  "There are no contact information yet.": "Hiện chưa có thông tin liên lạc.",
+  "There are no contact informations yet.": "Hiện chưa có thông tin liên lạc.",
+  "There are no contact information types yet.": "Không có loại thông tin liên lạc.",
   "There are no documents yet.": "Chưa có tài liệu nào.",
   "There are no events on that day, future or past.": "Không có sự kiện nào vào ngày đó, tương lai hay quá khứ.",
   "There are no files yet.": "Chưa có tập tin nào.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "Tôn giáo đã được cập nhật",
   "The reminder has been created": "Lời nhắc đã được tạo",
   "The reminder has been deleted": "Lời nhắc đã bị xóa",
-  "The reminder has been edited": "Lời nhắc đã được chỉnh sửa",
+  "The reminder has been updated": "Lời nhắc đã được cập nhật",
   "The response is not a streamed response.": "Phản hồi không phải là phản hồi được phát trực tuyến.",
   "The response is not a view.": "Phản hồi không phải là một lượt xem.",
   "The role has been created": "Vai trò đã được tạo",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "Thẻ đã được cập nhật",
   "The task has been created": "Nhiệm vụ đã được tạo",
   "The task has been deleted": "Nhiệm vụ đã bị xóa",
-  "The task has been edited": "Nhiệm vụ đã được chỉnh sửa",
+  "The task has been updated": "Nhiệm vụ đã được cập nhật",
   "The team's name and owner information.": "Tên và thông tin của trưởng nhóm",
   "The Telegram channel has been deleted": "Kênh Telegram đã bị xóa",
   "The template has been created": "Mẫu đã được tạo",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "Người dùng này đã được mời vào nhóm.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Người dùng này sẽ là một phần trong tài khoản của bạn nhưng sẽ không có quyền truy cập vào tất cả các kho tiền trong tài khoản này trừ khi bạn cấp quyền truy cập cụ thể cho họ. Người này cũng có thể tạo vault.",
   "This will immediately:": "Điều này sẽ ngay lập tức:",
+  "Threads": "Chủ đề",
   "Three things that happened today": "Ba điều đã xảy ra ngày hôm nay",
   "Thursday": "Thứ năm",
   "Timezone": "Múi giờ",
@@ -1274,6 +1294,7 @@
   "Translate It": "Dịch nó",
   "Transportation": "Vận tải",
   "Tuesday": "Thứ ba",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "Xác nhận hai yếu tố",
   "Two Factor Authentication": "Xác minh hai yếu tố",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Xác minh hai yếu tố hiện đã được bật. Quét mã QR sau bằng ứng dụng xác minh trên điện thoại của bạn hoặc nhập khóa cài đặt.",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 Nơi ở thứ hai",
   "🏡 Home": "🏡 Trang chủ",
   "🏢 Work": "🏢 Công việc",
+  "📟 Pager": "📟 PAGER",
+  "📠 Fax": "Fax",
+  "📱 Mobile": "📱 Di động",
   "🔔 Reminder: :label for :contactName": "🔔 Lời nhắc: :label cho :contactName",
   "😀 Good": "😀 Tốt",
   "😁 Positive": "😁 Tích cực",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 Tiêu cực",
   "😩 Awful": "😩 Kinh khủng",
   "😶‍🌫️ Neutral": "😶‍🌫️ Trung tính",
-  "🥳 Awesome": "🥳 Tuyệt vời"
+  "🥳 Awesome": "🥳 Tuyệt vời",
+  "🧑🏼 Personal": "🧑🏼 Cá nhân"
 }
