--- a/lang/da.json
+++ b/lang/da.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Er du sikker? Dette vil slette dokumentet permanent.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Er du sikker? Dette vil slette målet og alle streakerne permanent.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette fjerner adressetyperne fra alle kontakter, men sletter ikke selve kontakterne.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette fjerner kontaktinformationstyperne fra alle kontakter, men sletter ikke selve kontakterne.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette vil fjerne kontaktoplysningstypen fra alle kontakter, men sletter ikke selve kontakterne.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette fjerner kønnene fra alle kontakter, men sletter ikke selve kontakterne.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette fjerner skabelonen fra alle kontakter, men sletter ikke selve kontakterne.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Er du sikker på, at du vil slette dette hold? Når et hold er slettet, vil alle dets ressourcer og data blive slettet permanent.",
@@ -234,6 +234,7 @@
   "Bird": "Fugl",
   "Birthdate": "Fødselsdato",
   "Birthday": "Fødselsdag",
+  "Bluesky": "Bluesky",
   "Body": "Legeme",
   "boss": "chef",
   "Bought": "Købt",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "Nuværende måde at vise tal på:",
   "Customize how contacts should be displayed": "Tilpas, hvordan kontakter skal vises",
   "Custom name order": "Brugerdefineret navnerækkefølge",
+  "Custom…": "Skik…",
   "Daily affirmation": "Daglig bekræftelse",
   "Dashboard": "Dashboard",
+  "Data": "Data",
   "date": "dato",
   "Date of the event": "Dato for begivenheden",
   "Date of the event:": "Dato for begivenheden:",
@@ -383,6 +386,8 @@
   "Delete": "Slet",
   "Delete :name": "Slet :name",
   "Delete Account": "Slet konto",
+  "Delete a contact information": "Slet en kontaktoplysninger",
+  "Delete a contact information type": "Slet en kontaktoplysningstype",
   "Delete a new key": "Slet en ny nøgle",
   "Delete API Token": "Slet API-Token",
   "Delete contact": "Slet kontakt",
@@ -480,6 +485,7 @@
   "Family": "Familie",
   "Family summary": "Familieoversigt",
   "Favorites": "Favoritter",
+  "Fax": "Fax",
   "Female": "Kvinde",
   "File": "Fil",
   "Files": "Filer",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Gavebegivenheder giver dig mulighed for at kategorisere alle dine gaver.",
   "Gift states": "Gave angiver",
   "Gift states let you define the various states for your gifts.": "Gavetilstande lader dig definere de forskellige tilstande for dine gaver.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Giv denne e-mailadresse et navn",
   "Goals": "Mål",
   "Go back": "Gå tilbage",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "Gruppetyper giver dig mulighed for at gruppere personer sammen.",
   "Had a promotion": "Havde en forfremmelse",
   "Hamster": "Hamster",
+  "Hangouts": "Hangouts",
   "Have a great day,": "Hav en god dag,",
   "he/him": "han/ham",
   "Hello!": "Hej!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "Historien om den sendte meddelelse",
   "Hobbies": "Hobbyer",
   "Home": "Hjem",
+  "Home House": "Hjemmehus",
   "Horse": "Hest",
   "How are you?": "Hvordan har du det?",
   "How could I have done this day better?": "Hvordan kunne jeg have gjort denne dag bedre?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "Oplysninger fra Wikipedia",
   "in love with": "Forelsket i",
   "Inspirational post": "Inspirerende indlæg",
+  "Instagram": "Instagram",
+  "Instant messaging": "Instant messaging",
   "Insufficient Storage": "Utilstrækkelig opbevaring",
   "Internal Server Error": "Intern serverfejl",
   "Introduction": "Introduktion",
@@ -618,6 +629,7 @@
   "Just to say hello": "Bare for at sige hej",
   "Key name": "Nøglenavn",
   "kilometers (km)": "kilometer (km)",
+  "Kind": "Slags",
   "km": "km",
   "Label:": "Etiket:",
   "Labels": "Etiketter",
@@ -706,6 +718,7 @@
   "miles": "miles",
   "miles (mi)": "miles (mi)",
   "Misdirected Request": "Forkert anmodning",
+  "Mobile": "Mobil",
   "Modules in this page": "Moduler på denne side",
   "Monday": "Mandag",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Alle rettigheder forbeholdes. 2017 — :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "Ingen etiketter endnu.",
   "No life event types yet.": "Ingen livsbegivenhedstyper endnu.",
   "Non-Authoritative Information": "Ikke-autoritative oplysninger",
+  "None": "Ingen",
   "No notes found.": "Ingen noter fundet.",
   "No results found": "Ingen resultater fundet",
   "No role": "Ingen rolle",
@@ -798,6 +812,7 @@
   "Other": "Andet",
   "Out of respect and appreciation": "Af respekt og påskønnelse",
   "Page Expired": "Siden er udløbet",
+  "Pager": "Pager",
   "Pages": "sider",
   "Pagination Navigation": "Sidenavigation",
   "Parent": "Forælder",
@@ -823,6 +838,7 @@
   "Pet category": "Kategori af kæledyr",
   "Pets": "Kæledyr",
   "Phone": "telefon",
+  "Phone number": "Telefonnummer",
   "Photo": "Foto",
   "Photos": "Fotos",
   "Played basketball": "Spillede basketball",
@@ -1006,6 +1022,7 @@
   "Slices of life": "Skiver af liv",
   "Small animal": "Lille dyr",
   "Social": "Social",
+  "Social profile": "Social profil",
   "Solve": "Løse",
   "Some dates have a special type that we will use in the software to calculate an age.": "Nogle datoer har en speciel type, som vi vil bruge i softwaren til at beregne en alder.",
   "So… it works 😼": "Så... det virker 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "Servicevilkår",
   "Test email for Monica": "Test e-mail for Monica",
   "Test email sent!": "Testmail sendt!",
+  "Text": "Tekst",
   "Thanks,": "Tak,",
   "Thanks for giving Monica a try.": "Tak fordi du gav Monica en chance.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Tak for din tilmelding! Før du går i gang, kunne du bekræfte din e-mailadresse ved at klikke på det link, vi lige har sendt til dig? Hvis du ikke har modtaget mailen, sender vi dig gerne en anden.",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "Adressetypen er blevet opdateret",
   "The call has been created": "Opkaldet er oprettet",
   "The call has been deleted": "Opkaldet er blevet slettet",
-  "The call has been edited": "Opkaldet er blevet redigeret",
+  "The call has been updated": "Opkaldet er blevet opdateret",
   "The call reason has been created": "Opkaldsårsagen er oprettet",
   "The call reason has been deleted": "Opkaldsårsagen er blevet slettet",
   "The call reason has been updated": "Opkaldsårsagen er blevet opdateret",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "Kontakten tilhører ikke nogen gruppe endnu.",
   "The contact has been added": "Kontakten er tilføjet",
   "The contact has been deleted": "Kontakten er blevet slettet",
-  "The contact has been edited": "Kontakten er blevet redigeret",
   "The contact has been removed from the group": "Kontakten er blevet fjernet fra gruppen",
+  "The contact has been updated": "Kontakten er blevet opdateret",
   "The contact information has been created": "Kontaktoplysningerne er oprettet",
   "The contact information has been deleted": "Kontaktoplysningerne er blevet slettet",
-  "The contact information has been edited": "Kontaktoplysningerne er blevet redigeret",
+  "The contact information has been updated": "Kontaktoplysningerne er blevet opdateret",
   "The contact information type has been created": "Kontaktinformationstypen er oprettet",
   "The contact information type has been deleted": "Kontaktinformationstypen er blevet slettet",
   "The contact information type has been updated": "Kontaktinformationstypen er blevet opdateret",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "De angivne data var ugyldige.",
   "The goal has been created": "Målet er skabt",
   "The goal has been deleted": "Målet er blevet slettet",
-  "The goal has been edited": "Målet er blevet redigeret",
+  "The goal has been updated": "Målet er blevet opdateret",
   "The group has been added": "Gruppen er tilføjet",
   "The group has been deleted": "Gruppen er blevet slettet",
   "The group has been updated": "Gruppen er blevet opdateret",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "Levetidsmålingen er blevet opdateret",
   "The loan has been created": "Lånet er oprettet",
   "The loan has been deleted": "Lånet er slettet",
-  "The loan has been edited": "Lånet er blevet redigeret",
   "The loan has been settled": "Lånet er afviklet",
+  "The loan has been updated": "Lånet er blevet opdateret",
   "The loan is an object": "Lånet er et objekt",
   "The loan is monetary": "Lånet er monetært",
   "The module has been added": "Modulet er tilføjet",
   "The module has been removed": "Modulet er blevet fjernet",
   "The note has been created": "Notatet er oprettet",
   "The note has been deleted": "Notatet er blevet slettet",
-  "The note has been edited": "Notatet er blevet redigeret",
+  "The note has been updated": "Noten er blevet opdateret",
   "The notification has been sent": "Meddelelsen er sendt",
   "The operation either timed out or was not allowed.": "Operationen fik enten timeout eller var ikke tilladt.",
   "The page has been added": "Siden er tilføjet",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "Kæledyrskategorien er blevet opdateret",
   "The pet has been added": "Kæledyret er tilføjet",
   "The pet has been deleted": "Kæledyret er blevet slettet",
-  "The pet has been edited": "Kæledyret er blevet redigeret",
+  "The pet has been updated": "Kæledyret er blevet opdateret",
   "The photo has been added": "Billedet er tilføjet",
   "The photo has been deleted": "Billedet er blevet slettet",
   "The position has been saved": "Positionen er blevet gemt",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "Den angivne gendannelseskode med to faktorer var ugyldig.",
   "There are no active addresses yet.": "Der er endnu ingen aktive adresser.",
   "There are no calls logged yet.": "Der er ingen opkald logget endnu.",
-  "There are no contact information yet.": "Der er endnu ingen kontaktoplysninger.",
+  "There are no contact informations yet.": "Der er endnu ingen kontaktoplysninger.",
+  "There are no contact information types yet.": "Der er endnu ingen kontaktoplysningstyper.",
   "There are no documents yet.": "Der er ingen dokumenter endnu.",
   "There are no events on that day, future or past.": "Der er ingen begivenheder på den dag, fremtid eller fortid.",
   "There are no files yet.": "Der er ingen filer endnu.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "Religionen er blevet opdateret",
   "The reminder has been created": "Påmindelsen er oprettet",
   "The reminder has been deleted": "Påmindelsen er blevet slettet",
-  "The reminder has been edited": "Påmindelsen er blevet redigeret",
+  "The reminder has been updated": "Påmindelsen er blevet opdateret",
   "The response is not a streamed response.": "Svaret er ikke et streamet svar.",
   "The response is not a view.": "Svaret er ikke et synspunkt.",
   "The role has been created": "Rollen er skabt",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "Tagget er blevet opdateret",
   "The task has been created": "Opgaven er oprettet",
   "The task has been deleted": "Opgaven er blevet slettet",
-  "The task has been edited": "Opgaven er blevet redigeret",
+  "The task has been updated": "Opgaven er blevet opdateret",
   "The team's name and owner information.": "Holdets navn og ejer oplysninger.",
   "The Telegram channel has been deleted": "Telegram-kanalen er blevet slettet",
   "The template has been created": "Skabelonen er blevet oprettet",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "Denne bruger er allerede blevet inviteret til holdet.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Denne bruger vil være en del af din konto, men vil ikke få adgang til alle boksene på denne konto, medmindre du giver specifik adgang til dem. Denne person vil også være i stand til at oprette hvælvinger.",
   "This will immediately:": "Dette vil straks:",
+  "Threads": "Tråde",
   "Three things that happened today": "Tre ting der skete i dag",
   "Thursday": "torsdag",
   "Timezone": "Tidszone",
@@ -1274,6 +1294,7 @@
   "Translate It": "Oversæt Det",
   "Transportation": "Transport",
   "Tuesday": "tirsdag",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "To-faktor bekræftelse",
   "Two Factor Authentication": "To-faktor-godkendelse",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "To-faktor-godkendelse er nu aktiveret. Scan følgende QR-kode ved hjælp af din telefons autentificeringsprogram, eller indtast opsætningsnøglen.",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 Sekundær bolig",
   "🏡 Home": "🏡 Hjem",
   "🏢 Work": "🏢 Arbejde",
+  "📟 Pager": "📟 Pager",
+  "📠 Fax": "📠 Fax",
+  "📱 Mobile": "📱 Mobil",
   "🔔 Reminder: :label for :contactName": "🔔 Påmindelse: :label for :contactName",
   "😀 Good": "😀 Godt",
   "😁 Positive": "😁 Positivt",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 Negativt",
   "😩 Awful": "😩 Forfærdeligt",
   "😶‍🌫️ Neutral": "😶‍🌫️ Neutral",
-  "🥳 Awesome": "🥳 Fantastisk"
+  "🥳 Awesome": "🥳 Fantastisk",
+  "🧑🏼 Personal": "🧑🏼 Personlig"
 }
