--- a/lang/he.json
+++ b/lang/he.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "האם אתה בטוח? פעולה זו תמחק את המסמך לצמיתות.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "האם אתה בטוח? זה ימחק את הגול ואת כל הפסים לצמיתות.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "האם אתה בטוח? פעולה זו תסיר את סוגי הכתובות מכל אנשי הקשר, אך לא תמחק את אנשי הקשר עצמם.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "האם אתה בטוח? פעולה זו תסיר את סוגי פרטי הקשר מכל אנשי הקשר, אך לא תמחק את אנשי הקשר עצמם.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "אתה בטוח? זה יסיר את סוג פרטי הקשר מכל אנשי הקשר, אך לא ימחק את אנשי הקשר עצמם.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "האם אתה בטוח? פעולה זו תסיר את המגדרים מכל אנשי הקשר, אך לא תמחק את אנשי הקשר עצמם.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "האם אתה בטוח? פעולה זו תסיר את התבנית מכל אנשי הקשר, אך לא תמחק את אנשי הקשר עצמם.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "אתה בטוח שאתה רוצה למחוק את הצוות הזה? ברגע שצוות נמחק, כל המשאבים והנתונים שלו יימחקו לצמיתות.",
@@ -234,6 +234,7 @@
   "Bird": "ציפור",
   "Birthdate": "תאריך לידה",
   "Birthday": "יום הולדת",
+  "Bluesky": "בלוזקי",
   "Body": "גוּף",
   "boss": "בּוֹס",
   "Bought": "קנה",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "הדרך הנוכחית להצגת מספרים:",
   "Customize how contacts should be displayed": "התאם אישית את אופן הצגת אנשי הקשר",
   "Custom name order": "סדר שמות מותאם אישית",
+  "Custom…": "מִנְהָג…",
   "Daily affirmation": "אישור יומי",
   "Dashboard": "לוח מחוונים",
+  "Data": "נְתוּנִים",
   "date": "תַאֲרִיך",
   "Date of the event": "תאריך האירוע",
   "Date of the event:": "תאריך האירוע:",
@@ -383,6 +386,8 @@
   "Delete": "מחק",
   "Delete :name": "מחק :name",
   "Delete Account": "מחק חשבון",
+  "Delete a contact information": "מחק פרטי קשר",
+  "Delete a contact information type": "מחק סוג פרטי קשר",
   "Delete a new key": "מחק מפתח חדש",
   "Delete API Token": "מחק אסימון API",
   "Delete contact": "תמחק קשר",
@@ -480,6 +485,7 @@
   "Family": "מִשׁפָּחָה",
   "Family summary": "סיכום משפחתי",
   "Favorites": "מועדפים",
+  "Fax": "פַקס",
   "Female": "נְקֵבָה",
   "File": "קוֹבֶץ",
   "Files": "קבצים",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "אירועי מתנות מאפשרים לך לסווג את כל המתנות שלך.",
   "Gift states": "מצבי מתנה",
   "Gift states let you define the various states for your gifts.": "מצבי מתנות מאפשרים לך להגדיר את המצבים השונים עבור המתנות שלך.",
+  "GitHub": "GitHub",
   "Give this email address a name": "תן שם לכתובת האימייל הזו",
   "Goals": "מטרות",
   "Go back": "תחזור",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "סוגי קבוצות מאפשרים לך לקבץ אנשים יחד.",
   "Had a promotion": "היה קידום",
   "Hamster": "אוֹגֵר",
+  "Hangouts": "Hangouts",
   "Have a great day,": "שיהיה לך יום טוב,",
   "he/him": "הוא/הוא",
   "Hello!": "שלום!",
@@ -548,6 +556,7 @@
   "History of the notification sent": "היסטוריה של ההודעה שנשלחה",
   "Hobbies": "תחביבים",
   "Home": "בית",
+  "Home House": "בית בית",
   "Horse": "סוּס",
   "How are you?": "מה שלומך?",
   "How could I have done this day better?": "איך יכולתי לעשות את היום הזה טוב יותר?",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "מידע מויקיפדיה",
   "in love with": "מאוהב ב",
   "Inspirational post": "פוסט מעורר השראה",
+  "Instagram": "אינסטגרם",
+  "Instant messaging": "העברת מסרים מיידית",
   "Insufficient Storage": "אין מספיק שטח אחסון",
   "Internal Server Error": "שגיאת שרת פנימית",
   "Introduction": "מבוא",
@@ -618,6 +629,7 @@
   "Just to say hello": "רק להגיד שלום",
   "Key name": "שם מפתח",
   "kilometers (km)": "קילומטרים (ק\"מ)",
+  "Kind": "סוּג",
   "km": "ק\"מ",
   "Label:": "תווית:",
   "Labels": "תוויות",
@@ -706,6 +718,7 @@
   "miles": "מיילס",
   "miles (mi)": "מיילים (מייל)",
   "Misdirected Request": "בקשה שגויה",
+  "Mobile": "נייד",
   "Modules in this page": "מודולים בעמוד זה",
   "Monday": "יוֹם שֵׁנִי",
   "Monica. All rights reserved. 2017 — :date.": "Monica. כל הזכויות שמורות. 2017 — :date.",
@@ -751,6 +764,7 @@
   "No labels yet.": "עדיין אין תוויות.",
   "No life event types yet.": "עדיין אין סוגי אירועי חיים.",
   "Non-Authoritative Information": "מידע לא סמכותי",
+  "None": "אַף לֹא אֶחָד",
   "No notes found.": "לא נמצאו הערות.",
   "No results found": "לא נמצאו תוצאות",
   "No role": "אין תפקיד",
@@ -798,6 +812,7 @@
   "Other": "אַחֵר",
   "Out of respect and appreciation": "מתוך כבוד והערכה",
   "Page Expired": "תוקף הדף פג",
+  "Pager": "ביפר",
   "Pages": "דפים",
   "Pagination Navigation": "ניווט בדפים",
   "Parent": "הוֹרֶה",
@@ -823,6 +838,7 @@
   "Pet category": "קטגוריית חיות מחמד",
   "Pets": "חיות מחמד",
   "Phone": "טלפון",
+  "Phone number": "מספר טלפון",
   "Photo": "תמונה",
   "Photos": "תמונות",
   "Played basketball": "שיחק כדורסל",
@@ -1006,6 +1022,7 @@
   "Slices of life": "פרוסות חיים",
   "Small animal": "חיה קטנה",
   "Social": "חֶברָתִי",
+  "Social profile": "פרופיל חברתי",
   "Solve": "לִפְתוֹר",
   "Some dates have a special type that we will use in the software to calculate an age.": "לחלק מהתאריכים יש סוג מיוחד בו נשתמש בתוכנה לחישוב גיל.",
   "So… it works 😼": "אז... זה עובד 😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "תנאי שימוש",
   "Test email for Monica": "דוא\"ל בדיקה עבור Monica",
   "Test email sent!": "מייל בדיקה נשלח!",
+  "Text": "טֶקסט",
   "Thanks,": "תודה,",
   "Thanks for giving Monica a try.": "תודה שניסית את Monica.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "תודה על ההרשמה! לפני שתתחיל, האם תוכל לאמת את כתובת הדוא\"ל שלך על ידי לחיצה על הקישור שזה עתה שלחנו לך בדוא\"ל? אם לא קיבלת את המייל, נשלח לך בשמחה דוא\"ל נוסף.",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "סוג הכתובת עודכן",
   "The call has been created": "השיחה נוצרה",
   "The call has been deleted": "השיחה נמחקה",
-  "The call has been edited": "השיחה עברה עריכה",
+  "The call has been updated": "השיחה עודכנה",
   "The call reason has been created": "הסיבה לשיחה נוצרה",
   "The call reason has been deleted": "סיבת השיחה נמחקה",
   "The call reason has been updated": "סיבת השיחה עודכנה",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "איש הקשר עדיין לא שייך לאף קבוצה.",
   "The contact has been added": "איש הקשר נוסף",
   "The contact has been deleted": "איש הקשר נמחק",
-  "The contact has been edited": "איש הקשר עבר עריכה",
   "The contact has been removed from the group": "איש הקשר הוסר מהקבוצה",
+  "The contact has been updated": "איש הקשר עודכן",
   "The contact information has been created": "פרטי הקשר נוצרו",
   "The contact information has been deleted": "פרטי הקשר נמחקו",
-  "The contact information has been edited": "פרטי הקשר נערכו",
+  "The contact information has been updated": "פרטי הקשר עודכנו",
   "The contact information type has been created": "סוג פרטי הקשר נוצר",
   "The contact information type has been deleted": "סוג פרטי הקשר נמחק",
   "The contact information type has been updated": "סוג פרטי הקשר עודכן",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "הנתונים שניתנו לא היו חוקיים.",
   "The goal has been created": "המטרה נוצרה",
   "The goal has been deleted": "המטרה נמחקה",
-  "The goal has been edited": "המטרה נערכה",
+  "The goal has been updated": "המטרה עודכנה",
   "The group has been added": "הקבוצה נוספה",
   "The group has been deleted": "הקבוצה נמחקה",
   "The group has been updated": "הקבוצה עודכנה",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "מדד החיים עודכן",
   "The loan has been created": "ההלוואה נוצרה",
   "The loan has been deleted": "ההלוואה נמחקה",
-  "The loan has been edited": "ההלוואה עברה עריכה",
   "The loan has been settled": "ההלוואה הוסדרה",
+  "The loan has been updated": "ההלוואה עודכנה",
   "The loan is an object": "ההלוואה היא חפץ",
   "The loan is monetary": "ההלוואה היא כספית",
   "The module has been added": "המודול נוסף",
   "The module has been removed": "המודול הוסר",
   "The note has been created": "ההערה נוצרה",
   "The note has been deleted": "ההערה נמחקה",
-  "The note has been edited": "ההערה עברה עריכה",
+  "The note has been updated": "הפתק עודכן",
   "The notification has been sent": "ההודעה נשלחה",
   "The operation either timed out or was not allowed.": "פסק הזמן של הפעולה או שלא הותר.",
   "The page has been added": "הדף נוסף",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "קטגוריית חיות המחמד עודכנה",
   "The pet has been added": "חיית המחמד נוספה",
   "The pet has been deleted": "חיית המחמד נמחקה",
-  "The pet has been edited": "חיית המחמד עברה עריכה",
+  "The pet has been updated": "חיית המחמד עודכנה",
   "The photo has been added": "התמונה נוספה",
   "The photo has been deleted": "התמונה נמחקה",
   "The position has been saved": "המיקום נשמר",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "קוד שחזור שני הגורמים שסופק היה לא חוקי.",
   "There are no active addresses yet.": "אין עדיין כתובות פעילות.",
   "There are no calls logged yet.": "עדיין לא נרשמו שיחות.",
-  "There are no contact information yet.": "אין עדיין פרטים ליצירת קשר.",
+  "There are no contact informations yet.": "אין עדיין פרטים ליצירת קשר.",
+  "There are no contact information types yet.": "אין עדיין סוגי פרטי קשר.",
   "There are no documents yet.": "אין עדיין מסמכים.",
   "There are no events on that day, future or past.": "אין אירועים באותו יום, עתיד או עבר.",
   "There are no files yet.": "אין עדיין קבצים.",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "הדת עודכנה",
   "The reminder has been created": "התזכורת נוצרה",
   "The reminder has been deleted": "התזכורת נמחקה",
-  "The reminder has been edited": "התזכורת עברה עריכה",
+  "The reminder has been updated": "התזכורת עודכנה",
   "The response is not a streamed response.": "התגובה אינה תגובה זורמת.",
   "The response is not a view.": "התגובה היא לא השקפה.",
   "The role has been created": "התפקיד נוצר",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "התג עודכן",
   "The task has been created": "המשימה נוצרה",
   "The task has been deleted": "המשימה נמחקה",
-  "The task has been edited": "המשימה עברה עריכה",
+  "The task has been updated": "המשימה עודכנה",
   "The team's name and owner information.": "שם הקבוצה ומידע הבעלים.",
   "The Telegram channel has been deleted": "ערוץ הטלגרם נמחק",
   "The template has been created": "התבנית נוצרה",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "משתמש זה כבר הוזמן לצוות.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "משתמש זה יהיה חלק מהחשבון שלך, אך לא יקבל גישה לכל הכספות בחשבון זה אלא אם תיתן גישה ספציפית אליהם. אדם זה יוכל ליצור גם כספות.",
   "This will immediately:": "זה יעשה מיד:",
+  "Threads": "חוטים",
   "Three things that happened today": "שלושה דברים שקרו היום",
   "Thursday": "יוֹם חֲמִישִׁי",
   "Timezone": "אזור זמן",
@@ -1274,6 +1294,7 @@
   "Translate It": "תרגם את זה",
   "Transportation": "הוֹבָלָה",
   "Tuesday": "יוֹם שְׁלִישִׁי",
+  "Twitter": "לְצַפְצֵף",
   "Two-factor Confirmation": "אישור דו-גורמי",
   "Two Factor Authentication": "אימות שני גורמים",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "אימות שני גורמים מופעל כעת. סרוק את קוד ה-QR הבא באמצעות אפליקציית המאמת של הטלפון שלך או הזן את מפתח ההגדרה.",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 מגורים משני",
   "🏡 Home": "🏡 הבית",
   "🏢 Work": "🏢 עבודה",
+  "📟 Pager": "📟 ביפר",
+  "📠 Fax": "📠 פקס",
+  "📱 Mobile": "📱 נייד",
   "🔔 Reminder: :label for :contactName": "🔔 תזכורת: :label עבור :contactName",
   "😀 Good": "😀 טוב",
   "😁 Positive": "😁 חיובי",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 שלילי",
   "😩 Awful": "😩 נורא",
   "😶‍🌫️ Neutral": "😶‍🌫️ ניטרלי",
-  "🥳 Awesome": "🥳 מדהים"
+  "🥳 Awesome": "🥳 מדהים",
+  "🧑🏼 Personal": "🧑🏼 אישי"
 }
