--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "你确定吗？这将永久删除该文档。",
   "Are you sure? This will delete the goal and all the streaks permanently.": "你确定吗？这将永久删除目标和所有连胜。",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "你确定吗？这将从所有联系人中删除地址类型，但不会删除联系人本身。",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "你确定吗？这将从所有联系人中删除联系人信息类型，但不会删除联系人本身。",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "你确定吗？这将从所有联系人中删除联系信息类型，但不会删除联系人。",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "你确定吗？这将从所有联系人中删除性别，但不会删除联系人本身。",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "你确定吗？这将从所有联系人中删除模板，但不会删除联系人本身。",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "您确定要删除这个团队吗？一旦一个团队被删除，它的所有资源和数据将被永久删除。",
@@ -234,6 +234,7 @@
   "Bird": "鸟",
   "Birthdate": "出生日期",
   "Birthday": "生日",
+  "Bluesky": "布鲁斯基",
   "Body": "身体",
   "boss": "老板",
   "Bought": "买",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "当前显示数字的方式：",
   "Customize how contacts should be displayed": "自定义联系人的显示方式",
   "Custom name order": "自定义名称顺序",
+  "Custom…": "风俗…",
   "Daily affirmation": "每日肯定",
   "Dashboard": "控制面板",
+  "Data": "数据",
   "date": "日期",
   "Date of the event": "活动日期",
   "Date of the event:": "活动日期：",
@@ -383,6 +386,8 @@
   "Delete": "删除",
   "Delete :name": "删除 :name 个",
   "Delete Account": "删除账户",
+  "Delete a contact information": "删除联系信息",
+  "Delete a contact information type": "删除联系信息类型",
   "Delete a new key": "删除新密钥",
   "Delete API Token": "删除 API 令牌",
   "Delete contact": "删除联系人",
@@ -480,6 +485,7 @@
   "Family": "家庭",
   "Family summary": "家庭概要",
   "Favorites": "收藏夹",
+  "Fax": "传真",
   "Female": "女性",
   "File": "文件",
   "Files": "文件",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "送礼场合可让您对所有礼物进行分类。",
   "Gift states": "礼物状态",
   "Gift states let you define the various states for your gifts.": "礼物状态允许您定义礼物的各种状态。",
+  "GitHub": "github",
   "Give this email address a name": "为该电子邮件地址命名",
   "Goals": "目标",
   "Go back": "回去",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "群组类型可让您将人们分组在一起。",
   "Had a promotion": "有促销",
   "Hamster": "仓鼠",
+  "Hangouts": "聚会群体",
   "Have a great day,": "祝你有美好的一天，",
   "he/him": "他/他",
   "Hello!": "您好！",
@@ -548,6 +556,7 @@
   "History of the notification sent": "发送通知的历史记录",
   "Hobbies": "兴趣爱好",
   "Home": "家",
+  "Home House": "房屋",
   "Horse": "马",
   "How are you?": "你好吗？",
   "How could I have done this day better?": "我怎样才能把这一天做得更好呢？",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "来自维基百科的信息",
   "in love with": "与...恋爱",
   "Inspirational post": "励志帖子",
+  "Instagram": "Instagram",
+  "Instant messaging": "即时消息",
   "Insufficient Storage": "存储空间不足",
   "Internal Server Error": "内部服务器错误",
   "Introduction": "介绍",
@@ -618,6 +629,7 @@
   "Just to say hello": "只是打个招呼",
   "Key name": "按键名称",
   "kilometers (km)": "公里（公里）",
+  "Kind": "种类",
   "km": "公里",
   "Label:": "标签：",
   "Labels": "标签",
@@ -706,6 +718,7 @@
   "miles": "英里",
   "miles (mi)": "英里 (mi)",
   "Misdirected Request": "错误的请求",
+  "Mobile": "移动的",
   "Modules in this page": "此页面中的模块",
   "Monday": "周一",
   "Monica. All rights reserved. 2017 — :date.": "Monica。版权所有。 2017 年 — :date。",
@@ -751,6 +764,7 @@
   "No labels yet.": "还没有标签。",
   "No life event types yet.": "还没有生活事件类型。",
   "Non-Authoritative Information": "非权威信息",
+  "None": "没有任何",
   "No notes found.": "没有找到注释。",
   "No results found": "未找到结果",
   "No role": "没有角色",
@@ -798,6 +812,7 @@
   "Other": "其他",
   "Out of respect and appreciation": "出于尊重和欣赏",
   "Page Expired": "页面会话已超时",
+  "Pager": "寻呼机",
   "Pages": "页数",
   "Pagination Navigation": "分页导航",
   "Parent": "家长",
@@ -823,6 +838,7 @@
   "Pet category": "宠物类",
   "Pets": "宠物",
   "Phone": "电话",
+  "Phone number": "电话号码",
   "Photo": "照片",
   "Photos": "相片",
   "Played basketball": "打过篮球",
@@ -1006,6 +1022,7 @@
   "Slices of life": "生活片段",
   "Small animal": "小动物",
   "Social": "社会的",
+  "Social profile": "社会形象",
   "Solve": "解决",
   "Some dates have a special type that we will use in the software to calculate an age.": "有些日期有特殊类型，我们将在软件中使用它来计算年龄。",
   "So… it works 😼": "所以......它有效😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "服务条款",
   "Test email for Monica": "Monica的测试电子邮件",
   "Test email sent!": "测试邮件已发送！",
+  "Text": "文本",
   "Thanks,": "谢谢，",
   "Thanks for giving Monica a try.": "感谢您给Monica一次尝试。",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "感谢您的注册！在开始之前，您可以通过单击我们刚刚通过电子邮件发送给您的链接来验证您的电子邮件地址吗？如果您没有收到电子邮件，我们很乐意向您发送另一封电子邮件。",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "地址类型已更新",
   "The call has been created": "通话已创建",
   "The call has been deleted": "通话已被删除",
-  "The call has been edited": "通话已编辑",
+  "The call has been updated": "该电话已更新",
   "The call reason has been created": "通话原因已创建",
   "The call reason has been deleted": "通话原因已删除",
   "The call reason has been updated": "通话原因已更新",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "该联系人尚不属于任何组。",
   "The contact has been added": "联系人已添加",
   "The contact has been deleted": "联系方式已被删除",
-  "The contact has been edited": "联系方式已修改",
   "The contact has been removed from the group": "该联系人已从群组中删除",
+  "The contact has been updated": "联系人已更新",
   "The contact information has been created": "联系信息已创建",
   "The contact information has been deleted": "联系方式已被删除",
-  "The contact information has been edited": "联系方式已修改",
+  "The contact information has been updated": "联系信息已更新",
   "The contact information type has been created": "联系信息类型已创建",
   "The contact information type has been deleted": "联系信息类型已被删除",
   "The contact information type has been updated": "联系信息类型已更新",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "给定的数据无效。",
   "The goal has been created": "目标已创建",
   "The goal has been deleted": "目标已被删除",
-  "The goal has been edited": "目标已编辑",
+  "The goal has been updated": "目标已更新",
   "The group has been added": "群组已添加",
   "The group has been deleted": "该群组已被删除",
   "The group has been updated": "群组已更新",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "生命指标已更新",
   "The loan has been created": "贷款已创建",
   "The loan has been deleted": "贷款已被删除",
-  "The loan has been edited": "贷款已修改",
   "The loan has been settled": "贷款已结清",
+  "The loan has been updated": "贷款已更新",
   "The loan is an object": "贷款是一个对象",
   "The loan is monetary": "贷款是货币性的",
   "The module has been added": "该模块已添加",
   "The module has been removed": "该模块已被删除",
   "The note has been created": "笔记已创建",
   "The note has been deleted": "注释已被删除",
-  "The note has been edited": "该注释已被编辑",
+  "The note has been updated": "注释已更新",
   "The notification has been sent": "通知已发送",
   "The operation either timed out or was not allowed.": "该操作超时或不允许。",
   "The page has been added": "页面已添加",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "宠物类别已更新",
   "The pet has been added": "宠物已添加",
   "The pet has been deleted": "宠物已被删除",
-  "The pet has been edited": "宠物已编辑",
+  "The pet has been updated": "宠物已更新",
   "The photo has been added": "照片已添加",
   "The photo has been deleted": "照片已被删除",
   "The position has been saved": "该位置已保存",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "双因素恢复代码无效。",
   "There are no active addresses yet.": "还没有活动地址。",
   "There are no calls logged yet.": "尚未记录任何呼叫。",
-  "There are no contact information yet.": "目前还没有联系信息。",
+  "There are no contact informations yet.": "目前还没有联系信息。",
+  "There are no contact information types yet.": "尚无联系信息类型。",
   "There are no documents yet.": "还没有文件。",
   "There are no events on that day, future or past.": "那天、未来或过去没有发生任何事件。",
   "There are no files yet.": "还没有文件。",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "宗教已更新",
   "The reminder has been created": "提醒已创建",
   "The reminder has been deleted": "提醒已被删除",
-  "The reminder has been edited": "提醒已修改",
+  "The reminder has been updated": "提醒已更新",
   "The response is not a streamed response.": "该响应不是流式响应。",
   "The response is not a view.": "响应不是视图。",
   "The role has been created": "角色已创建",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "标签已更新",
   "The task has been created": "任务已创建",
   "The task has been deleted": "任务已被删除",
-  "The task has been edited": "任务已编辑",
+  "The task has been updated": "该任务已更新",
   "The team's name and owner information.": "团队名称和拥有者信息。",
   "The Telegram channel has been deleted": "Telegram 频道已被删除",
   "The template has been created": "模板已创建",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "该用户已经被邀请加入团队。",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "该用户将成为您帐户的一部分，但无法访问该帐户中的所有保管库，除非您授予他们特定的访问权限。此人也将能够创建保管库。",
   "This will immediately:": "这将立即：",
+  "Threads": "线程",
   "Three things that happened today": "今天发生的三件事",
   "Thursday": "周四",
   "Timezone": "时区",
@@ -1274,6 +1294,7 @@
   "Translate It": "翻译它",
   "Transportation": "运输",
   "Tuesday": "周二",
+  "Twitter": "叽叽喳喳",
   "Two-factor Confirmation": "两因素确认",
   "Two Factor Authentication": "双因素认证",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "双因素认证已启用。使用手机的认证应用程序扫描以下二维码，或者输入设置密钥。",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 第二居所",
   "🏡 Home": "🏡 主页",
   "🏢 Work": "🏢 工作",
+  "📟 Pager": "Pager",
+  "📠 Fax": "📠传真",
+  "📱 Mobile": "📱手机",
   "🔔 Reminder: :label for :contactName": "🔔 提醒：:label 为 :contactName",
   "😀 Good": "😀 好",
   "😁 Positive": "😁 积极",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 负面",
   "😩 Awful": "😩 太糟糕了",
   "😶‍🌫️ Neutral": "😶‍🌫️中性",
-  "🥳 Awesome": "🥳 太棒了"
+  "🥳 Awesome": "🥳 太棒了",
+  "🧑🏼 Personal": "🧑🏼个人"
 }
