--- a/lang/zh_TW.json
+++ b/lang/zh_TW.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "你確定嗎？這將永久刪除該文件。",
   "Are you sure? This will delete the goal and all the streaks permanently.": "你確定嗎？這將永久刪除目標和所有連勝。",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "你確定嗎？這將從所有聯絡人中刪除地址類型，但不會刪除聯絡人本身。",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "你確定嗎？這將從所有聯絡人中刪除聯絡人資訊類型，但不會刪除聯絡人本身。",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "你確定嗎？這將從所有聯繫人中刪除聯繫信息類型，但不會刪除聯繫人。",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "你確定嗎？這將從所有聯絡人中刪除性別，但不會刪除聯絡人本身。",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "你確定嗎？這將從所有聯絡人中刪除模板，但不會刪除聯絡人本身。",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "您確定要刪除這個團隊嗎？一旦一個團隊被刪除，它的所有資源和資料將被永久刪除。",
@@ -234,6 +234,7 @@
   "Bird": "鳥",
   "Birthdate": "出生日期",
   "Birthday": "生日",
+  "Bluesky": "布魯斯基",
   "Body": "身體",
   "boss": "老闆",
   "Bought": "買",
@@ -367,8 +368,10 @@
   "Current way of displaying numbers:": "目前顯示數字的方式：",
   "Customize how contacts should be displayed": "自訂聯絡人的顯示方式",
   "Custom name order": "自訂名稱順序",
+  "Custom…": "風俗…",
   "Daily affirmation": "每日肯定",
   "Dashboard": "控制面板",
+  "Data": "數據",
   "date": "日期",
   "Date of the event": "活動日期",
   "Date of the event:": "活動日期：",
@@ -383,6 +386,8 @@
   "Delete": "刪除",
   "Delete :name": "刪除 :name 個",
   "Delete Account": "刪除帳號",
+  "Delete a contact information": "刪除聯繫信息",
+  "Delete a contact information type": "刪除聯繫信息類型",
   "Delete a new key": "刪除新密鑰",
   "Delete API Token": "刪除 API 權杖 (token)",
   "Delete contact": "刪除聯絡人",
@@ -480,6 +485,7 @@
   "Family": "家庭",
   "Family summary": "家庭概要",
   "Favorites": "收藏夾",
+  "Fax": "傳真",
   "Female": "女性",
   "File": "檔案",
   "Files": "檔案",
@@ -514,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "送禮場合可讓您將所有禮物分類。",
   "Gift states": "禮物狀態",
   "Gift states let you define the various states for your gifts.": "禮物狀態可讓您定義禮物的各種狀態。",
+  "GitHub": "github",
   "Give this email address a name": "為該電子郵件地址命名",
   "Goals": "目標",
   "Go back": "回去",
@@ -537,6 +544,7 @@
   "Group types let you group people together.": "群組類型可讓您將人們分組在一起。",
   "Had a promotion": "有促銷",
   "Hamster": "倉鼠",
+  "Hangouts": "聚會群體",
   "Have a great day,": "祝你有美好的一天，",
   "he/him": "他/他",
   "Hello!": "您好！",
@@ -548,6 +556,7 @@
   "History of the notification sent": "發送通知的歷史記錄",
   "Hobbies": "興趣嗜好",
   "Home": "首頁",
+  "Home House": "房屋",
   "Horse": "馬",
   "How are you?": "你好嗎？",
   "How could I have done this day better?": "我怎麼才能把這一天做得更好呢？",
@@ -593,6 +602,8 @@
   "Information from Wikipedia": "來自維基百科的訊息",
   "in love with": "與...戀愛",
   "Inspirational post": "勵志貼文",
+  "Instagram": "Instagram",
+  "Instant messaging": "即時消息",
   "Insufficient Storage": "存儲空間不足",
   "Internal Server Error": "內部服務器錯誤",
   "Introduction": "介紹",
@@ -618,6 +629,7 @@
   "Just to say hello": "只是打個招呼",
   "Key name": "按鍵名稱",
   "kilometers (km)": "公里（公里）",
+  "Kind": "種類",
   "km": "公里",
   "Label:": "標籤：",
   "Labels": "標籤",
@@ -706,6 +718,7 @@
   "miles": "英哩",
   "miles (mi)": "英哩 (mi)",
   "Misdirected Request": "錯誤的請求",
+  "Mobile": "移動的",
   "Modules in this page": "此頁面中的模組",
   "Monday": "週一",
   "Monica. All rights reserved. 2017 — :date.": "Monica。版權所有。 2017 年 — :date。",
@@ -751,6 +764,7 @@
   "No labels yet.": "還沒有標籤。",
   "No life event types yet.": "還沒有生活事件類型。",
   "Non-Authoritative Information": "非權威信息",
+  "None": "沒有任何",
   "No notes found.": "沒有找到註釋。",
   "No results found": "未找到結果",
   "No role": "沒有角色",
@@ -798,6 +812,7 @@
   "Other": "其他",
   "Out of respect and appreciation": "出於尊重與欣賞",
   "Page Expired": "頁面已過期",
+  "Pager": "呼叫器",
   "Pages": "頁數",
   "Pagination Navigation": "分頁導覽",
   "Parent": "家長",
@@ -823,6 +838,7 @@
   "Pet category": "寵物類",
   "Pets": "寵物",
   "Phone": "電話",
+  "Phone number": "電話號碼",
   "Photo": "照片",
   "Photos": "相片",
   "Played basketball": "打過籃球",
@@ -1006,6 +1022,7 @@
   "Slices of life": "生活片段",
   "Small animal": "小動物",
   "Social": "社會的",
+  "Social profile": "社會形象",
   "Solve": "解決",
   "Some dates have a special type that we will use in the software to calculate an age.": "有些日期有特殊類型，我們將在軟體中使用它來計算年齡。",
   "So… it works 😼": "所以......它有效😼",
@@ -1047,6 +1064,7 @@
   "Terms of Service": "服務條款",
   "Test email for Monica": "Monica的測驗電子郵件",
   "Test email sent!": "測試郵件已發送！",
+  "Text": "文字",
   "Thanks,": "謝謝，",
   "Thanks for giving Monica a try.": "感謝您給Monica一次嘗試。",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "感謝您的註冊！在開始之前，您可以透過點擊我們剛剛透過電子郵件發送給您的連結來驗證您的電子郵件地址嗎？如果您沒有收到電子郵件，我們很樂意向您發送另一封電子郵件。",
@@ -1065,7 +1083,7 @@
   "The address type has been updated": "地址類型已更新",
   "The call has been created": "通話已建立",
   "The call has been deleted": "通話已刪除",
-  "The call has been edited": "通話已編輯",
+  "The call has been updated": "該電話已更新",
   "The call reason has been created": "通話原因已建立",
   "The call reason has been deleted": "通話原因已刪除",
   "The call reason has been updated": "通話原因已更新",
@@ -1077,11 +1095,11 @@
   "The contact does not belong to any group yet.": "該聯絡人尚不屬於任何群組。",
   "The contact has been added": "聯絡人已新增",
   "The contact has been deleted": "聯絡方式已被刪除",
-  "The contact has been edited": "聯絡方式已修改",
   "The contact has been removed from the group": "該聯絡人已從群組中刪除",
+  "The contact has been updated": "聯繫人已更新",
   "The contact information has been created": "聯絡資訊已建立",
   "The contact information has been deleted": "聯絡方式已被刪除",
-  "The contact information has been edited": "聯絡方式已修改",
+  "The contact information has been updated": "聯繫信息已更新",
   "The contact information type has been created": "聯絡資訊類型已建立",
   "The contact information type has been deleted": "聯絡資訊類型已被刪除",
   "The contact information type has been updated": "聯絡資訊類型已更新",
@@ -1108,7 +1126,7 @@
   "The given data was invalid.": "給定的數據無效。",
   "The goal has been created": "目標已創建",
   "The goal has been deleted": "目標已刪除",
-  "The goal has been edited": "目標已編輯",
+  "The goal has been updated": "目標已更新",
   "The group has been added": "群組已新增",
   "The group has been deleted": "該群組已被刪除",
   "The group has been updated": "群組已更新",
@@ -1128,15 +1146,15 @@
   "The life metric has been updated": "生命指標已更新",
   "The loan has been created": "貸款已創建",
   "The loan has been deleted": "貸款已被刪除",
-  "The loan has been edited": "貸款已修改",
   "The loan has been settled": "貸款已結清",
+  "The loan has been updated": "貸款已更新",
   "The loan is an object": "貸款是一個對象",
   "The loan is monetary": "貸款是貨幣性的",
   "The module has been added": "該模組已新增",
   "The module has been removed": "該模組已被刪除",
   "The note has been created": "筆記已創建",
   "The note has been deleted": "註釋已刪除",
-  "The note has been edited": "該註釋已被編輯",
+  "The note has been updated": "註釋已更新",
   "The notification has been sent": "通知已發送",
   "The operation either timed out or was not allowed.": "該操作逾時或不允許。",
   "The page has been added": "頁面已新增",
@@ -1149,7 +1167,7 @@
   "The pet category has been updated": "寵物類別已更新",
   "The pet has been added": "寵物已新增",
   "The pet has been deleted": "寵物已刪除",
-  "The pet has been edited": "寵物已編輯",
+  "The pet has been updated": "寵物已更新",
   "The photo has been added": "照片已添加",
   "The photo has been deleted": "照片已刪除",
   "The position has been saved": "該位置已儲存",
@@ -1165,7 +1183,8 @@
   "The provided two factor recovery code was invalid.": "雙重證證復原碼無效。",
   "There are no active addresses yet.": "還沒有活動地址。",
   "There are no calls logged yet.": "尚未記錄任何呼叫。",
-  "There are no contact information yet.": "目前還沒有聯絡資訊。",
+  "There are no contact informations yet.": "目前還沒有聯絡資訊。",
+  "There are no contact information types yet.": "尚無聯繫信息類型。",
   "There are no documents yet.": "還沒有文件。",
   "There are no events on that day, future or past.": "那天、未來或過去沒有發生任何事件。",
   "There are no files yet.": "還沒有文件。",
@@ -1194,7 +1213,7 @@
   "The religion has been updated": "宗教已更新",
   "The reminder has been created": "提醒已建立",
   "The reminder has been deleted": "提醒已刪除",
-  "The reminder has been edited": "提醒已修改",
+  "The reminder has been updated": "提醒已更新",
   "The response is not a streamed response.": "該響應不是流式響應。",
   "The response is not a view.": "響應不是視圖。",
   "The role has been created": "角色已創建",
@@ -1210,7 +1229,7 @@
   "The tag has been updated": "標籤已更新",
   "The task has been created": "任務已創建",
   "The task has been deleted": "任務已被刪除",
-  "The task has been edited": "任務已編輯",
+  "The task has been updated": "該任務已更新",
   "The team's name and owner information.": "團隊名稱和擁有者資訊。",
   "The Telegram channel has been deleted": "Telegram 頻道已刪除",
   "The template has been created": "模板已建立",
@@ -1250,6 +1269,7 @@
   "This user has already been invited to the team.": "使用者已經被邀請加入團隊。",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "該使用者將成為您帳戶的一部分，但無法存取該帳戶中的所有保管庫，除非您授予他們特定的存取權限。此人也將能夠建立保管庫。",
   "This will immediately:": "這將立即：",
+  "Threads": "線程",
   "Three things that happened today": "今天發生的三件事",
   "Thursday": "週四",
   "Timezone": "時區",
@@ -1274,6 +1294,7 @@
   "Translate It": "翻譯它",
   "Transportation": "運輸",
   "Tuesday": "週二",
+  "Twitter": "嘰嘰喳喳",
   "Two-factor Confirmation": "兩因素確認",
   "Two Factor Authentication": "雙重認證",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "雙重認證已啟用。 使用手機的認證器應用程式掃描以下的 QR code，或輸入設定金鑰。",
@@ -1456,6 +1477,9 @@
   "🏠 Secondary residence": "🏠 第二居所",
   "🏡 Home": "🏡 首頁",
   "🏢 Work": "🏢 工作",
+  "📟 Pager": "Pager",
+  "📠 Fax": "📠傳真",
+  "📱 Mobile": "📱手機",
   "🔔 Reminder: :label for :contactName": "🔔 提醒：:label 為 :contactName",
   "😀 Good": "😀 好",
   "😁 Positive": "😁 積極",
@@ -1464,5 +1488,6 @@
   "😡 Negative": "😡 負面",
   "😩 Awful": "😩 太糟糕了",
   "😶‍🌫️ Neutral": "😶‍🌫️中性",
-  "🥳 Awesome": "🥳 太棒了"
+  "🥳 Awesome": "🥳 太棒了",
+  "🧑🏼 Personal": "🧑🏼個人"
 }
